Updated translations for Common Content
git-svn-id: file:///srv/svn/publican/trunk@921 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/datadir/Common_Content/common/es-ES/Conventions.po
+++ b/publican/datadir/Common_Content/common/es-ES/Conventions.po
@@ -1,14 +1,14 @@
 # translation of Conventions.po to Spanish
-# Manuel Ospina <mospina@redhat.com>, 2007.
+# Manuel Ospina <mospina@redhat.com>, 2007, 2009.
 # Gladys Guerrero Lozano <gguerrer@redhat.com>, 2008.
 msgid ""
 msgstr ""
 "Project-Id-Version: Conventions\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
 "POT-Creation-Date: 2009-12-01T23:44:40\n"
-"PO-Revision-Date: 2009-03-23 22:11-0300\n"
-"Last-Translator: Domingo Becker <domingobecker@gmail.com>\n"
-"Language-Team: Fedora Spanish <fedora-trans-es@redhat.com>\n"
+"PO-Revision-Date: 2009-12-02 16:08+1000\n"
+"Last-Translator: Manuel Ospina <mospina@redhat.com>\n"
+"Language-Team: Spanish <en@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -63,19 +63,19 @@ msgstr ""
 "que se aplican son las siguientes:"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "<literal>Mono-spaced Bold</literal>"
-msgstr "Negrita monoespaciado"
+msgstr "<literal>Negrita monoespaciado</literal>"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Used to highlight system input, including shell commands, file names and "
 "paths. Also used to highlight keycaps and key combinations. For example:"
 msgstr ""
 "Utilizada para resaltar la entrada del sistema, incluyendo comandos de "
 "shell, nombres de archivo y rutas. También se utiliza para resaltar teclas "
-"claves y combinaciones de teclas."
+"claves y combinaciones de teclas. Por ejemplo:"
 
 #. Tag: para
 #, no-c-format
@@ -91,16 +91,16 @@ msgstr ""
 "comandos de shell y pulse <keycap>Enter</keycap> para ejecutar el comando."
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "The above includes a file name, a shell command and a keycap, all presented "
 "in mono-spaced bold and all distinguishable thanks to context."
 msgstr ""
-"Lo anterior incluye un nombre de archivo, un comando de shell y una tecla "
-"clave, todo en negrita-monoespaciado y distinguible gracias al contexto."
+"El ejemplo anterior incluye un nombre de archivo, un comando de shell y una tecla "
+"clave. Todo se presenta en negrita-monoespaciado y distinguible gracias al contexto."
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Key combinations can be distinguished from keycaps by the hyphen connecting "
 "each part of a key combination. For example:"
@@ -128,27 +128,25 @@ msgstr ""
 "keycombo> para volver a su sesión de Ventanas-X."
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "The first paragraph highlights the particular keycap to press. The second "
 "highlights two key combinations (each a set of three keycaps with each set "
 "pressed simultaneously)."
 msgstr ""
 "La primera oración resalta la tecla clave determinada que se debe pulsar. La "
-"segunda resalta dos conjuntos de tres teclas claves, cada conjunto "
-"presionado simultáneamente."
+"segunda resalta dos conjuntos de tres teclas claves que deben ser presionadas simultáneamente."
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "If source code is discussed, class names, methods, functions, variable names "
 "and returned values mentioned within a paragraph will be presented as above, "
 "in <literal>mono-spaced bold</literal>. For example:"
 msgstr ""
-"Si el código fuente es discutido, nombres de clase, métodos, funciones, "
-"nombres de variables, y valores de retorno mencionados dentro de un párrafo "
-"serán presentados como lo anterior, en <literal>Negrita-monoespaciado</"
-"literal>. Por ejemplo:"
+"Si se discute el código fuente, los nombres de las clase, los métodos, las funciones, "
+"los nombres de variables y valores de retorno mencionados dentro de un párrafo "
+"serán presentados en <literal>Negrita-monoespaciado</literal>. Por ejemplo:"
 
 #. Tag: para
 #, no-c-format
@@ -166,22 +164,22 @@ msgstr ""
 #. Tag: para
 #, no-c-format
 msgid "<application>Proportional Bold</application>"
-msgstr ""
+msgstr "<application>Negrita proporcional</application>"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "This denotes words or phrases encountered on a system, including application "
 "names; dialog box text; labeled buttons; check-box and radio button labels; "
 "menu titles and sub-menu titles. For example:"
 msgstr ""
 "Esta denota palabras o frases encontradas en un sistema, incluyendo nombres "
-"de aplicación; texto de cuadro de diálogo, botones etiquetados, etiquetas de "
+"de aplicación, texto de cuadro de diálogo, botones etiquetados, etiquetas de "
 "cajilla de verificación y botón de radio; títulos de menú y títulos del sub-"
 "menú. Por ejemplo:"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Choose <menuchoice><guimenu>System</guimenu><guisubmenu>Preferences</"
 "guisubmenu><guimenuitem>Mouse</guimenuitem></menuchoice> from the main menu "
@@ -191,15 +189,14 @@ msgid ""
 "primary mouse button from the left to the right (making the mouse suitable "
 "for use in the left hand)."
 msgstr ""
-"Seleccionar <guimenu>Sistema > Preferencias > Ratón</guimenu> desde la barra "
-"del menú principal para lanzar <application>Preferencias de Ratón</"
+"Seleccionar <menuchoice><guimenu>Sistema</guimenu><guisubmenu>Preferencias</guisubmenu><guimenuitem>Ratón</guimenuitem></menuchoice> desde la barra del menú principal para lanzar <application>Preferencias de Ratón</"
 "application>. En la pestaña de <guilabel>Botones</guilabel>, haga clic en la "
 "cajilla <guilabel>ratón de mano izquierda</guilabel> y luego haga clic en "
 "<guibutton>Cerrar</guibutton> para cambiar el botón principal del ratón de "
 "la izquierda a la derecha (adecuando el ratón para la mano izquierda)."
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "To insert a special character into a <application>gedit</application> file, "
 "choose <menuchoice><guimenu>Applications</guimenu><guisubmenu>Accessories</"
@@ -215,30 +212,29 @@ msgid ""
 "document and choose <menuchoice><guimenu>Edit</guimenu><guimenuitem>Paste</"
 "guimenuitem></menuchoice> from the <application>gedit</application> menu bar."
 msgstr ""
-"Para insertar un caracter especial en un archivo <application>gedit</"
+"Para insertar un caracter especial en un archivo de <application>gedit</"
 "application>, seleccione desde la barra del menú principal "
-"<guimenu>Aplicaciones > Accesorios > Mapa de caracteres</guimenu>. Luego, "
-"desde la barra del menú elija <guimenu>Búsqueda > Hallar&hellip;</guimenu> "
-"<application>mapa de caracteres</application>, teclee el nombre del caracter "
-"en el campo de <guilabel>Búsqueda</guilabel> y haga clic en "
+"<menuchoice><guimenu>Aplicaciones</guimenu><guisubmenu>Accesorios</guisubmenu><guimenuitem>Mapa de caracteres</guimenuitem></menuchoice>. Luego, "
+"desde la barra del menú <application>mapa de caracteres</application> elija <menuchoice><guimenu>Búsqueda</guimenu><guimenuitem>Hallar&hellip;</guimenuitem></menuchoice>, teclee el nombre del caracter "
+"en el campo <guilabel>Búsqueda</guilabel> y haga clic en "
 "<guibutton>Siguiente</guibutton>. El caracter buscado se resaltará en la "
 "<guilabel>Tabla de caracteres</guilabel>. Haga doble clic en este caracter "
 "resaltado para colocarlo en el campo de <guilabel>Texto para copiar</"
 "guilabel> y luego haga clic en el botón de <guibutton>Copiar</guibutton>. "
-"Ahora regrese a su documento y elija <guimenu>Editar > Pegar</guimenu> desde "
+"Ahora regrese a su documento y elija <menuchoice><guimenu>Editar</guimenu><guimenuitem>Pegar</guimenuitem></menuchoice> desde "
 "la barra de menú de <application>gedit</application>."
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "The above text includes application names; system-wide menu names and items; "
 "application-specific menu names; and buttons and text found within a GUI "
 "interface, all presented in proportional bold and all distinguishable by "
 "context."
 msgstr ""
-"El texto anterior incluye nombres de aplicación; nombres de menú de todo el "
-"sistema y elementos; nombres de menú de aplicaciones específicas y botones y "
-"texto hallados dentro de una interfaz GUI, todos presentados en negrita "
+"El texto anterior incluye nombres de aplicación; nombres y elementos del menú de todo el "
+"sistema; nombres de menú de aplicaciones específicas y botones y "
+"texto hallados dentro de una interfaz gráfica de usuario, todos presentados en negrita "
 "proporcional y distinguibles por contexto."
 
 #. Tag: para
@@ -253,14 +249,14 @@ msgstr ""
 "application>"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Whether mono-spaced bold or proportional bold, the addition of italics "
 "indicates replaceable or variable text. Italics denotes text you do not "
 "input literally or displayed text that changes depending on circumstance. "
 "For example:"
 msgstr ""
-"Negrita monoespaciado o Negrita proporcional, la adición de itálicas indica "
+"Ya sea negrita monoespaciado o negrita proporcional, la adición de itálicas indica "
 "texto reemplazable o variable. Las itálicas denotan texto que usted no "
 "escribe literalmente o texto mostrado que cambia dependiendo de la "
 "circunstancia. Por ejemplo:"
@@ -330,7 +326,7 @@ msgstr ""
 #. Tag: para
 #, no-c-format
 msgid "Publican is a <firstterm>DocBook</firstterm> publishing system."
-msgstr ""
+msgstr "Publican es un sistema de publicación de <firstterm>DocBook</firstterm>."
 
 #. Tag: title
 #, no-c-format
@@ -338,31 +334,26 @@ msgid "Pull-quote Conventions"
 msgstr "Convenciones del documento"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Terminal output and source code listings are set off visually from the "
 "surrounding text."
-msgstr ""
-"Dos, usualmente de varias líneas, los tipos de datos se distinguen "
-"visualmente del texto circundante."
+msgstr "Los mensajes de salida de la terminal o fragmentos de código fuente se distinguen visualmente del texto circundante."
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Output sent to a terminal is set in <computeroutput>mono-spaced roman</"
 "computeroutput> and presented thus:"
-msgstr ""
-"Salida enviada a una terminal está establecida en tipo "
-"<computeroutput>romano monoespaciado</computeroutput> y presentada así:"
+msgstr "Los mensajes de salida enviados a una terminal se muestran en <computeroutput>romano monoespaciado</computeroutput> y se presentan así:"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Source-code listings are also set in <computeroutput>mono-spaced roman</"
 "computeroutput> but add syntax highlighting as follows:"
 msgstr ""
-"Los listados de código fuente también se establecen en "
-"<computeroutput>romano monoespaciado</computeroutput>, pero se presentan y "
+"Los listados de código fuente también se muestran en <computeroutput>romano monoespaciado</computeroutput>, pero se presentan y "
 "resaltan de la siguiente manera:"
 
 #. Tag: title
@@ -385,14 +376,13 @@ msgid "Note"
 msgstr "Nota"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Notes are tips, shortcuts or alternative approaches to the task at hand. "
 "Ignoring a note should have no negative consequences, but you might miss out "
 "on a trick that makes your life easier."
 msgstr ""
-"Una nota es una sugerencia, atajo o enfoque alternativo que se tiene a mano "
-"para la tarea. Ignorar una nota no debería tener consecuencias negativas, "
+"Una nota es una sugerencia, atajo o enfoque alternativo para una tarea determinada. Ignorar una nota no debería tener consecuencias negativas, "
 "pero podría perderse de algunos trucos que pueden facilitarle las cosas."
 
 #. Tag: title
@@ -401,17 +391,17 @@ msgid "Important"
 msgstr "Importante"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Important boxes detail things that are easily missed: configuration changes "
 "that only apply to the current session, or services that need restarting "
 "before an update will apply. Ignoring a box labeled 'Important' won't cause "
 "data loss but may cause irritation and frustration."
 msgstr ""
-"Los cuadros de importante dan detalles de cosas que se pueden pasar por alto "
+"Los cuadros con el título de importante dan detalles de cosas que se pueden pasar por alto "
 "fácilmente: cambios de configuración únicamente aplicables a la sesión "
 "actual, o servicios que necesitan reiniciarse antes de que se aplique una "
-"actualización. Ignorar estos cuadros de importante no ocasionará pérdida de "
+"actualización. Ignorar estos cuadros no ocasionará pérdida de "
 "datos, pero puede causar enfado y frustración."
 
 #. Tag: title
@@ -420,7 +410,7 @@ msgid "Warning"
 msgstr "Advertencia"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Warnings should not be ignored. Ignoring warnings will most likely cause "
 "data loss."
@@ -428,91 +418,3 @@ msgstr ""
 "Las advertencias no deben ignorarse. Ignorarlas muy probablemente ocasionará "
 "pérdida de datos."
 
-#, fuzzy
-#~ msgid ""
-#~ "Note the <guimenu>&#62;</guimenu> shorthand used to indicate traversal "
-#~ "through a menu and its sub-menus. This avoids difficult-to-follow "
-#~ "phrasing such as &#39;Select <guimenuitem>Mouse</guimenuitem> from the "
-#~ "<guimenu>Preferences</guimenu> sub-menu in the <guimenu>System</guimenu> "
-#~ "menu of the main menu bar&#39;."
-#~ msgstr ""
-#~ "Observe la <guimenu>></guimenu> abreviatura utilizada para indicar "
-#~ "recorrido a través de un menú y sus sub-menúes. Esto es para evitar la "
-#~ "dificultad de seguir el método 'Seleccionar <guimenuitem>Ratón</"
-#~ "guimenuitem> desde el sub-menú <guimenu>Preferencias</guimenu> en el menú "
-#~ "de <guimenu>Sistema</guimenu> de la barra de menú principal'."
-
-#~ msgid ""
-#~ "When the Apache HTTP Server accepts requests, it dispatches child "
-#~ "processes or threads to handle them. This group of child processes or "
-#~ "threads is known as a <firstterm>server-pool</firstterm>. Under Apache "
-#~ "HTTP Server 2.0, the responsibility for creating and maintaining these "
-#~ "server-pools has been abstracted to a group of modules called "
-#~ "<firstterm>Multi-Processing Modules</firstterm> (<firstterm>MPMs</"
-#~ "firstterm>). Unlike other modules, only one module from the MPM group can "
-#~ "be loaded by the Apache HTTP Server."
-#~ msgstr ""
-#~ "cuando el servidor Apache HTTP acepta solicitudes, envía procesos hijos o "
-#~ "hilos para manejarlos. Este grupo de procesos hijos o hilos se conoce "
-#~ "como un <firstterm>server-pool</firstterm>. Bajo el servidor HTTP de "
-#~ "Apache 2.0, la responsabilidad para crear o mantener estos server-pool se "
-#~ "resume en un grupo de módulos llamado <firstterm>Módulos de multi-"
-#~ "procesamiento</firstterm> (<firstterm>MPMs</firstterm>). A diferencia de "
-#~ "otros módulos, sólo un módulo del grupo MPM puede ser cargado por el "
-#~ "servidor HTTP de Apache."
-
-#~ msgid "Proportional Bold"
-#~ msgstr "Negrita proporcional"
-
-#~ msgid ""
-#~ "books        Desktop   documentation  drafts  mss    photos   stuff  svn\n"
-#~ "books_tests  Desktop1  downloads      images  notes  scripts  svgs"
-#~ msgstr ""
-#~ "libros        Escritorio   documentación  borradores  mss    fotos   "
-#~ "cosas  svn\n"
-#~ "libros_pruebas  Escritorio1  descargas      imágenes  notas  scripts  svgs"
-
-#~ msgid ""
-#~ "package org.jboss.book.jca.ex1;\n"
-#~ "\n"
-#~ "import javax.naming.InitialContext;\n"
-#~ "\n"
-#~ "public class ExClient\n"
-#~ "{\n"
-#~ "   public static void main(String args[]) \n"
-#~ "       throws Exception\n"
-#~ "   {\n"
-#~ "      InitialContext iniCtx = new InitialContext();\n"
-#~ "      Object         ref    = iniCtx.lookup(\"EchoBean\");\n"
-#~ "      EchoHome       home   = (EchoHome) ref;\n"
-#~ "      Echo           echo   = home.create();\n"
-#~ "\n"
-#~ "      System.out.println(\"Created Echo\");\n"
-#~ "\n"
-#~ "      System.out.println(\"Echo.echo('Hello') = \" + echo.echo(\"Hello"
-#~ "\"));\n"
-#~ "   }\n"
-#~ "   \n"
-#~ "}"
-#~ msgstr ""
-#~ "package org.jboss.book.jca.ex1;\n"
-#~ "\n"
-#~ "import javax.naming.InitialContext;\n"
-#~ "\n"
-#~ "public class ExClient\n"
-#~ "{\n"
-#~ "   public static void main(String args[]) \n"
-#~ "       throws Exception\n"
-#~ "   {\n"
-#~ "      InitialContext iniCtx = new InitialContext();\n"
-#~ "      Object         ref    = iniCtx.lookup(\"EchoBean\");\n"
-#~ "      EchoHome       home   = (EchoHome) ref;\n"
-#~ "      Echo           echo   = home.create();\n"
-#~ "\n"
-#~ "      System.out.println(\"Created Echo\");\n"
-#~ "\n"
-#~ "      System.out.println(\"Echo.echo('Hello') = \" + echo.echo(\"Hello"
-#~ "\"));\n"
-#~ "   }\n"
-#~ "   \n"
-#~ "}"
