--- a/publican/datadir/Common_Content/common/hi-IN/Conventions.po
+++ b/publican/datadir/Common_Content/common/hi-IN/Conventions.po
@@ -1,18 +1,20 @@
 # translation of Conventions.po to Hindi
 # Rajesh Ranjan <rranjan@redhat.com>, 2007, 2008.
+# Rajesh Ranjan <rajesh672@gmail.com>, 2009.
 msgid ""
 msgstr ""
 "Project-Id-Version: Conventions\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
 "POT-Creation-Date: 2009-12-01T23:44:40\n"
-"PO-Revision-Date: 2008-10-08 16:01+0530\n"
-"Last-Translator: Rajesh Ranjan <rranjan@redhat.com>\n"
+"PO-Revision-Date: 2009-12-02 15:43+0530\n"
+"Last-Translator: Rajesh Ranjan <rajesh672@gmail.com>\n"
 "Language-Team: Hindi <hindi.sf.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: KBabel 1.11.4\n"
-"Plural-Forms: nplurals=2; plural=(n!=1);\n"
+"Plural-Forms: nplurals=2; plural=(n!=1);\n\n"
+"\n"
 "\n"
 "\n"
 "\n"
@@ -44,7 +46,7 @@ msgid ""
 msgstr ""
 "PDF और कागजी संस्करण में, यह मैनुअल टाइपफेस का प्रयोग करता है जो कि <ulink url="
 "\"https://fedorahosted.org/liberation-fonts/\">Liberation Fonts</ulink> सेट से "
-"खींचा गया है. लिबरेशन फ़ॉन्ट को HTML संस्करण में भी प्रयोग किया जाता है यदि सेट आपके "
+"लिया गया है. लिबरेशन फ़ॉन्ट को HTML संस्करण में भी प्रयोग किया जाता है यदि सेट आपके "
 "सिस्टम पर संस्थापित है. यदि नहीं, वैकल्पिक लेकिन समान टाइपफेस प्रदर्शित किया जाता है. "
 "नोट: Red Hat Enterprise Linux 5 और बाद के संस्करण तयशुदा रूप से लिबरेशन फ़ॉन्ट शामिल "
 "करते हैं."
@@ -62,21 +64,21 @@ msgid ""
 "follows."
 msgstr ""
 "चार टाइपोग्राफी परिपाटियों को विशेष शब्द या वाक्यांश का ध्यान खींचने के लिए प्रयोग किया "
-"जाता है. ये परिपाटी, और परिस्थितियां जिसमें लागू किया जाता है, इस प्रकार हैं."
+"जाता है. ये परिपाटी, और परिस्थितियाँ जिसमें लागू किया जाता है, इस प्रकार हैं."
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "<literal>Mono-spaced Bold</literal>"
-msgstr "मोनो स्पेस्ड बोल्ड"
+msgstr "<literal>मोनो स्पेस्ड बोल्ड</literal>"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Used to highlight system input, including shell commands, file names and "
 "paths. Also used to highlight keycaps and key combinations. For example:"
 msgstr ""
-"शेल कमांड, फाइल नाम पथ सहित सिस्टम इनपुट आलोकित करने के लिए प्रयोग किया जाता है. कुंजी "
-"कैप्स और कुंजी युग्म को आलोकित करने के लिए प्रयुक्त. उदाहरण के लिए:"
+"शेल कमांड, फाइल नाम पथ सहित तंत्र इनपुट आलोकित करने के लिए प्रयोग किया जाता है. कुंजी "
+"कैप्स और कुंजी युग्म को आलोकित करने के लिए भी प्रयुक्त. उदाहरण के लिए:"
 
 #. Tag: para
 #, no-c-format
@@ -92,16 +94,16 @@ msgstr ""
 "लिए दबाएँ."
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "The above includes a file name, a shell command and a keycap, all presented "
 "in mono-spaced bold and all distinguishable thanks to context."
 msgstr ""
 "ऊपर में फाइल नाम, शेल कमांड और एक कुंजी कैप शामिल है, जिसमें सभी मोनो स्पेस्ड बोल्ड में "
-"प्रस्तुत हैं और सभी विशेष धन्यवाद संदर्भ को जाता है."
+"प्रस्तुत हैं संदर्भ को धन्यवाद."
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Key combinations can be distinguished from keycaps by the hyphen connecting "
 "each part of a key combination. For example:"
@@ -128,17 +130,15 @@ msgstr ""
 "सत्र में वापस लौटने के लिए दबाएँ."
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "The first paragraph highlights the particular keycap to press. The second "
 "highlights two key combinations (each a set of three keycaps with each set "
 "pressed simultaneously)."
-msgstr ""
-"पहला वाक्य खास कुंजी कैप को दबाने के लिए आलोकित करता है. दूसरा तीन कुंजी कैप के दो सेट को "
-"आलोकित करता है, हर सेट एक साथ दबाया जाता है."
+msgstr "पहला अनुच्छेद खास कुंजी कैप को दबाने के लिए आलोकित करता है. दूसरा दो कुंजी युग्म को आलोकित करता है (जिसमें से हर तीन कुंजीकैप का सेट है जिसमें से हर सेट को एक साथ दबाया जाता है.)"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "If source code is discussed, class names, methods, functions, variable names "
 "and returned values mentioned within a paragraph will be presented as above, "
@@ -163,21 +163,21 @@ msgstr ""
 #. Tag: para
 #, no-c-format
 msgid "<application>Proportional Bold</application>"
-msgstr ""
+msgstr "<application>आनुपातिक बोल्ड</application>"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "This denotes words or phrases encountered on a system, including application "
 "names; dialog box text; labeled buttons; check-box and radio button labels; "
 "menu titles and sub-menu titles. For example:"
 msgstr ""
-"यह शब्दों व वाक्यांशों को दिखाता है जो किसी सिस्टम पर आया है, अनुप्रयोग नाम; संवाद बाक्स "
+"यह शब्दों व वाक्यांशों को दिखाता है जो किसी तंत्र पर आया है, अनुप्रयोग नाम; संवाद बाक्स "
 "पाठ; स्तरित बटन; जाँच-पेटी और रेडियो बटन लेबल; मेन्यू शीर्षक और उप-मेन्यू शीर्षक के साथ. "
 "उदाहरण के लिए:"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Choose <menuchoice><guimenu>System</guimenu><guisubmenu>Preferences</"
 "guisubmenu><guimenuitem>Mouse</guimenuitem></menuchoice> from the main menu "
@@ -187,14 +187,15 @@ msgid ""
 "primary mouse button from the left to the right (making the mouse suitable "
 "for use in the left hand)."
 msgstr ""
-"चुनें <guimenu>सिस्टम > वरीयताएँ > माउस</guimenu> मुख्य मेन्यू पट्टी से "
+"चुनें <menuchoice><guimenu>सिस्टम </guimenu> <guisubmenu>वरीयताएँ </"
+"guisubmenu> <guimenuitem>माउस</guimenuitem></menuchoice> मुख्य मेन्यू पट्टी से "
 "<application>माउस वरीयताएँ</application> को लॉन्च करने के लिए. <guilabel>बटन</"
 "guilabel> टैब में,  <guilabel>बाएँ हाथ का माउस</guilabel> जाँच-पेटी को क्लिक करें और "
 "<guibutton>बंद करें</guibutton> को प्राथमिक माउस बटन को बाएं से दाएं बदलने के लिए "
 "क्लिक करें (माउस को बायें हाथ में प्रयोग के लिए उपयुक्त बनाते हुए)."
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "To insert a special character into a <application>gedit</application> file, "
 "choose <menuchoice><guimenu>Applications</guimenu><guisubmenu>Accessories</"
@@ -210,18 +211,19 @@ msgid ""
 "document and choose <menuchoice><guimenu>Edit</guimenu><guimenuitem>Paste</"
 "guimenuitem></menuchoice> from the <application>gedit</application> menu bar."
 msgstr ""
-"किसी विशेष संप्रतीक को <application>gedit</application> फाइल में जोड़ने के लिए, "
-"<guimenu>अनुप्रयोग > सहायक > वर्ण मैप</guimenu> को मुख्य मेन्यू बार से चुनें. आगे, "
-"<guimenu>खोजें > ढूँढ़ें&hellip;</guimenu> को <application>वर्ण मानचित्र</"
+"किसी विशेष वर्ण को <application>gedit</application> फाइल में जोड़ने के लिए, "
+"<guimenu>अनुप्रयोग > सहायक > वर्ण मैप</guimenu> को मुख्य मेन्यू पेटी से चुनें. आगे, "
+"<menuchoice><guimenu>खोजें </guimenu><guimenuitem> ढूँढ़ें&hellip;</guimenuitem></menuchoice> को <application>वर्ण मानचित्र</"
 "application> मेन्यू बार से चुनें, वर्ण का नाम <guilabel>खोजें</guilabel> क्षेत्र में टाइप "
 "करें और <guibutton>आगे</guibutton> क्लिक करें. वर्ण जिसे आपने चाहा है को <guilabel>वर्ण "
 "सारणी</guilabel> में हाइलाइटेड किया जाएगा. इस हाइलाइटेड वर्ण को दोबार क्लिक करें "
 "<guilabel>नक़ल के लिए पाठ</guilabel> क्षेत्र में इसे रखने के लिए और तब <guibutton>नक़ल "
-"करें</guibutton> बटन फिर क्लिक करें. अब अपने दस्तावेज में वापस जाएँ और <guimenu>संपादन > "
-"चिपकाएँ</guimenu> को <application>gedit</application> मेन्यू बार से चुनें."
+"करें</guibutton> बटन फिर क्लिक करें. अब अपने दस्तावेज में वापस जाएँ और <menuchoice><guimenu>संपादन > "
+"चिपकाएँ</guimenu><guimenuitem>चिपकाएँ</"
+"guimenuitem></menuchoice> को <application>gedit</application> मेन्यू पेटी से चुनें."
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "The above text includes application names; system-wide menu names and items; "
 "application-specific menu names; and buttons and text found within a GUI "
@@ -229,8 +231,8 @@ msgid ""
 "context."
 msgstr ""
 "उपर्युक्त पाठ में अनुप्रयोग नाम; सिस्टम व्यापक मेन्यू नाम व मद; अनुप्रयोग विशिष्ट मेन्यू नाम; "
-"और बटन और किसी GUI अंतरफलक के अंदर मिला पाठ शामिल है, सभी आनुपातिक बोल्ड में प्रस्तुत है "
-"और सभी संदर्भ के आधार पर भिन्न किए जा सकते हैं."
+"और किसी GUI अंतरफलक के अंदर मिले बटन और पाठ शामिल है, सभी आनुपातिक बोल्ड में हैं "
+"और संदर्भ के आधार पर सभी में अंतर किया जा सकता है."
 
 #. Tag: para
 #, no-c-format
@@ -244,15 +246,15 @@ msgstr ""
 "application>"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Whether mono-spaced bold or proportional bold, the addition of italics "
 "indicates replaceable or variable text. Italics denotes text you do not "
 "input literally or displayed text that changes depending on circumstance. "
 "For example:"
 msgstr ""
-"जहाँ मोनो-स्पेस्ड बोल्ड या आनुपातिक बोल्ड, इटालिक का योग बताता है विस्थापनीय या चर "
-"पाठ के अलावे. इटालिक बताता है उन पाठ के बारे में जो आप शब्दशः इनपुट नहीं करते हैं या "
+"जहाँ मोनो-स्पेस्ड बोल्ड या आनुपातिक बोल्ड, इटालिक का होना विस्थापनीय या चर "
+"पाठ का संकेत देता है. इटालिक उन पाठ के बारे में बताता है जो आप शब्दशः इनपुट नहीं करते हैं या "
 "प्रदर्शित पाठ जो परिस्थिति के आधार पर बदलता है. उदाहरण के लिए:"
 
 #. Tag: para
@@ -301,7 +303,7 @@ msgid ""
 "system, package, version and release. Each word is a placeholder, either for "
 "text you enter when issuing a command or for text displayed by the system."
 msgstr ""
-"नोट करें कि बोल्ड इटालिक में शब्द ऊपर &mdash; प्रयोक्तानाम, डोमेननाम, फाइल-सिस्टम, "
+"नोट करें कि बोल्ड इटालिक में शब्द ऊपर &mdash; उपयोक्तानाम, डोमेननाम, फाइल-सिस्टम, "
 "संकुल, संस्करण और रिलीज. हर शब्द एक प्लेसहोल्डर है, या पाठ के लिए जो आप दाखिल करते हैं जब "
 "किसी कमांड को निर्गत किया जाता है और सिस्टम के द्वारा प्रदर्शित पाठ के लिए."
 
@@ -317,36 +319,36 @@ msgstr ""
 #. Tag: para
 #, no-c-format
 msgid "Publican is a <firstterm>DocBook</firstterm> publishing system."
-msgstr ""
+msgstr "Publican <firstterm>DocBook</firstterm> प्रकाशन प्रणाली है."
 
 #. Tag: title
 #, no-c-format
 msgid "Pull-quote Conventions"
-msgstr "पुल कोट परिपाटी"
+msgstr "कर्षित उद्धरण परिपाटी"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Terminal output and source code listings are set off visually from the "
 "surrounding text."
-msgstr "दो, सामान्य रूप से मल्टी लाइन, डेटा टाइप चारों ओर के पाठ से सेट ऑफ किया जाता है."
+msgstr "टर्मिनल आउटपुट और स्रोत कोड सूचीकरण को चारो तरफ पाठ से सेट ऑप किया जा सकता है."
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Output sent to a terminal is set in <computeroutput>mono-spaced roman</"
 "computeroutput> and presented thus:"
 msgstr ""
-"टर्मिनल में भेजा आउटपुट को <computeroutput>Mono-spaced Roman</computeroutput> में "
+"टर्मिनल में भेजे आउटपुट को <computeroutput>mono-spaced Roman</computeroutput> में "
 "सेट किया जाता है और इस प्रकार प्रस्तुत किया जाता है:"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Source-code listings are also set in <computeroutput>mono-spaced roman</"
 "computeroutput> but add syntax highlighting as follows:"
 msgstr ""
-"स्रोत कोड लिस्टिंग को <computeroutput>Mono-spaced Roman</computeroutput> में भी "
+"स्रोत कोड सूचीकरण को <computeroutput>mono-spaced Roman</computeroutput> में भी "
 "सेट किया जाता है लेकिन निम्नानुसार प्रस्तुत व हाइलाइट किया जाता है:"
 
 #. Tag: title
@@ -369,14 +371,14 @@ msgid "Note"
 msgstr "नोट"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Notes are tips, shortcuts or alternative approaches to the task at hand. "
 "Ignoring a note should have no negative consequences, but you might miss out "
 "on a trick that makes your life easier."
 msgstr ""
-"एक नोट किसी कार्य के लिए एक संकेत, शॉर्टकट, या वैकल्पिक तरीके हैं. किसी नोट को अनदेखा "
-"करना कोई नकारात्मक परिणाम नहीं देना चाहिए, लेकिन किसी ट्रिक मिस कर सकते हैं जो आपके "
+"नोट्स किसी कार्य के लिए एक संकेत, शॉर्टकट, या वैकल्पिक तरीके हैं. किसी नोट को अनदेखा "
+"करना कोई नकारात्मक परिणाम नहीं देना चाहिए लेकिन आप किसी युक्ति को मिस कर सकते हैं जो आपके "
 "जीवन को आसान बनाता है."
 
 #. Tag: title
@@ -385,16 +387,16 @@ msgid "Important"
 msgstr "महत्वपूर्ण"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Important boxes detail things that are easily missed: configuration changes "
 "that only apply to the current session, or services that need restarting "
 "before an update will apply. Ignoring a box labeled 'Important' won't cause "
 "data loss but may cause irritation and frustration."
 msgstr ""
-"महत्वपूर्ण बाक्स उन चीजों को विस्तार से बताता है जो आसानी से मिस किया जा सकते हैं: "
-"विन्यास बदलाव जो कि सिर्फ मौजूदा सत्र में लागू होते हैं, या सेवाएं जिसे किसी अद्यतन के फिर "
-"लागू होने के पहले फिर आरंभ करने की जरूरत है. किसी महत्वपूर्ण बाक्स को अनदेखा करना डेटा "
+"महत्वपूर्ण बाक्स उन चीजों को विस्तार से बताता है जो आसानी से भूले जा सकते हैं: "
+"विन्यास बदलाव जो कि सिर्फ मौजूदा सत्र में लागू होते हैं, या सेवाएँ जिसे किसी अद्यतन के फिर "
+"लागू होने के पहले आरंभ करने की जरूरत है. किसी महत्वपूर्ण बाक्स को अनदेखा करना आंकड़ा "
 "क्षति का कारण नहीं बनेगा लेकिन परेशानी व खिन्नता का कारण बन सकता है."
 
 #. Tag: title
@@ -403,96 +405,11 @@ msgid "Warning"
 msgstr "चेतावनी"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Warnings should not be ignored. Ignoring warnings will most likely cause "
 "data loss."
 msgstr ""
-"एक चेतावनी को अनदेखा नहीं किया जाना चाहिए. चेतावनी अनदेखा करना अधिक संभव रूप से डेटा "
-"क्षति का कारण बनेगा."
+"चेतावनियों को अनदेखा नहीं किया जाना चाहिए. चेतावनियों को अनदेखा किया जाना आँकड़ा "
+"क्षति का कारण बन सकता है."
 
-#, fuzzy
-#~ msgid ""
-#~ "Note the <guimenu>&#62;</guimenu> shorthand used to indicate traversal "
-#~ "through a menu and its sub-menus. This avoids difficult-to-follow "
-#~ "phrasing such as &#39;Select <guimenuitem>Mouse</guimenuitem> from the "
-#~ "<guimenu>Preferences</guimenu> sub-menu in the <guimenu>System</guimenu> "
-#~ "menu of the main menu bar&#39;."
-#~ msgstr ""
-#~ "नोट करें कि <guimenu>></guimenu> शॉर्टहैंड जो एक मेन्यू और इसके उप-मेन्यू से होकर "
-#~ "आनेजाने के लिए प्रयोग किए जाते हैं. यह अनुसरण में कठिनाई से बचने के लिए है 'चुनें "
-#~ "<guimenuitem>माउस</guimenuitem> को <guimenu>वरीयताएँ</guimenu> उप-मेन्यू से  "
-#~ "<guimenu>सिस्टम</guimenu> मुख्य मेन्यू बार उपागम के मेन्यू में."
-
-#~ msgid ""
-#~ "When the Apache HTTP Server accepts requests, it dispatches child "
-#~ "processes or threads to handle them. This group of child processes or "
-#~ "threads is known as a <firstterm>server-pool</firstterm>. Under Apache "
-#~ "HTTP Server 2.0, the responsibility for creating and maintaining these "
-#~ "server-pools has been abstracted to a group of modules called "
-#~ "<firstterm>Multi-Processing Modules</firstterm> (<firstterm>MPMs</"
-#~ "firstterm>). Unlike other modules, only one module from the MPM group can "
-#~ "be loaded by the Apache HTTP Server."
-#~ msgstr ""
-#~ "जब एपाची HTTP सर्वर आग्रह स्वीकार करता है, यह उन्हें नियंत्रित करने के लिए संतति "
-#~ "प्रक्रिया या लड़ी डिस्पैच करता है. संतति प्रक्रिया का समूह या लड़ी को "
-#~ "<firstterm>सर्वर-पुल</firstterm> के रूप में जाना जाता है. Apache HTTP सर्वर 2.0 के "
-#~ "अंतर्गत, इन सर्वर पुल के निर्माण व देखभाल का दायित्व को माड्यूल के समूह से सारांश किया "
-#~ "जाता है जो कि <firstterm>मल्टी प्रोसेसिंग मॉड्यूल</firstterm> (<firstterm>MPM</"
-#~ "firstterm>) कहलाता है. दूसरे मॉड्यूल से भिन्न, MPM समूह से सिर्फ एक माड्यूल को Apache "
-#~ "HTTP सर्वर के द्वारा लोड किया जाता है."
-
-#~ msgid "Proportional Bold"
-#~ msgstr "आनुपातिक बोल्ड"
-
-#~ msgid ""
-#~ "books        Desktop   documentation  drafts  mss    photos   stuff  svn\n"
-#~ "books_tests  Desktop1  downloads      images  notes  scripts  svgs"
-#~ msgstr ""
-#~ "books        Desktop   documentation  drafts  mss    photos   stuff  svn\n"
-#~ "books_tests  Desktop1  downloads      images  notes  scripts  svgs"
-
-#~ msgid ""
-#~ "package org.jboss.book.jca.ex1;\n"
-#~ "\n"
-#~ "import javax.naming.InitialContext;\n"
-#~ "\n"
-#~ "public class ExClient\n"
-#~ "{\n"
-#~ "   public static void main(String args[]) \n"
-#~ "       throws Exception\n"
-#~ "   {\n"
-#~ "      InitialContext iniCtx = new InitialContext();\n"
-#~ "      Object         ref    = iniCtx.lookup(\"EchoBean\");\n"
-#~ "      EchoHome       home   = (EchoHome) ref;\n"
-#~ "      Echo           echo   = home.create();\n"
-#~ "\n"
-#~ "      System.out.println(\"Created Echo\");\n"
-#~ "\n"
-#~ "      System.out.println(\"Echo.echo('Hello') = \" + echo.echo(\"Hello"
-#~ "\"));\n"
-#~ "   }\n"
-#~ "   \n"
-#~ "}"
-#~ msgstr ""
-#~ "package org.jboss.book.jca.ex1;\n"
-#~ "\n"
-#~ "import javax.naming.InitialContext;\n"
-#~ "\n"
-#~ "public class ExClient\n"
-#~ "{\n"
-#~ "   public static void main(String args[]) \n"
-#~ "       throws Exception\n"
-#~ "   {\n"
-#~ "      InitialContext iniCtx = new InitialContext();\n"
-#~ "      Object         ref    = iniCtx.lookup(\"EchoBean\");\n"
-#~ "      EchoHome       home   = (EchoHome) ref;\n"
-#~ "      Echo           echo   = home.create();\n"
-#~ "\n"
-#~ "      System.out.println(\"Created Echo\");\n"
-#~ "\n"
-#~ "      System.out.println(\"Echo.echo('Hello') = \" + echo.echo(\"Hello"
-#~ "\"));\n"
-#~ "   }\n"
-#~ "   \n"
-#~ "}"
