--- a/publican/datadir/Common_Content/common/kn-IN/Conventions.po
+++ b/publican/datadir/Common_Content/common/kn-IN/Conventions.po
@@ -1,17 +1,17 @@
 # translation of Conventions.po to Kannada
-# Shankar Prasad <svenkate@redhat.com>, 2007, 2008.
+# Shankar Prasad <svenkate@redhat.com>, 2007, 2008, 2009.
 msgid ""
 msgstr ""
 "Project-Id-Version: Conventions\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
 "POT-Creation-Date: 2009-12-01T23:44:40\n"
-"PO-Revision-Date: 2008-10-07 16:39+0530\n"
+"PO-Revision-Date: 2009-12-02 13:08+0530\n"
 "Last-Translator: Shankar Prasad <svenkate@redhat.com>\n"
-"Language-Team: Kannada <en@li.org>\n"
+"Language-Team: Kannada <kde-l10n-kn@kde.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.11.4\n"
+"X-Generator: Lokalize 1.0\n"
 "Plural-Forms:  nplurals=2; plural=(n != 1);\n"
 
 #. Tag: title
@@ -60,18 +60,16 @@ msgstr ""
 "ನಿಗದಿತ ಪದಗಳು ಹಾಗು ಪದಗುಚ್ಛಗಳತ್ತ ಗಮನವನ್ನು ಸೆಳೆಯಲು ನಾಲ್ಕು ಟೈಪೋಗ್ರಾಫಿಕ್ ಅನುಸರಣೆಗಳನ್ನು "
 "ಬಳಸಲಾಗುತ್ತದೆ. ಈ ಅನುಸರಣೆಗಳು ಹಾಗು ಅವುಗಳನ್ನು ಅನ್ವಯಿಸಲಾಗುವ ಸನ್ನಿವೇಶಗಳು ಈ ಕೆಳಗಿನಂತಿವೆ."
 
-#. Tag: para
-#, fuzzy, no-c-format
+#. Tag: para, no-c-format
 msgid "<literal>Mono-spaced Bold</literal>"
-msgstr "Mono-spaced Bold"
+msgstr "<literal>Mono-spaced Bold</literal>"
 
-#. Tag: para
-#, fuzzy, no-c-format
+#. Tag: para, no-c-format
 msgid ""
 "Used to highlight system input, including shell commands, file names and "
 "paths. Also used to highlight keycaps and key combinations. For example:"
 msgstr ""
-"ಶೆಲ್‌ ಆಜ್ಞೆಗಳು, ಕಡತದ ಹೆಸರುಗಳು ಹಾಗು ಮಾರ್ಗಗಳಂತಹ ಗಣಕದ ಆದಾನವನ್ನು(ಇನ್‌ಪುಟ್) ಹೈಲೈಟ್ ಮಾಡಲು "
+"ಶೆಲ್‌ ಆಜ್ಞೆಗಳು, ಕಡತದ ಹೆಸರುಗಳು ಹಾಗು ಮಾರ್ಗಗಳಂತಹ ಗಣಕದ ಇನ್‌ಪುಟ್ ಅನ್ನು ಹೈಲೈಟ್ ಮಾಡಲು "
 "ಬಳಸಲಾಗುತ್ತದೆ. ಅಲ್ಲದೆ ಕೀಲಿ ಕ್ಯಾಪ್‌ಗಳನ್ನು ಹಾಗು ಕೀಲಿ-ಸಂಯೋಜನೆಗಳನ್ನೂ ಸಹ ಹೈಲೈಟ್ ಮಾಡಲು "
 "ಬಳಸಲಾಗುತ್ತದೆ. ಉದಾಹರಣೆಗೆ:"
 
@@ -88,24 +86,23 @@ msgstr ""
 "my_next_bestselling_novel</command> ಎಂಬ ಆಜ್ಞೆಯನ್ನು ನಮೂದಿಸಿ ಹಾಗು ಅದನ್ನು ಚಲಾಯಿಸಲು "
 "<keycap>Enter</keycap> ಅನ್ನು ಒತ್ತಿ. "
 
-#. Tag: para
-#, fuzzy, no-c-format
+#. Tag: para, no-c-format
 msgid ""
 "The above includes a file name, a shell command and a keycap, all presented "
 "in mono-spaced bold and all distinguishable thanks to context."
 msgstr ""
 "ಮೇಲೆ ಹೇಳಲಾಗಿದ್ದರಲ್ಲಿ ಒಂದು ಕಡತದ ಹೆಸರು, ಒಂದು ಶೆಲ್‌ ಆಜ್ಞೆ ಹಾಗು ಒಂದು ಕೀಲಿ ಕ್ಯಾಪ್ ಇದೆ, "
-"ಹಾಗು ಅವುಗಳೆಲ್ಲವೂ  Mono-spaced Bold ನಲ್ಲಿ ಸೂಚಿಸಲಾಗಿದ್ದರಿಂದ ಬಾಕಿ ಪಠ್ಯಗಳಿಗಿಂತ "
-"ಪ್ರತ್ಯೇಕವಾಗಿ ಕಾಣುತ್ತವೆ. "
+"ಹಾಗು ಅವುಗಳೆಲ್ಲವೂ  mono-spaced bold ನಲ್ಲಿ ಸೂಚಿಸಲಾಗಿದ್ದರಿಂದ ಬಾಕಿ ಪಠ್ಯಗಳಿಗಿಂತ "
+"ಪ್ರತ್ಯೇಕವಾಗಿ ಕಾಣುತ್ತವೆ."
 
-#. Tag: para
-#, fuzzy, no-c-format
+#. Tag: para, no-c-format
 msgid ""
 "Key combinations can be distinguished from keycaps by the hyphen connecting "
 "each part of a key combination. For example:"
 msgstr ""
-"ಕೀಲಿ-ಸಂಯೋಗದ ಪ್ರತಿಯೊಂದು ಭಾಗವನ್ನು ಜೋಡಿಸುವ ಕೀಲಿ ಕ್ಯಾಪ್‌ಗಳಿಂದ ಕೀಲಿ-ಸಂಯೋಗಗಳನ್ನು "
-"ಪ್ರತ್ಯೇಕಿಸಬಹುದಾಗಿದೆ. ಉದಾಹರಣೆಗೆ: "
+"ಕೀಲಿ-ಸಂಯೋಜನೆಯ ಪ್ರತಿಯೊಂದು ಭಾಗವನ್ನು ಹೈಫನ್‌ನಿಂದ ಜೋಡಿಸುವ ಮೂಲಕ ಕೀಲಿ ಕ್ಯಾಪ್‌ಗಳಿಂದ "
+"ಕೀಲಿ-ಸಂಯೋಜನೆಗಳನ್ನು "
+"ಪ್ರತ್ಯೇಕಿಸಬಹುದಾಗಿದೆ. ಉದಾಹರಣೆಗೆ:"
 
 #. Tag: para
 #, no-c-format
@@ -125,26 +122,25 @@ msgstr ""
 "ಮರಳಲು <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F7</"
 "keycap></keycombo> ಅನ್ನು ಒತ್ತಿ. "
 
-#. Tag: para
-#, fuzzy, no-c-format
+#. Tag: para, no-c-format
 msgid ""
 "The first paragraph highlights the particular keycap to press. The second "
 "highlights two key combinations (each a set of three keycaps with each set "
 "pressed simultaneously)."
 msgstr ""
-"ಮೊದಲನೆ ವಾಕ್ಯವು ನಿಗದಿತ ಕೀಲಿ ಕ್ಯಾಪ್ ಅನ್ನು  ಒತ್ತಲು ಹೈಲೈಟ್ ಮಾಡುತ್ತದೆ. ಎರಡನೆಯದು "
-"ಅನುಕ್ರಮವಾಗಿ ಒತ್ತಲು ಮೂರು ಕೀಲಿ ಕ್ಯಾಪ್‌ಗಳ ಎರಡು ಜೋಡಿಗಳನ್ನು ಹೈಲೈಟ್‌ ಮಾಡುತ್ತದೆ. "
+"ಮೊದಲನೆ ವಾಕ್ಯವು ನಿಗದಿತ ಕೀಲಿ ಕ್ಯಾಪ್ ಅನ್ನು  ಒತ್ತಲು ಹೈಲೈಟ್ ಮಾಡುತ್ತದೆ. ಎರಡನೆಯದು ಎರಡು "
+"ಜೋಡಿಗಳನ್ನು ಹೈಲೈಟ್‌ ಮಾಡುತ್ತದೆ"
+"(ಪ್ರತಿ ಮೂರು ಕೀಲಿ ಕ್ಯಾಪ್‌ಗಳ ಜೋಡಿಯಲ್ಲಿ ಪ್ರತಿಯೊಂದು ಜೋಡಿಯನ್ನು ಏಕಕಾಲದಲ್ಲಿ ಒತ್ತಲಾಗುತ್ತದೆ)."
 
-#. Tag: para
-#, fuzzy, no-c-format
+#. Tag: para, no-c-format
 msgid ""
 "If source code is discussed, class names, methods, functions, variable names "
 "and returned values mentioned within a paragraph will be presented as above, "
 "in <literal>mono-spaced bold</literal>. For example:"
 msgstr ""
-"ಎಲ್ಲಿಯಾದರೂ ಆಕರ ಸಂಜ್ಞೆಯ(ಸೋರ್ಸ್‌ ಕೋಡ್) ಬಗ್ಗೆ ತಿಳಿಸುವಂತಿದ್ದಲ್ಲಿ, ವರ್ಗದ ಹೆಸರುಗಳು,ಕ್ರಮಗಳು, "
-"ಕಾರ್ಯಗಳು, ವೇರಿಯಬಲ್ ಹೆಸರುಗಳು ಹಾಗು ಮರಳಿಸಿದ ಮೌಲ್ಯಗಳನ್ನು ಒಂದು ಪ್ಯಾರಾದಲ್ಲಿ  ಮೇಲಿನಂತೆ "
-"<literal>Mono-spaced Bold</literal> ನಲ್ಲಿ ತೋರಿಸಲ್ಪಡುತ್ತದೆ. ಉದಾಹರಣೆಗೆ: "
+"ಎಲ್ಲಿಯಾದರೂ ಆಕರ ಸಂಜ್ಞೆಯ(ಸೋರ್ಸ್‌ ಕೋಡ್) ಬಗ್ಗೆ ತಿಳಿಸುವಂತಿದ್ದಲ್ಲಿ, ವರ್ಗದ ಹೆಸರುಗಳು, ಕ್ರಮಗಳು, "
+"ಕಾರ್ಯಗಳು, ವೇರಿಯಬಲ್ ಹೆಸರುಗಳು ಹಾಗು ಮರಳಿಸಿದ ಮೌಲ್ಯಗಳನ್ನು ಒಂದು ಪ್ಯಾರಾದಲ್ಲಿ ಮೇಲಿನಂತೆ "
+"<literal>mono-spaced bold</literal> ನಲ್ಲಿ ತೋರಿಸಲ್ಪಡುತ್ತದೆ. ಉದಾಹರಣೆಗೆ: "
 
 #. Tag: para
 #, no-c-format
@@ -162,21 +158,19 @@ msgstr ""
 #. Tag: para
 #, no-c-format
 msgid "<application>Proportional Bold</application>"
-msgstr ""
+msgstr "<application>Proportional Bold</application>"
 
-#. Tag: para
-#, fuzzy, no-c-format
+#. Tag: para, no-c-format
 msgid ""
 "This denotes words or phrases encountered on a system, including application "
 "names; dialog box text; labeled buttons; check-box and radio button labels; "
 "menu titles and sub-menu titles. For example:"
 msgstr ""
-"ಇದು ಅನ್ವಯದ ಹೆಸರುಗಳು,  ಸಂವಾದ ಪೆಟ್ಟಿಗೆ ಪಠ್ಯ; ಲೇಬಲ್‌ ಮಾಡಲಾದಂತಹ ಗುಂಡಿಗಳು; ಚೆಕ್‌-ಬಾಕ್ಸ್ "
-"ಹಾಗು ರೇಡಿಯೋ ಗುಂಡಿ ಲೇಬಲ್‌ಗಳು; ಮೆನು ಶೀರ್ಷಿಕೆಗಳು ಹಾಗು ಉಪ-ಮೆನು  ಶೀರ್ಷಿಕೆಗಳಂತಹ ಒಂದು "
-"ಗಣಕದಲ್ಲಿ ಎದುರಾಗುವ ಪದಗಳು ಅಥವ ವಾಕ್ಯಗಳನ್ನು ಸೂಚಿಸುತ್ತದೆ. ಉದಾಹರಣೆಗೆ:"
+"ಅನ್ವಯದ ಹೆಸರುಗಳು, ಸಂವಾದ ಚೌಕದ ಪಠ್ಯ; ಲೇಬಲ್‌ ಮಾಡಲಾದಂತಹ ಗುಂಡಿಗಳು; ಗುರುತು-ಚೌಕ "
+"ಹಾಗು ರೇಡಿಯೋ ಗುಂಡಿಯ ಲೇಬಲ್‌ಗಳು; ಮೆನು ಶೀರ್ಷಿಕೆಗಳು ಹಾಗು ಉಪ-ಮೆನು ಶೀರ್ಷಿಕೆಗಳಂತಹ ಒಂದು "
+"ಗಣಕದಲ್ಲಿ ಎದುರಾಗುವ ಪದಗಳು ಅಥವ ವಾಕ್ಯಗಳನ್ನು ಇದು ಸೂಚಿಸುತ್ತದೆ. ಉದಾಹರಣೆಗೆ:"
 
-#. Tag: para
-#, fuzzy, no-c-format
+#. Tag: para, no-c-format
 msgid ""
 "Choose <menuchoice><guimenu>System</guimenu><guisubmenu>Preferences</"
 "guisubmenu><guimenuitem>Mouse</guimenuitem></menuchoice> from the main menu "
@@ -186,14 +180,14 @@ msgid ""
 "primary mouse button from the left to the right (making the mouse suitable "
 "for use in the left hand)."
 msgstr ""
-"<application>ಮೌಸ್‌ನ ಆದ್ಯತೆಗಳು</application> ಅನ್ನು ಆರಂಭಿಸಲು ಮುಖ್ಯ ಮೆನು ಪಟ್ಟಿಯಿಂದ "
-"<guimenu>ಗಣಕ > ಆದ್ಯತೆಗಳು >ಮೌಸ್</guimenu>  ಅನ್ನು ಆಯ್ಕೆ ಮಾಡಿ. ಮೌಸ್‌ನ ಮೂಲ ಗುಂಡಿಗಳನ್ನು "
-"ಎಡದಿಂದ ಬಲಕ್ಕೆ ಬದಲಾಯಿಸಲು (ಎಡಗೈಯಲ್ಲಿ ಬಳಸಲು ಯೋಗ್ಯವಾಗಿಸಲು ),<guilabel>ಗುಂಡಿಗಳು</"
-"guilabel> ಟ್ಯಾಬ್‌ನಿಂದ, <guilabel>ಎಡಗೈಯ ಮೌಸ್</guilabel> ಚೆಕ್‌ ಬಾಕ್ಸನ್ನು ಕ್ಲಿಕ್ ಮಾಡಿ ಹಾಗು "
+"<application>ಮೌಸ್‌ನ ಆದ್ಯತೆಗಳು</application> ಎಂಬುದನ್ನು ಆರಂಭಿಸಲು ಮುಖ್ಯ ಮೆನು ಪಟ್ಟಿಯಿಂದ "
+"<menuchoice><guimenu>ವ್ಯವಸ್ಥೆ</guimenu><guisubmenu>ಆದ್ಯತೆಗಳು</"
+"guisubmenu><guimenuitem>ಮೌಸ್</guimenuitem></menuchoice> ಅನ್ನು ಆಯ್ಕೆ ಮಾಡಿ. ಮೌಸ್‌ನ ಮೂಲ "
+"ಗುಂಡಿಗಳನ್ನು ಎಡದಿಂದ ಬಲಕ್ಕೆ ಬದಲಾಯಿಸಲು (ಎಡಗೈಯಲ್ಲಿ ಬಳಸಲು ಯೋಗ್ಯವಾಗಿಸಲು ),<guilabel>ಗುಂಡಿಗಳು</"
+"guilabel> ಟ್ಯಾಬ್‌ನಿಂದ, <guilabel>ಎಡಗೈಯ ಮೌಸ್</guilabel> ಗುರುತು ಚೌಕವನ್ನು ಕ್ಲಿಕ್ ಮಾಡಿ ಹಾಗು "
 "<guibutton>ಮುಚ್ಚು</guibutton> ಅನ್ನು ಕ್ಲಿಕ್ಕಿಸಿ. "
 
-#. Tag: para
-#, fuzzy, no-c-format
+#. Tag: para, no-c-format
 msgid ""
 "To insert a special character into a <application>gedit</application> file, "
 "choose <menuchoice><guimenu>Applications</guimenu><guisubmenu>Accessories</"
@@ -210,28 +204,30 @@ msgid ""
 "guimenuitem></menuchoice> from the <application>gedit</application> menu bar."
 msgstr ""
 "ಒಂದು <application>gedit</application> ಕಡತಕ್ಕೆ ಹೊಸದೊಂದು ಚಿಹ್ನೆಯನ್ನು ಸೇರಿಸಲು, "
-"ಮುಖ್ಯ ಮೆನು ಪಟ್ಟಿಯಿಂದ <guimenu>ಅನ್ವಯಗಳು > ಸಲಕರಣೆಗಳು > ಕ್ಯಾರೆಕ್ಟರ್ ಮ್ಯಾಪ್ </guimenu> "
-"ಅನ್ನು ಆಯ್ಕೆ ಮಾಡಿ.  ಮುಂದಕ್ಕೆ, <application>ಕ್ಯಾರಕ್ಟರ್ ಮ್ಯಾಪ್‌  </application> ಮೆನು "
-"ಪಟ್ಟಿಯಿಂದ<guimenu>ಹುಡುಕು > Find&hellip;</guimenu> ಅನ್ನು ಆರಿಸಿ, "
+"ಮುಖ್ಯ ಮೆನು ಪಟ್ಟಿಯಿಂದ <menuchoice><guimenu>ಅನ್ವಯಗಳು</guimenu><guisubmenu>ಸಲಕರಣೆಗಳು</"
+"guisubmenu><guimenuitem>ಕ್ಯಾರೆಕ್ಟರ್ ಮ್ಯಾಪ್</guimenuitem></menuchoice> ಅನ್ನು ಆಯ್ಕೆ ಮಾಡಿ. "
+" ಮುಂದಕ್ಕೆ, <application>ಕ್ಯಾರಕ್ಟರ್ ಮ್ಯಾಪ್‌  </application> ಮೆನು ಪಟ್ಟಿಯಿಂದ<menuchoice><"
+"guimenu>ಹುಡುಕು</"
+"guimenu><guimenuitem>Find&hellip;</guimenuitem></menuchoice> ಅನ್ನು ಆರಿಸಿ, "
 "<guilabel>ಹುಡುಕು </guilabel> ಸ್ಥಳದಲ್ಲಿ ಚಿಹ್ನೆಯ ಹೆಸರನ್ನು ನಮೂದಿಸಿ ಹಾಗು "
 "<guibutton>ಮುಂದಕ್ಕೆ</guibutton> ಅನ್ನು ಕ್ಲಿಕ್ಕಿಸಿ. ನೀವು ಬಯಸಿದ ಚಿಹ್ನೆಯು "
 "<guilabel>ಕ್ಯಾರೆಕ್ಟರ್ ಟೇಬಲ್‌ </guilabel>ನಲ್ಲಿ ಹೈಲೈಟ್‌ ಮಾಡಲ್ಪಡುತ್ತದೆ.<guilabel>ಕಾಪಿ "
 "ಮಾಡಬೇಕಿರುವ ಪಠ್ಯ</guilabel> ಸ್ಥಳದಲ್ಲಿ ಇರಿಸಲು ಹೈಲೈಟ್‌ ಆದಂತಹ ಈ ಚಿಹ್ನೆಯ ಮೇಲೆ ಎರಡು ಬಾರಿ "
 "ಕ್ಲಿಕ್ಕಿಸಿ ಹಾಗು  <guibutton>ಕಾಪಿ ಮಾಡು</guibutton> ಗುಂಡಿಯನ್ನು ಕ್ಲಿಕ್ಕಿಸಿ . ಈಗ ನಿಮ್ಮ "
 "ದಸ್ತಾವೇಜಿಗೆ ಮರಳಿ ಹಾಗು  <application>gedit</application> ಮೆನು ಪಟ್ಟಿಯಿಂದ "
-"<guimenu>ಸಂಪಾದನೆ > ಅಂಟಿಸು</guimenu> ಅನ್ನು ಆಯ್ಕೆ ಮಾಡಿ."
+"<menuchoice><guimenu>ಸಂಪಾದನೆ</guimenu><guimenuitem>ಅಂಟಿಸು</"
+"guimenuitem></menuchoice>ಅನ್ನು ಆಯ್ಕೆ ಮಾಡಿ."
 
-#. Tag: para
-#, fuzzy, no-c-format
+#. Tag: para, no-c-format
 msgid ""
 "The above text includes application names; system-wide menu names and items; "
 "application-specific menu names; and buttons and text found within a GUI "
 "interface, all presented in proportional bold and all distinguishable by "
 "context."
 msgstr ""
-"ಮೇಲಿನ ಪಠ್ಯವು ಅನ್ವಯದ ಹೆಸರುಗಳನ್ನು; ಗಣಕದಾದ್ಯಂತದ ಮೆನು ಹೆಸರುಗಳು ಹಾಗು ಅಂಶಗಳು; ಅನ್ವಯ-"
-"ನಿಗದಿತ ಮೆನು ಹೆಸರುಗಳು; ಹಾಗು ಗುಂಡಿಗಳು ಮತ್ತು ಒಂದು  GUI ಸಂಪರ್ಕಸಾಧನದ ಒಳಗಿರುವ "
-"ಪಠ್ಯವನ್ನು  ಒಳಗೊಂಡಿದ್ದು,  ಎಲ್ಲವೂ ಸರಿಯಾದ ಪ್ರಮಾಣದಲ್ಲಿ  ಬೋಲ್ಡ್ ಆಗಿದ್ದು ಸನ್ನಿವೇಶಕ್ಕೆ ಸರಿಯಾಗಿ "
+"ಮೇಲಿನ ಪಠ್ಯವು ಅನ್ವಯದ ಹೆಸರುಗಳು; ಗಣಕದಾದ್ಯಂತದ ಮೆನು ಹೆಸರುಗಳು ಹಾಗು ಅಂಶಗಳು; ಅನ್ವಯ-"
+"ನಿಶ್ಚಿತ ಮೆನು ಹೆಸರುಗಳು; ಹಾಗು ಗುಂಡಿಗಳು ಮತ್ತು ಒಂದು GUI ಸಂಪರ್ಕಸಾಧನದ ಒಳಗಿರುವ "
+"ಪಠ್ಯವನ್ನು  ಒಳಗೊಂಡಿದ್ದು,  ಎಲ್ಲವೂ ಸರಿಯಾದ ಪ್ರಮಾಣದಲ್ಲಿ ಬೋಲ್ಡ್ ಆಗಿದ್ದು ಸನ್ನಿವೇಶಕ್ಕೆ ಸರಿಯಾಗಿ "
 "ಪ್ರತ್ಯೇಕಿಸಬಹುದಾಗಿರುತ್ತವೆ. "
 
 #. Tag: para
@@ -245,16 +241,15 @@ msgstr ""
 "<application><replaceable>Proportional Bold Italic</replaceable></"
 "application> "
 
-#. Tag: para
-#, fuzzy, no-c-format
+#. Tag: para, no-c-format
 msgid ""
 "Whether mono-spaced bold or proportional bold, the addition of italics "
 "indicates replaceable or variable text. Italics denotes text you do not "
 "input literally or displayed text that changes depending on circumstance. "
 "For example:"
 msgstr ""
-"Mono-spaced Bold ಅಥವ Proportional Bold, ಜೊತೆಗೆ ಸೇರಿಸಲಾದ Italics "
-"ಬದಲಾಯಿಸಬಹುದಾದ ಹಾಗು ವೇರಿಯಬಲ್ ಪಠ್ಯವನ್ನು ಸೂಚಿಸುತ್ತದೆ. ಓರೆ ಅಕ್ಷರಗಳು , ನೀವು ನಿಜವಾಗಿಯೂ "
+"mono-spaced bold ಅಥವ proportional bold, ಜೊತೆಗೆ ಸೇರಿಸಲಾದ Italics "
+"ಬದಲಾಯಿಸಬಹುದಾದ ಹಾಗು ವೇರಿಯಬಲ್ ಪಠ್ಯವನ್ನು ಸೂಚಿಸುತ್ತದೆ. ಓರೆ ಅಕ್ಷರಗಳು, ನೀವು ನಿಜವಾಗಿಯೂ "
 "ನಮೂದಿಸದೆ ಇರುವ ಪಠ್ಯವನ್ನು ಅಥವ ತೋರಿಸಲಾಗಿರುವುಗಳಲ್ಲಿ ಸನ್ನಿವೇಶಕ್ಕೆ ಅನುಗುಣವಾಗಿ ಬದಲಾಗುವ  "
 "ಪಠ್ಯವನ್ನು ಸೂಚಿಸುತ್ತವೆ. ಉದಾಹರಣೆಗೆ: "
 
@@ -323,38 +318,35 @@ msgstr ""
 #. Tag: para
 #, no-c-format
 msgid "Publican is a <firstterm>DocBook</firstterm> publishing system."
-msgstr ""
+msgstr "Publican ಎನ್ನುವುದು ಒಂದು <firstterm>DocBook</firstterm> ಪ್ರಕಟಿಸುವ ವ್ಯವಸ್ಥೆಯಾಗಿದೆ."
 
 #. Tag: title
 #, no-c-format
 msgid "Pull-quote Conventions"
 msgstr "ಪುಲ್‌-ಕೋಟ್ ಅನುಸರಣೆಗಳು"
 
-#. Tag: para
-#, fuzzy, no-c-format
+#. Tag: para, no-c-format
 msgid ""
 "Terminal output and source code listings are set off visually from the "
 "surrounding text."
 msgstr ""
-"ಎರಡು, ಸಾಮಾನ್ಯವಾಗಿ ಅನೇಕ ಸಾಲಗಳ, ಸುತ್ತಮುತ್ತಲಿನ ಪಠ್ಯದಿಂದ ದತ್ತಾಂಶ ಬಗೆಗಳನ್ನು ತೋರಿಸಲು "
-"ಬಳಸಲಾಗುತ್ತದೆ."
+"ಟರ್ಮಿನಲ್ ಔಟ್‌ಪುಟ್ ಹಾಗು ಆಕರ-ಸಂಜ್ಞೆ ಪಟ್ಟಿಗಳು ಸುತ್ತಮುತ್ತಲಿನ ಪಠ್ಯದಿಂದ ಗೋಚರಿಸುವ ರೂಪದಲ್ಲಿ "
+"ಹೊಂದಿಸಲಾಗುತ್ತದೆ."
 
-#. Tag: para
-#, fuzzy, no-c-format
+#. Tag: para, no-c-format
 msgid ""
 "Output sent to a terminal is set in <computeroutput>mono-spaced roman</"
 "computeroutput> and presented thus:"
 msgstr ""
-"ಟರ್ಮಿನಲ್‌ಗೆ ಕಳುಹಿಸಲಾಗುವ ಔಟ್‌ಪುಟ್‌ಗಳನ್ನು <computeroutput>Mono-spaced Roman</"
+"ಟರ್ಮಿನಲ್‌ಗೆ ಕಳುಹಿಸಲಾಗುವ ಔಟ್‌ಪುಟ್‌ಗಳನ್ನು <computeroutput>mono-spaced roman</"
 "computeroutput> ನಲ್ಲಿ ಬರೆಯಲಾಗುತ್ತದೆ ಹಾಗು ಹೀಗೆ ಪ್ರದರ್ಶಿಸಲಾಗುತ್ತದೆ:"
 
-#. Tag: para
-#, fuzzy, no-c-format
+#. Tag: para, no-c-format
 msgid ""
 "Source-code listings are also set in <computeroutput>mono-spaced roman</"
 "computeroutput> but add syntax highlighting as follows:"
 msgstr ""
-"ಆಕರ-ಸಂಜ್ಞೆ ಪಟ್ಟಿಗಳನ್ನು <computeroutput>Mono-spaced Roman</computeroutput> "
+"ಆಕರ-ಸಂಜ್ಞೆ ಪಟ್ಟಿಗಳನ್ನು <computeroutput>mono-spaced roman</computeroutput> "
 "ನಲ್ಲಿಯೂ ಸಹ ಬರೆಯಲಾಗುತ್ತದೆ ಆದರೆ ಈ ಕೆಳಗಿನಂತೆ ಪ್ರದರ್ಶಿಸಿ ಹೈಲೈಟ್ ಮಾಡಲಾಗುತ್ತದೆ:"
 
 #. Tag: title
@@ -376,15 +368,14 @@ msgstr ""
 msgid "Note"
 msgstr "ಸೂಚನೆ"
 
-#. Tag: para
-#, fuzzy, no-c-format
+#. Tag: para, no-c-format
 msgid ""
 "Notes are tips, shortcuts or alternative approaches to the task at hand. "
 "Ignoring a note should have no negative consequences, but you might miss out "
 "on a trick that makes your life easier."
 msgstr ""
-"ಸೂಚನೆಯು, ಎದುರಿಗಿರುವ ಕೆಲಸವನ್ನು ನಿಭಾಯಿಸಲು ಬಳಸಬಹುದಾದ ಒಂದು ಸಲಹೆ, ಹತ್ತಿರದ ಪರಿಹಾರ "
-"ಅಥವ ಪರ್ಯಾಯ ಪರಿಹಾರವಾಗಿರುತ್ತದೆ. ಒಂದು ಸೂಚನೆಯನ್ನು ಆಲಕ್ಷಿಸುವುದರಿಮದ ಯಾವುದೆ ಋಣಾತ್ಮಕ "
+"ಸೂಚನೆಯು, ಕೈಯಲ್ಲಿರುವ ಕೆಲಸವನ್ನು ನಿಭಾಯಿಸಲು ಬಳಸಬಹುದಾದ ಒಂದು ಹತ್ತಿರದ ದಾರಿಗಳು "
+"ಅಥವ ಪರ್ಯಾಯ ಪರಿಹಾರವಾಗಿರುತ್ತದೆ. ಸೂಚನೆಯನ್ನು ಆಲಕ್ಷಿಸುವುದರಿಂದ ಯಾವುದೆ ಋಣಾತ್ಮಕ "
 "ಪರಿಣಾಮವಿರುವುದಿಲ್ಲದಿದ್ದರೂ ನಿಮ್ಮ ಕೆಲಸವನ್ನು ಸುಲಭಗೊಳಿಸುವ ಒಂದು ಉಪಾಯದಿಂದ ನೀವು "
 "ವಂಚಿತರಾಗಬಹುದು."
 
@@ -393,26 +384,24 @@ msgstr ""
 msgid "Important"
 msgstr "ಮಹತ್ವವಾದ ಮಾಹಿತಿ"
 
-#. Tag: para
-#, fuzzy, no-c-format
+#. Tag: para, no-c-format
 msgid ""
 "Important boxes detail things that are easily missed: configuration changes "
 "that only apply to the current session, or services that need restarting "
 "before an update will apply. Ignoring a box labeled 'Important' won't cause "
 "data loss but may cause irritation and frustration."
 msgstr ""
-"ಸುಲಭವಾಗಿ ಮರೆತು ಹೋಗಬಹುದಾದ ಪ್ರಮುಖ ಬಾಕ್ಸುಗಳ ವಿವರಗಳು: ಕೇವಲ ಪ್ರಸಕ್ತ ಅಧಿವೇಶನಕ್ಕೆ ಮಾತ್ರ "
+"ಸುಲಭವಾಗಿ ಮರೆತು ಹೋಗಬಹುದಾದ ಪ್ರಮುಖ ಚೌಕಗಳ ವಿವರಗಳು: ಕೇವಲ ಪ್ರಸಕ್ತ ಅಧಿವೇಶನಕ್ಕೆ ಮಾತ್ರ "
 "ಅನ್ವಯಿಸುವ ಸಂರಚನಾ ಬದಲಾವಣೆಗಳು, ಅಥವ ಒಂದು ಅಪ್‌ಡೇಟನ್ನು ಅನ್ವಯಿಸುವ ಮೊದಲು ಮರು "
-"ಆರಂಭಗೊಳಿಸಬೇಕಿರುವ ಸೇವೆಗಳು. ಪ್ರಮುಖ ಬಾಕ್ಸುಗಳನ್ನು ಆಲಕ್ಷಿಸುವುದರಿಂದ ಮಾಹಿತಿಯು "
-"ನಾಶಗೊಳ್ಳುವುದಿಲ್ಲ, ಆದರೆ ಕಿರಿಕಿರಿ ಹಾಗು ನಿರಾಶೆಗೆ ಕಾರಣವಾಗಬಹುದು."
+"ಆರಂಭಗೊಳಿಸಬೇಕಿರುವ ಸೇವೆಗಳು. \"ಪ್ರಮುಖ(Important) ಎಂದು ಗುರುತುಹಾಕಲಾದ ಚೌಕಗಳನ್ನು "
+"ಆಲಕ್ಷಿಸುವುದರಿಂದ ಮಾಹಿತಿಯು ನಾಶಗೊಳ್ಳುವುದಿಲ್ಲ, ಆದರೆ ಕಿರಿಕಿರಿ ಹಾಗು ನಿರಾಶೆಗೆ ಕಾರಣವಾಗಬಹುದು."
 
 #. Tag: title
 #, no-c-format
 msgid "Warning"
 msgstr "ಎಚ್ಚರಿಕಾ ಸೂಚನೆ"
 
-#. Tag: para
-#, fuzzy, no-c-format
+#. Tag: para, no-c-format
 msgid ""
 "Warnings should not be ignored. Ignoring warnings will most likely cause "
 "data loss."
