--- a/publican/datadir/Common_Content/common/pt-BR/Conventions.po
+++ b/publican/datadir/Common_Content/common/pt-BR/Conventions.po
@@ -1,12 +1,12 @@
 # translation of Conventions.po to Portuguese
 # Leticia de Lima <ldelima@redhat.com>, 2007.
-# Glaucia Cintra <gcintra@redhat.com>, 2008.
+# Glaucia Cintra <gcintra@redhat.com>, 2008, 2009.
 msgid ""
 msgstr ""
 "Project-Id-Version: Conventions\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
 "POT-Creation-Date: 2009-12-01T23:44:40\n"
-"PO-Revision-Date: 2008-10-10 17:30+1000\n"
+"PO-Revision-Date: 2009-12-04 09:41+1000\n"
 "Last-Translator: Glaucia Cintra <gcintra@redhat.com>\n"
 "Language-Team: Portuguese <en@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -63,19 +63,19 @@ msgstr ""
 "seguintes:"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "<literal>Mono-spaced Bold</literal>"
-msgstr "Negrito Espaço Único (Mono-spaced Bold)"
+msgstr "<literal>Negrito Espaço Único</literal>  (Mono-spaced Bold)"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Used to highlight system input, including shell commands, file names and "
 "paths. Also used to highlight keycaps and key combinations. For example:"
 msgstr ""
 "Usada para realçar entradas do sistema, incluindo comandos de shell, nomes "
 "de arquivos e caminhos. São também usadas para realçar tecla de Maiúsculas/"
-"Minúsculas e as combinações de teclas. Por exemplo:"
+"Minúsculas e as combinações de teclas. Por exemplo: "
 
 #. Tag: para
 #, no-c-format
@@ -91,23 +91,23 @@ msgstr ""
 "<keycap>Enter</keycap> para executar o comando."
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "The above includes a file name, a shell command and a keycap, all presented "
 "in mono-spaced bold and all distinguishable thanks to context."
 msgstr ""
 "O comando acima inclui um nome de arquivo, um comando de shell e uma tecla "
 "cap, todos apresentados em Negrito Espaço Único (Mono-spaced Bold) e todos "
-"distintos, graças ao conteúdo."
+"distintos, graças ao conteúdo. "
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Key combinations can be distinguished from keycaps by the hyphen connecting "
 "each part of a key combination. For example:"
 msgstr ""
 "As combinações de Teclas podem ser diferenciadas da tecla Caps Lock por um "
-"hífen, conectando cada parte de uma combinação de teclas. Por exemplo:"
+"hífen, conectando cada parte de uma combinação de teclas. Por exemplo: "
 
 #. Tag: para
 #, no-c-format
@@ -128,23 +128,23 @@ msgstr ""
 "keycombo> para voltar para sua sessão do  X-Windows."
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "The first paragraph highlights the particular keycap to press. The second "
 "highlights two key combinations (each a set of three keycaps with each set "
 "pressed simultaneously)."
 msgstr ""
 "A primeira sentença, destaca uma tecla específica a ser pressionada. A "
-"segunda destaca dois conjuntos de três teclas, pressionadas simultaneamente."
+"segunda destaca duas combinações de teclas (cada conjunto de três teclas Caps com cada um pressionado simultaneamente)."
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "If source code is discussed, class names, methods, functions, variable names "
 "and returned values mentioned within a paragraph will be presented as above, "
 "in <literal>mono-spaced bold</literal>. For example:"
 msgstr ""
-"Caso o código fonte seja discutido, serão apresentados os nomes de classe, "
+"Caso o código fonte seja discutido, serão apresentados como acima, os nomes de classe, "
 "métodos, funções, nomes de variantes e valores retornados mencionados em um "
 "parágrafo, em <literal>Negrito de Espaço Único (Mono-spaced Bold)</literal>. "
 "Por exemplo:"
@@ -165,10 +165,10 @@ msgstr ""
 #. Tag: para
 #, no-c-format
 msgid "<application>Proportional Bold</application>"
-msgstr ""
+msgstr "<application>Negrito Proporcional</application>"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "This denotes words or phrases encountered on a system, including application "
 "names; dialog box text; labeled buttons; check-box and radio button labels; "
@@ -177,10 +177,10 @@ msgstr ""
 "Esta representa as palavras e frases encontradas no sistema, incluindo os "
 "nomes de aplicativos, texto de caixa de diálogo, botões rotulados, caixa de "
 "seleção e rótulos de botão de opção, títulos de menus e sub-menus. Por "
-"exemplo:"
+"exemplo: "
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Choose <menuchoice><guimenu>System</guimenu><guisubmenu>Preferences</"
 "guisubmenu><guimenuitem>Mouse</guimenuitem></menuchoice> from the main menu "
@@ -190,7 +190,7 @@ msgid ""
 "primary mouse button from the left to the right (making the mouse suitable "
 "for use in the left hand)."
 msgstr ""
-"Escolha <guimenu>Sistema > Preferências > Mouse</guimenu> a partir da barra "
+"Escolha <menuchoice><guimenu>Sistema </guimenu><guisubmenu> Preferências</guisubmenu><guimenuitem> Mouse</guimenuitem></menuchoice> a partir da barra "
 "de menu para obter <application>Preferências de Mouse</application>. Na aba "
 "<guilabel>Botões</guilabel>, clique na caixa de seleção  <guilabel>Mouse "
 "para mão esquerda</guilabel> e clique em <guibutton>Fechar</guibutton> para "
@@ -198,7 +198,7 @@ msgstr ""
 "assim, mais adequado para o uso do canhoto)."
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "To insert a special character into a <application>gedit</application> file, "
 "choose <menuchoice><guimenu>Applications</guimenu><guisubmenu>Accessories</"
@@ -215,20 +215,16 @@ msgid ""
 "guimenuitem></menuchoice> from the <application>gedit</application> menu bar."
 msgstr ""
 "Para inserir um caractere especial em um arquivo <application>gedit</"
-"application>, escolha <guimenu>Aplicativos > Acessórios > Mapa de "
-"Caracteres</guimenu> a partir da barra de menu principal. Depois, escolha a "
-"opção <guimenu>Pesquisar > Encontrar&hellip;</guimenu> a partir da barra de "
-"menu <application>Mapa de Caracteres </application>, digite o nome do "
+"application>, escolha <menuchoice><guimenu>Aplicativos</guimenu><guisubmenu> Acessórios</guisubmenu><guimenuitem> Mapa de Caracteres</guimenuitem></menuchoice>a partir da barra de menu principal. Depois, escolha a opção<menuchoice><guimenu>Pesquisar</guimenu><guimenuitem> Encontrar&hellip;</guimenuitem></menuchoice>a partir da barra de menu <application>Mapa de Caracteres </application>, digite o nome do "
 "caractere no campo <guilabel>Pesquisar</guilabel> e clique em "
 "<guibutton>Próximo</guibutton>. O caractere que você buscou estará em "
 "destaque na <guilabel>Tabela de Caracteres</guilabel>. Clique novamente "
 "nestes caracteres realçados para colocá-los no campo <guilabel>Texto para "
 "cópia</guilabel> e depois clique em  <guibutton>Copiar</guibutton>. Agora "
-"mude novamente para seu documento e escolha <guimenu>Editar > Colar</"
-"guimenu> a partir da barra de menu do <application>gedit</application>."
+"mude novamente para seu documento e escolha <menuchoice><guimenu>Editar</guimenu><guimenuitem> Colar</guimenuitem></menuchoice> a partir da barra de menu do <application>gedit</application>."
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "The above text includes application names; system-wide menu names and items; "
 "application-specific menu names; and buttons and text found within a GUI "
@@ -239,7 +235,7 @@ msgstr ""
 "sistema, nomes de menu específicos do aplicativo, e botões e textos "
 "encontrados na Interface Gráfica GUI, todos apresentados em Negrito "
 "Proporcional (Proportional Bold) e todos diferenciados de acordo com o  "
-"contexto."
+"contexto. "
 
 #. Tag: para
 #, no-c-format
@@ -253,7 +249,7 @@ msgstr ""
 "Negrito Proporcional (Proportional Bold Italic)</replaceable></application>"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Whether mono-spaced bold or proportional bold, the addition of italics "
 "indicates replaceable or variable text. Italics denotes text you do not "
@@ -263,7 +259,7 @@ msgstr ""
 "Sendo o Negrito Espaço Único (Mono-spaced Bold) ou Negrito Proporcional "
 "(Proportional Bold), os itálicos extras indicam textos substituíveis ou "
 "variáveis. O Itálico denota o texto que você não inseriu literalmente ou "
-"textos exibidos que mudam dependendo das circunstâncias. Por exemplo:"
+"textos exibidos que mudam dependendo das circunstâncias. Por exemplo: "
 
 #. Tag: para
 #, no-c-format
@@ -330,7 +326,7 @@ msgstr ""
 #. Tag: para
 #, no-c-format
 msgid "Publican is a <firstterm>DocBook</firstterm> publishing system."
-msgstr ""
+msgstr "O Publican é um sistema de publicação do <firstterm>DocBook</firstterm>."
 
 #. Tag: title
 #, no-c-format
@@ -338,32 +334,32 @@ msgid "Pull-quote Conventions"
 msgstr "Convenções de Pull-Quote "
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Terminal output and source code listings are set off visually from the "
 "surrounding text."
 msgstr ""
-"Dois tipos de dados, geralmente com múltiplas linhas, são estabelecidos com "
+"Resultado de terminal e listagem de código fonte são definidos visualmente com "
 "base no contexto."
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Output sent to a terminal is set in <computeroutput>mono-spaced roman</"
 "computeroutput> and presented thus:"
 msgstr ""
 "O resultado enviado à um terminal é configurado em <computeroutput>Romano de "
-"Espaço Único (Mono-spaced Roman)</computeroutput> e apresentado assim:"
+"Espaço Único (Mono-spaced Roman)</computeroutput> e apresentado assim: "
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Source-code listings are also set in <computeroutput>mono-spaced roman</"
 "computeroutput> but add syntax highlighting as follows:"
 msgstr ""
 "As listas de código fonte também são configuradas em <computeroutput>Romano "
 "de Espaço Único (Mono-spaced Roman)</computeroutput>, porém são apresentadas "
-"e realçadas como a seguir:"
+"e realçadas como a seguir: "
 
 #. Tag: title
 #, no-c-format
@@ -385,7 +381,7 @@ msgid "Note"
 msgstr "Nota"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Notes are tips, shortcuts or alternative approaches to the task at hand. "
 "Ignoring a note should have no negative consequences, but you might miss out "
@@ -394,7 +390,7 @@ msgstr ""
 "Uma nota é uma dica ou símbolo, ou ainda uma opção alternativa para a tarefa "
 "em questão. Se você ignorar uma nota, provavelmente não resultará em más "
 "consequências, porém poderá deixar passar uma dica importante que tornará "
-"sua vida mais fácil."
+"sua vida mais fácil. "
 
 #. Tag: title
 #, no-c-format
@@ -402,7 +398,7 @@ msgid "Important"
 msgstr "Importante"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Important boxes detail things that are easily missed: configuration changes "
 "that only apply to the current session, or services that need restarting "
@@ -413,7 +409,7 @@ msgstr ""
 "despercebidas: mudanças de configuração que somente se aplicam à sessão "
 "atual, ou serviços que precisam ser reiniciados antes que uma atualização "
 "seja efetuada. Se você ignorar estas caixas importantes, não perderá dados, "
-"porém isto poderá causar irritação e frustração."
+"porém isto poderá causar irritação e frustração. "
 
 #. Tag: title
 #, no-c-format
@@ -421,98 +417,11 @@ msgid "Warning"
 msgstr "Aviso"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Warnings should not be ignored. Ignoring warnings will most likely cause "
 "data loss."
 msgstr ""
 "Um Aviso não deve ser ignorado. Se você ignorar avisos, muito provavelmente "
-"perderá dados."
+"perderá dados. "
 
-#, fuzzy
-#~ msgid ""
-#~ "Note the <guimenu>&#62;</guimenu> shorthand used to indicate traversal "
-#~ "through a menu and its sub-menus. This avoids difficult-to-follow "
-#~ "phrasing such as &#39;Select <guimenuitem>Mouse</guimenuitem> from the "
-#~ "<guimenu>Preferences</guimenu> sub-menu in the <guimenu>System</guimenu> "
-#~ "menu of the main menu bar&#39;."
-#~ msgstr ""
-#~ "Observe o símbolo <guimenu>></guimenu> usado para indicar a passagem "
-#~ "entre um menu e seus sub-menus. Isto acontece para evitar dificuldades de "
-#~ "manuseio do 'Selecione  <guimenuitem>Mouse</guimenuitem> a partir do "
-#~ "submenu  <guimenu>Preferências</guimenu> no menu  <guimenu>Sistema</"
-#~ "guimenu> da barra de menu principal'."
-
-#~ msgid ""
-#~ "When the Apache HTTP Server accepts requests, it dispatches child "
-#~ "processes or threads to handle them. This group of child processes or "
-#~ "threads is known as a <firstterm>server-pool</firstterm>. Under Apache "
-#~ "HTTP Server 2.0, the responsibility for creating and maintaining these "
-#~ "server-pools has been abstracted to a group of modules called "
-#~ "<firstterm>Multi-Processing Modules</firstterm> (<firstterm>MPMs</"
-#~ "firstterm>). Unlike other modules, only one module from the MPM group can "
-#~ "be loaded by the Apache HTTP Server."
-#~ msgstr ""
-#~ "Quando o Servidor Apache HTTP aceita as requisições, ele despacha os "
-#~ "processos filhos ou verificações para que possa manuseá-los. Este grupo "
-#~ "de processos filhos ou verificações é conhecido como um  "
-#~ "<firstterm>server-pool</firstterm>. No Apache HTTP Server 2.0, a "
-#~ "responsabilidade de criar e manter estes server-pools foram obtidas de um "
-#~ "grupo de módulos chamado <firstterm>Multi-Processing Modules</firstterm> "
-#~ "(<firstterm>MPMs</firstterm>). Diferenciando de outros módulos, somente "
-#~ "um módulo do grupo MPM pode ser carregado pelo Servidor Apache HTTP."
-
-#~ msgid "Proportional Bold"
-#~ msgstr "Negrito Proporcional"
-
-#~ msgid ""
-#~ "books        Desktop   documentation  drafts  mss    photos   stuff  svn\n"
-#~ "books_tests  Desktop1  downloads      images  notes  scripts  svgs"
-#~ msgstr ""
-#~ "books        Desktop   documentation  drafts  mss    photos   stuff  svn\n"
-#~ "books_tests  Desktop1  downloads      images  notes  scripts  svgs"
-
-#~ msgid ""
-#~ "package org.jboss.book.jca.ex1;\n"
-#~ "\n"
-#~ "import javax.naming.InitialContext;\n"
-#~ "\n"
-#~ "public class ExClient\n"
-#~ "{\n"
-#~ "   public static void main(String args[]) \n"
-#~ "       throws Exception\n"
-#~ "   {\n"
-#~ "      InitialContext iniCtx = new InitialContext();\n"
-#~ "      Object         ref    = iniCtx.lookup(\"EchoBean\");\n"
-#~ "      EchoHome       home   = (EchoHome) ref;\n"
-#~ "      Echo           echo   = home.create();\n"
-#~ "\n"
-#~ "      System.out.println(\"Created Echo\");\n"
-#~ "\n"
-#~ "      System.out.println(\"Echo.echo('Hello') = \" + echo.echo(\"Hello"
-#~ "\"));\n"
-#~ "   }\n"
-#~ "   \n"
-#~ "}"
-#~ msgstr ""
-#~ "package org.jboss.book.jca.ex1;\n"
-#~ "\n"
-#~ "import javax.naming.InitialContext;\n"
-#~ "\n"
-#~ "public class ExClient\n"
-#~ "{\n"
-#~ "   public static void main(String args[]) \n"
-#~ "       throws Exception\n"
-#~ "   {\n"
-#~ "      InitialContext iniCtx = new InitialContext();\n"
-#~ "      Object         ref    = iniCtx.lookup(\"EchoBean\");\n"
-#~ "      EchoHome       home   = (EchoHome) ref;\n"
-#~ "      Echo           echo   = home.create();\n"
-#~ "\n"
-#~ "      System.out.println(\"Created Echo\");\n"
-#~ "\n"
-#~ "      System.out.println(\"Echo.echo('Hello') = \" + echo.echo(\"Hello"
-#~ "\"));\n"
-#~ "   }\n"
-#~ "   \n"
-#~ "}"
