--- a/publican/datadir/Common_Content/common/ru-RU/Conventions.po
+++ b/publican/datadir/Common_Content/common/ru-RU/Conventions.po
@@ -1,12 +1,13 @@
 # translation of Conventions.po to
 # Yulia Poyarkova <yulia.poyarkova@redhat.com>, 2007, 2008.
+# Yulia <ypoyarko@redhat.com>, 2009.
 msgid ""
 msgstr ""
 "Project-Id-Version: Conventions\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
 "POT-Creation-Date: 2009-12-01T23:44:40\n"
-"PO-Revision-Date: 2008-10-09 13:36+1100\n"
-"Last-Translator: Yulia Poyarkova <yulia.poyarkova@redhat.com>\n"
+"PO-Revision-Date: 2009-12-03 11:10+1100\n"
+"Last-Translator: Yulia <ypoyarko@redhat.com>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -35,11 +36,11 @@ msgid ""
 "displayed. Note: Red Hat Enterprise Linux 5 and later includes the "
 "Liberation Fonts set by default."
 msgstr ""
-"В PDF- и бумажной версиях руководства используются шрифты семейства <ulink "
+"В PDF и бумажной версиях руководства используются шрифты семейства <ulink "
 "url=\"https://fedorahosted.org/liberation-fonts/\">Liberation</ulink>. Эти "
 "же шрифты будут использоваться для отображения HTML-версии, если они "
-"установлены в вашей системе. Замечание: Red Hat Enterprise Linux 5 и более "
-"поздние версии включают в свой состав комплект Liberation по умолчанию."
+"установлены в вашей системе. В противном случае будут использоваться аналогичные шрифты. "
+"Red Hat Enterprise Linux 5 и более поздние версии включают в свой состав комплект Liberation по умолчанию."
 
 #. Tag: title
 #, no-c-format
@@ -57,18 +58,18 @@ msgstr ""
 "далее."
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "<literal>Mono-spaced Bold</literal>"
-msgstr "Моноширинный жирный шрифт"
+msgstr "<literal>Моноширинный жирный шрифт</literal>"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Used to highlight system input, including shell commands, file names and "
 "paths. Also used to highlight keycaps and key combinations. For example:"
 msgstr ""
-"Используется для выделения системного ввода, включая команды оболочки, а "
-"также имена файлов, пути и комбинации ключей. Пример:"
+"Используется для выделения вводимого текста, включая команды оболочки, а "
+"также имен файлов, путей и комбинаций клавиш. Пример:"
 
 #. Tag: para
 #, no-c-format
@@ -79,12 +80,12 @@ msgid ""
 "<keycap>Enter</keycap> to execute the command."
 msgstr ""
 "Чтобы просмотреть содержимое файла <filename>my_next_bestselling_novel</"
-"filename> в текущем рабочем каталоге, в строке приглашения оболочки введите "
+"filename> в текущем каталоге, в строке приглашения оболочки введите "
 "<command>cat my_next_bestselling_novel</command> и нажмите <keycap>Enter</"
 "keycap> для выполнения этой команды."
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "The above includes a file name, a shell command and a keycap, all presented "
 "in mono-spaced bold and all distinguishable thanks to context."
@@ -93,7 +94,7 @@ msgstr ""
 "которые выделены моноширинным жирным шрифтом."
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Key combinations can be distinguished from keycaps by the hyphen connecting "
 "each part of a key combination. For example:"
@@ -118,24 +119,24 @@ msgstr ""
 "keycombo> , чтобы вернуться в сессию X-Windows."
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "The first paragraph highlights the particular keycap to press. The second "
 "highlights two key combinations (each a set of three keycaps with each set "
 "pressed simultaneously)."
 msgstr ""
 "В первом примере жирным шрифтом выделено название отдельной клавиши, во "
-"втором &ndash; комбинаций клавиш."
+"втором &mdash; комбинаций клавиш."
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "If source code is discussed, class names, methods, functions, variable names "
 "and returned values mentioned within a paragraph will be presented as above, "
 "in <literal>mono-spaced bold</literal>. For example:"
 msgstr ""
 "Этим же шрифтом выделяются имена классов, методов, функций, переменных и "
-"возвращаемые значения в составе кода. Пример:"
+"возвращаемые ими значения. Пример:"
 
 #. Tag: para
 #, no-c-format
@@ -152,20 +153,20 @@ msgstr ""
 #. Tag: para
 #, no-c-format
 msgid "<application>Proportional Bold</application>"
-msgstr ""
+msgstr "<application>Пропорциональный жирный</application>"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "This denotes words or phrases encountered on a system, including application "
 "names; dialog box text; labeled buttons; check-box and radio button labels; "
 "menu titles and sub-menu titles. For example:"
 msgstr ""
-"Выделяет системные слова или фразы, что включает имена приложений, текст "
-"диалога, элементы графического интерфейса, названия меню. Пример:"
+"Выделяет системные слова и фразы, что включает имена приложений, текст "
+"диалогов, названия меню, текст кнопок, флажков и других элементов графического интерфейса. Пример:"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Choose <menuchoice><guimenu>System</guimenu><guisubmenu>Preferences</"
 "guisubmenu><guimenuitem>Mouse</guimenuitem></menuchoice> from the main menu "
@@ -175,14 +176,14 @@ msgid ""
 "primary mouse button from the left to the right (making the mouse suitable "
 "for use in the left hand)."
 msgstr ""
-"В главном меню выберите <guimenu>Система > Параметры > Мышь</guimenu> для "
+"В главном меню выберите <menuchoice><guimenu>Система</guimenu><guisubmenu>Параметры</guisubmenu><guimenuitem> Мышь</guimenuitem></menuchoice> для "
 "запуска утилиты <application>Настройки мыши</application>. На вкладке "
 "<guilabel>Кнопки</guilabel> установите флажок <guilabel>Настроить мышь под "
 "левую руку</guilabel> и нажмите кнопку <guibutton>Закрыть</guibutton>, чтобы "
 "настроить мышь для левши."
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "To insert a special character into a <application>gedit</application> file, "
 "choose <menuchoice><guimenu>Applications</guimenu><guisubmenu>Accessories</"
@@ -199,24 +200,24 @@ msgid ""
 "guimenuitem></menuchoice> from the <application>gedit</application> menu bar."
 msgstr ""
 "Чтобы вставить специальный символ в файл <application>gedit</application>, "
-"выберите <guimenu>Приложения > Стандартные > Таблица символов</guimenu>. "
-"Затем в меню выберите <guimenu>Поиск > Поиск&hellip;</guimenu>, введите имя "
+"выберите <menuchoice><guimenu>Приложения</guimenu><guisubmenu>Стандартные</guisubmenu><guimenuitem> Таблица символов</guimenuitem></menuchoice>. "
+"Затем в меню выберите <menuchoice><guimenu>Поиск</guimenu><guimenuitem>Поиск&hellip;</guimenuitem></menuchoice>, введите имя "
 "символа и нажмите кнопку <guibutton>Найти следующее</guibutton>. Найденный "
 "символ будет выделен в <guilabel>таблице символов</guilabel>. Дважды "
 "щелкните на этом символе, чтобы вставить его в поле <guilabel>Текст для "
 "копирования</guilabel> и нажмите кнопку <guibutton>Копировать</guibutton>. "
-"Теперь вернитесь к вашему документу и в меню выберите <guimenu>Правка > "
-"Вставить</guimenu>."
+"Теперь вернитесь к вашему документу и в меню выберите <menuchoice><guimenu>Правка</guimenu><guimenuitem>"
+"Вставить</guimenuitem></menuchoice>."
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "The above text includes application names; system-wide menu names and items; "
 "application-specific menu names; and buttons and text found within a GUI "
 "interface, all presented in proportional bold and all distinguishable by "
 "context."
 msgstr ""
-"Приведенный выше текст содержит имя приложения, названия меню, кнопок и "
+"Приведенный выше текст содержит имя приложения, названия меню, кнопок и текста "
 "элементов графического интерфейса."
 
 #. Tag: para
@@ -231,7 +232,7 @@ msgstr ""
 "application>"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Whether mono-spaced bold or proportional bold, the addition of italics "
 "indicates replaceable or variable text. Italics denotes text you do not "
@@ -267,8 +268,8 @@ msgid ""
 "remount /home</command>."
 msgstr ""
 "Команда <command>mount -o remount <replaceable>файловая_система</"
-"replaceable></command> осуществит повторное монтирование заданной файловой "
-"системы. Например, для <filename>/home</filename> команда будет выглядеть "
+"replaceable></command> повторно подключит заданную файловую "
+"систему. Например, для <filename>/home</filename> команда будет выглядеть "
 "так: <command>mount -o remount /home</command>."
 
 #. Tag: para
@@ -306,7 +307,7 @@ msgstr ""
 #. Tag: para
 #, no-c-format
 msgid "Publican is a <firstterm>DocBook</firstterm> publishing system."
-msgstr ""
+msgstr "Publican &mdash; система публикации <firstterm>DocBook</firstterm>."
 
 #. Tag: title
 #, no-c-format
@@ -314,25 +315,25 @@ msgid "Pull-quote Conventions"
 msgstr "Соглашения по выделению текста"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Terminal output and source code listings are set off visually from the "
 "surrounding text."
 msgstr ""
-"Данные разных типов, содержащие несколько строк, будут отделены от "
+"Вывод экрана и листинг исходного кода будут отделены от "
 "окружающего текста."
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Output sent to a terminal is set in <computeroutput>mono-spaced roman</"
 "computeroutput> and presented thus:"
 msgstr ""
-"Текст, отображаемый на экране, будет отображаться "
-"<computeroutput>моноширинным шрифтом</computeroutput>:"
+"Для отображения текста, который вы увидите на экране, используется "
+"<computeroutput>моноширинный шрифт</computeroutput>:"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Source-code listings are also set in <computeroutput>mono-spaced roman</"
 "computeroutput> but add syntax highlighting as follows:"
@@ -360,7 +361,7 @@ msgid "Note"
 msgstr "Замечание"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Notes are tips, shortcuts or alternative approaches to the task at hand. "
 "Ignoring a note should have no negative consequences, but you might miss out "
@@ -368,7 +369,7 @@ msgid ""
 msgstr ""
 "Замечание обычно содержит дополнительную информацию. Если вы его "
 "проигнорируете, это не критично, но вы можете пропустить совет, который, "
-"возможно, поможет сэкономить время при выполнении заданий в дальнейшем."
+"возможно, поможет сэкономить время при выполнении задания."
 
 #. Tag: title
 #, no-c-format
@@ -376,7 +377,7 @@ msgid "Important"
 msgstr "Важно"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Important boxes detail things that are easily missed: configuration changes "
 "that only apply to the current session, or services that need restarting "
@@ -384,7 +385,7 @@ msgid ""
 "data loss but may cause irritation and frustration."
 msgstr ""
 "На информацию, отмеченную как важную, следует обратить особое внимание. Она "
-"может включать изменения настроек, которые применимы к текущей сессии, или, "
+"может включать изменения настроек текущего сеанса или, "
 "например, перечень служб, которые нужно запустить, прежде чем обновления "
 "вступят в силу. Ознакомление с важной информацией значительно облегчит вашу "
 "работу."
@@ -395,7 +396,7 @@ msgid "Warning"
 msgstr "Предупреждение"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Warnings should not be ignored. Ignoring warnings will most likely cause "
 "data loss."
@@ -403,85 +404,3 @@ msgstr ""
 "Не стоит игнорировать предупреждения, так как они содержат важную "
 "информацию, которая позволит избежать потери данных."
 
-#, fuzzy
-#~ msgid ""
-#~ "Note the <guimenu>&#62;</guimenu> shorthand used to indicate traversal "
-#~ "through a menu and its sub-menus. This avoids difficult-to-follow "
-#~ "phrasing such as &#39;Select <guimenuitem>Mouse</guimenuitem> from the "
-#~ "<guimenu>Preferences</guimenu> sub-menu in the <guimenu>System</guimenu> "
-#~ "menu of the main menu bar&#39;."
-#~ msgstr ""
-#~ "Обратите внимание, что для обозначения переходов между уровнями меню "
-#~ "используется символ <guimenu>></guimenu>."
-
-#~ msgid ""
-#~ "When the Apache HTTP Server accepts requests, it dispatches child "
-#~ "processes or threads to handle them. This group of child processes or "
-#~ "threads is known as a <firstterm>server-pool</firstterm>. Under Apache "
-#~ "HTTP Server 2.0, the responsibility for creating and maintaining these "
-#~ "server-pools has been abstracted to a group of modules called "
-#~ "<firstterm>Multi-Processing Modules</firstterm> (<firstterm>MPMs</"
-#~ "firstterm>). Unlike other modules, only one module from the MPM group can "
-#~ "be loaded by the Apache HTTP Server."
-#~ msgstr ""
-#~ "Когда сервер HTTP Apache принимает запросы, для их обработки выделяются "
-#~ "дочерние процессы или потоки. Группа таких процессов (потоков) известна "
-#~ "как <firstterm>серверный пул</firstterm>. В Apache 2.0 за создание таких "
-#~ "групп отвечают <firstterm>многопроцессорные модули</firstterm>. В отличие "
-#~ "от других модулей, только один модуль из группы может быть загружен "
-#~ "сервером HTTP Apache."
-
-#~ msgid "Proportional Bold"
-#~ msgstr "Пропроциональный жирный шрифт"
-
-#~ msgid ""
-#~ "books        Desktop   documentation  drafts  mss    photos   stuff  svn\n"
-#~ "books_tests  Desktop1  downloads      images  notes  scripts  svgs"
-#~ msgstr ""
-#~ "books        Desktop   documentation  drafts  mss    photos   stuff  svn\n"
-#~ "books_tests  Desktop1  downloads      images  notes  scripts  svgs"
-
-#~ msgid ""
-#~ "package org.jboss.book.jca.ex1;\n"
-#~ "\n"
-#~ "import javax.naming.InitialContext;\n"
-#~ "\n"
-#~ "public class ExClient\n"
-#~ "{\n"
-#~ "   public static void main(String args[]) \n"
-#~ "       throws Exception\n"
-#~ "   {\n"
-#~ "      InitialContext iniCtx = new InitialContext();\n"
-#~ "      Object         ref    = iniCtx.lookup(\"EchoBean\");\n"
-#~ "      EchoHome       home   = (EchoHome) ref;\n"
-#~ "      Echo           echo   = home.create();\n"
-#~ "\n"
-#~ "      System.out.println(\"Created Echo\");\n"
-#~ "\n"
-#~ "      System.out.println(\"Echo.echo('Hello') = \" + echo.echo(\"Hello"
-#~ "\"));\n"
-#~ "   }\n"
-#~ "   \n"
-#~ "}"
-#~ msgstr ""
-#~ "package org.jboss.book.jca.ex1;\n"
-#~ "\n"
-#~ "import javax.naming.InitialContext;\n"
-#~ "\n"
-#~ "public class ExClient\n"
-#~ "{\n"
-#~ "   public static void main(String args[]) \n"
-#~ "       throws Exception\n"
-#~ "   {\n"
-#~ "      InitialContext iniCtx = new InitialContext();\n"
-#~ "      Object         ref    = iniCtx.lookup(\"EchoBean\");\n"
-#~ "      EchoHome       home   = (EchoHome) ref;\n"
-#~ "      Echo           echo   = home.create();\n"
-#~ "\n"
-#~ "      System.out.println(\"Created Echo\");\n"
-#~ "\n"
-#~ "      System.out.println(\"Echo.echo('Hello') = \" + echo.echo(\"Hello"
-#~ "\"));\n"
-#~ "   }\n"
-#~ "   \n"
-#~ "}"
