--- a/publican/datadir/Common_Content/common/zh-CN/Conventions.po
+++ b/publican/datadir/Common_Content/common/zh-CN/Conventions.po
@@ -1,12 +1,12 @@
 # translation of Conventions.po to Simplified Chinese
 # Xi HUANG <xhuang@redhat.com>, 2007.
-# Leah Liu <lliu@redhat.com>, 2008.
+# Leah Liu <lliu@redhat.com>, 2008, 2009.
 msgid ""
 msgstr ""
 "Project-Id-Version: Conventions\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
 "POT-Creation-Date: 2009-12-01T23:44:40\n"
-"PO-Revision-Date: 2008-10-09 10:30+1000\n"
+"PO-Revision-Date: 2009-12-02 21:25+1000\n"
 "Last-Translator: Leah Liu <lliu@redhat.com>\n"
 "Language-Team: Simplified Chinese <zh@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -56,12 +56,12 @@ msgid ""
 msgstr "我们使用四种排版约定突出特定用词和短语。这些约定及其使用环境如下。"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "<literal>Mono-spaced Bold</literal>"
-msgstr "固定粗体"
+msgstr "<literal>单行粗体</literal>"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Used to highlight system input, including shell commands, file names and "
 "paths. Also used to highlight keycaps and key combinations. For example:"
@@ -83,7 +83,7 @@ msgstr ""
 "命令。"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "The above includes a file name, a shell command and a keycap, all presented "
 "in mono-spaced bold and all distinguishable thanks to context."
@@ -92,7 +92,7 @@ msgstr ""
 "现，且全部与上下文有所区别。"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Key combinations can be distinguished from keycaps by the hyphen connecting "
 "each part of a key combination. For example:"
@@ -116,17 +116,17 @@ msgstr ""
 "keycap><keycap>F7</keycap></keycombo> 返回您的 X-Windows 会话。"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "The first paragraph highlights the particular keycap to press. The second "
 "highlights two key combinations (each a set of three keycaps with each set "
 "pressed simultaneously)."
 msgstr ""
-"第一句突出的是要按的特定按键。第二句突出了两个三按键组合，每个组合都要同时按"
+"第一段突出的是要按的特定按键。第二段突出了两个按键组合（每个组合都要同时按）。"
 "下。"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "If source code is discussed, class names, methods, functions, variable names "
 "and returned values mentioned within a paragraph will be presented as above, "
@@ -150,36 +150,37 @@ msgstr ""
 #. Tag: para
 #, no-c-format
 msgid "<application>Proportional Bold</application>"
-msgstr ""
+msgstr "<application>比例粗体</application>"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "This denotes words or phrases encountered on a system, including application "
 "names; dialog box text; labeled buttons; check-box and radio button labels; "
 "menu titles and sub-menu titles. For example:"
 msgstr ""
 "这是指在系统中遇到的文字或者短语，其中包括应用程序名称、对话框文本、标记的按"
-"钮、复选框以及单选按钮标签、菜单标题以及子菜单标题。例如：在主菜单栏中"
+"钮、复选框以及单选按钮标签、菜单标题以及子菜单标题。例如："
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Choose <menuchoice><guimenu>System</guimenu><guisubmenu>Preferences</"
 "guisubmenu><guimenuitem>Mouse</guimenuitem></menuchoice> from the main menu "
 "bar to launch <application>Mouse Preferences</application>. In the "
 "<guilabel>Buttons</guilabel> tab, click the <guilabel>Left-handed mouse</"
-"guilabel> check box and click <guibutton>Close</guibutton> to switch the "
+"guilabel> check box and click <guibutton>Close to switch the "
 "primary mouse button from the left to the right (making the mouse suitable "
 "for use in the left hand)."
 msgstr ""
-"选择 <guimenu> 系统 > 属性 > 鼠标</guimenu>启动 <application>Mouse "
-"Preferences</application>。在 <guilabel>按钮</guilabel> 标签中点击<guilabel>"
-"惯用左手鼠标</guilabel> 复选框并点击 <guibutton>关闭</guibutton> 将首选鼠标按"
-"键从左切换到右（让鼠标适合左手使用）。"
+"在主菜单条中选择<menuchoice><guimenu>「系统」</guimenu><guisubmenu>「首选项」</"
+"guisubmenu><guimenuitem>「鼠标」</guimenuitem></menuchoice>启动  <application>鼠标首选项</application>。在"
+"<guilabel>「按钮」</guilabel>标签中点击<guilabel>「惯用左手鼠标」 </"
+"guilabel>复选框并点击  <guibutton>关闭</guibutton>切换到"
+"主鼠标按钮从左向右（让鼠标适合左手使用）。"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "To insert a special character into a <application>gedit</application> file, "
 "choose <menuchoice><guimenu>Applications</guimenu><guisubmenu>Accessories</"
@@ -195,24 +196,19 @@ msgid ""
 "document and choose <menuchoice><guimenu>Edit</guimenu><guimenuitem>Paste</"
 "guimenuitem></menuchoice> from the <application>gedit</application> menu bar."
 msgstr ""
-"要在 <application>gedit</application> 文件中插入一个特殊字符，请在主菜单栏中"
-"选择 <guimenu>应用程序 > 附件 > 字符映射表</guimenu>。下面请在<application>字"
-"符映射表</application> 主菜单栏中选择 <guimenu>搜索 > 查找&hellip;</"
-"guimenu>，在<guilabel>搜索</guilabel> 字段输入字符名称，并点击 <guibutton>下"
-"一个</guibutton>。那么会在 <guilabel>字符表</guilabel>中突出您看到的字符。双"
-"击该字符将其放置于 <guilabel>要复制的文本</guilabel>字段并点击 <guibutton>复"
-"制</guibutton> 按钮。现在返回您的文档，在 <application>gedit</application> 菜"
-"单栏选择 <guimenu>编辑 > 粘贴</guimenu>。"
+"要在 <application>gedit</application> 文件中插入一个特殊字符，请在主菜单中选择"
+"<menuchoice><guimenu>「应用程序」</guimenu><guisubmenu>「附件」</"
+"guisubmenu><guimenuitem>「字符映射表」</guimenuitem></menuchoice>。下一步在 <application>字符映射表</application>菜单条中选择<menuchoice><guimenu>「搜索」</guimenu><guimenuitem>「查找」</guimenuitem></menuchoice>，在<guilabel>「搜索」</guilabel>字段输入字符名称并点击 <guibutton>下一个</guibutton> 按钮。您输入的字符会在<guilabel>「字符表」</guilabel>中突出出来。双击这个突出的字符将其放入<guilabel>「要复制的文本」</guilabel>字段，然后点击 <guibutton>复制</guibutton> 按钮。现在切换回您的文档并在 <application>gedit</application> 菜单条中选择<menuchoice><guimenu>「编辑」</guimenu><guimenuitem>「粘贴」</guimenuitem></menuchoice>。"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "The above text includes application names; system-wide menu names and items; "
 "application-specific menu names; and buttons and text found within a GUI "
 "interface, all presented in proportional bold and all distinguishable by "
 "context."
 msgstr ""
-"以上文本包括应用程序名称、系统范围菜单名称及项目、特定应用程序菜单名称以及按"
+"以上文本包括应用程序名称、系统范围菜单名称及项目、应用程序特定菜单名称以及按"
 "钮和 GUI 界面中的文本，所有都以比例粗体出现并与上下文区别。"
 
 #. Tag: para
@@ -226,14 +222,14 @@ msgstr ""
 "<application><replaceable>比例粗斜体 </replaceable></application>"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Whether mono-spaced bold or proportional bold, the addition of italics "
 "indicates replaceable or variable text. Italics denotes text you do not "
 "input literally or displayed text that changes depending on circumstance. "
 "For example:"
 msgstr ""
-"无论固定粗体或者比例粗体，附加的斜体表明是可替换或者变量文本。斜体表示那些不"
+"无论固定粗体或者比例粗体，附加的斜体表示是可替换或者变量文本。斜体表示那些不"
 "直接输入的文本或者那些根据环境改变的文本。例如："
 
 #. Tag: para
@@ -290,13 +286,12 @@ msgstr ""
 msgid ""
 "Aside from standard usage for presenting the title of a work, italics "
 "denotes the first use of a new and important term. For example:"
-msgstr ""
-"不考虑工作中显示标题的标准用法，斜体表示第一次使用某个新且重要的用语。例如："
+msgstr "不考虑工作中显示标题的标准用法，斜体表示第一次使用某个新且重要的用语。例如："
 
 #. Tag: para
 #, no-c-format
 msgid "Publican is a <firstterm>DocBook</firstterm> publishing system."
-msgstr ""
+msgstr "Publican 是一个  <firstterm>DocBook</firstterm> 发布系统。"
 
 #. Tag: title
 #, no-c-format
@@ -304,29 +299,28 @@ msgid "Pull-quote Conventions"
 msgstr "抬升式引用约定"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Terminal output and source code listings are set off visually from the "
 "surrounding text."
-msgstr "二，一般是多行，数据输入要明显与周围文本分开。"
+msgstr "终端输出和源代码列表要与周围文本明显分开。"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Output sent to a terminal is set in <computeroutput>mono-spaced roman</"
 "computeroutput> and presented thus:"
 msgstr ""
-"将发送到终端的输入设置为 <computeroutput>Mono-spaced Roman</computeroutput> "
+"将发送到终端的输出设定为 <computeroutput>Mono-spaced Roman</computeroutput> "
 "并显示为："
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Source-code listings are also set in <computeroutput>mono-spaced roman</"
 "computeroutput> but add syntax highlighting as follows:"
 msgstr ""
-"源码列表也设为 <computeroutput>Mono-spaced Roman</computeroutput>，但以下面的"
-"形式出现和突出："
+"源码列表也设为 <computeroutput>Mono-spaced Roman</computeroutput>，但添加下面突出的语法："
 
 #. Tag: title
 #, no-c-format
@@ -346,13 +340,13 @@ msgid "Note"
 msgstr "备注"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Notes are tips, shortcuts or alternative approaches to the task at hand. "
 "Ignoring a note should have no negative consequences, but you might miss out "
 "on a trick that makes your life easier."
 msgstr ""
-"备注是对手头任务的提示、捷径或者另外的解决方法。忽略提示不会造成负面后果，但"
+"备注是对手头任务的提示、捷径或者备选的解决方法。忽略提示不会造成负面后果，但"
 "您可能会错过一个更省事的诀窍。"
 
 #. Tag: title
@@ -361,7 +355,7 @@ msgid "Important"
 msgstr "重要"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Important boxes detail things that are easily missed: configuration changes "
 "that only apply to the current session, or services that need restarting "
@@ -369,7 +363,7 @@ msgid ""
 "data loss but may cause irritation and frustration."
 msgstr ""
 "重要框中的内容是那些容易错过的事情：配置更改只可用于当前会话，或者在应用更新"
-"前要重启服务。忽略重要框中的内容不会造成数据丢失但可能会让您抓狂。"
+"前要重启的服务。忽略‘重要’框中的内容不会造成数据丢失但可能会让您抓狂。"
 
 #. Tag: title
 #, no-c-format
@@ -377,92 +371,9 @@ msgid "Warning"
 msgstr "警告"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Warnings should not be ignored. Ignoring warnings will most likely cause "
 "data loss."
 msgstr "警告是不应被忽略的。忽略警告信息很可能导致数据丢失。"
 
-#, fuzzy
-#~ msgid ""
-#~ "Note the <guimenu>&#62;</guimenu> shorthand used to indicate traversal "
-#~ "through a menu and its sub-menus. This avoids difficult-to-follow "
-#~ "phrasing such as &#39;Select <guimenuitem>Mouse</guimenuitem> from the "
-#~ "<guimenu>Preferences</guimenu> sub-menu in the <guimenu>System</guimenu> "
-#~ "menu of the main menu bar&#39;."
-#~ msgstr ""
-#~ "请注意在菜单及其子菜单中用来表示穿越的 <guimenu>></guimenu>。这是为了避免"
-#~ "使用比较复杂的方法，比如‘在主菜单的 <guimenu>系统</guimenu> 菜单中的 "
-#~ "<guimenu>首选项</guimenu> 菜单中选择<guimenuitem>鼠标</guimenuitem>’。 "
-
-#~ msgid ""
-#~ "When the Apache HTTP Server accepts requests, it dispatches child "
-#~ "processes or threads to handle them. This group of child processes or "
-#~ "threads is known as a <firstterm>server-pool</firstterm>. Under Apache "
-#~ "HTTP Server 2.0, the responsibility for creating and maintaining these "
-#~ "server-pools has been abstracted to a group of modules called "
-#~ "<firstterm>Multi-Processing Modules</firstterm> (<firstterm>MPMs</"
-#~ "firstterm>). Unlike other modules, only one module from the MPM group can "
-#~ "be loaded by the Apache HTTP Server."
-#~ msgstr ""
-#~ "当 Apache HTTP 服务器接受请求时，它会分派子进程或者线程对其进行处理。这组"
-#~ "子进程或者线程就是 <firstterm>服务器池（server-pool）</firstterm>。在 "
-#~ "Apache HTTP 服务器 2.0 中，创建和维护服务器池的任务是由名为 <firstterm>多"
-#~ "进程模块（Multi-Processing Modules）</firstterm>（<firstterm>MPMs</"
-#~ "firstterm>）的模块负责的。和其它模块不同，Apache HTTP 服务器只能载入 MPM "
-#~ "组中的一个模块。"
-
-#~ msgid "Proportional Bold"
-#~ msgstr "比例宽度粗体"
-
-#~ msgid ""
-#~ "books        Desktop   documentation  drafts  mss    photos   stuff  svn\n"
-#~ "books_tests  Desktop1  downloads      images  notes  scripts  svgs"
-#~ msgstr ""
-#~ "books        Desktop   documentation  drafts  mss    photos   stuff  svn\n"
-#~ "books_tests  Desktop1  downloads      images  notes  scripts  svgs"
-
-#~ msgid ""
-#~ "package org.jboss.book.jca.ex1;\n"
-#~ "\n"
-#~ "import javax.naming.InitialContext;\n"
-#~ "\n"
-#~ "public class ExClient\n"
-#~ "{\n"
-#~ "   public static void main(String args[]) \n"
-#~ "       throws Exception\n"
-#~ "   {\n"
-#~ "      InitialContext iniCtx = new InitialContext();\n"
-#~ "      Object         ref    = iniCtx.lookup(\"EchoBean\");\n"
-#~ "      EchoHome       home   = (EchoHome) ref;\n"
-#~ "      Echo           echo   = home.create();\n"
-#~ "\n"
-#~ "      System.out.println(\"Created Echo\");\n"
-#~ "\n"
-#~ "      System.out.println(\"Echo.echo('Hello') = \" + echo.echo(\"Hello"
-#~ "\"));\n"
-#~ "   }\n"
-#~ "   \n"
-#~ "}"
-#~ msgstr ""
-#~ "package org.jboss.book.jca.ex1;\n"
-#~ "\n"
-#~ "import javax.naming.InitialContext;\n"
-#~ "\n"
-#~ "public class ExClient\n"
-#~ "{\n"
-#~ "   public static void main(String args[]) \n"
-#~ "       throws Exception\n"
-#~ "   {\n"
-#~ "      InitialContext iniCtx = new InitialContext();\n"
-#~ "      Object         ref    = iniCtx.lookup(\"EchoBean\");\n"
-#~ "      EchoHome       home   = (EchoHome) ref;\n"
-#~ "      Echo           echo   = home.create();\n"
-#~ "\n"
-#~ "      System.out.println(\"Created Echo\");\n"
-#~ "\n"
-#~ "      System.out.println(\"Echo.echo('Hello') = \" + echo.echo(\"Hello"
-#~ "\"));\n"
-#~ "   }\n"
-#~ "   \n"
-#~ "}"
