--- a/publican/datadir/Common_Content/common/as-IN/Conventions.po
+++ b/publican/datadir/Common_Content/common/as-IN/Conventions.po
@@ -1,18 +1,18 @@
 # translation of Conventions.po to Assamese
-# Amitakhya Phukan <aphukan@fedoraproject.org>, 2007.
+# Amitakhya Phukan <aphukan@fedoraproject.org>, 2007, 2009.
 # Amitakhya Phukan <aphukan@redhat.com>, 2008.
 msgid ""
 msgstr ""
 "Project-Id-Version: Conventions\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
 "POT-Creation-Date: 2009-12-01T23:44:40\n"
-"PO-Revision-Date: 2008-10-07 17:41+0530\n"
-"Last-Translator: Amitakhya Phukan <aphukan@redhat.com>\n"
-"Language-Team: Assamese\n"
+"PO-Revision-Date: 2009-12-02 12:21+0530\n"
+"Last-Translator: Amitakhya Phukan <aphukan@fedoraproject.org>\n"
+"Language-Team: Assamese <>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.11.4\n"
+"X-Generator: Lokalize 1.0\n"
 "Plural-Forms: nplurals=2; plural=(n!=1)\n"
 
 #. Tag: title
@@ -61,19 +61,17 @@ msgstr ""
 "নিৰ্দ্দিষ্ট শব্দ আৰু খণ্ডবাক্যলৈ আকৰ্ষণ কৰিবলৈ চাৰিটা অক্ষৰমূদ্ৰণশালৰ আচাৰ বিধি ব্যৱহাৰ "
 "কৰা হয় । এই আচাৰ বিধি, আৰু সিহঁতক প্ৰয়োগ কৰাৰ পৰিস্থিতি, এনে ধৰণৰ ।"
 
-#. Tag: para
-#, fuzzy, no-c-format
+#. Tag: para, no-c-format
 msgid "<literal>Mono-spaced Bold</literal>"
-msgstr "Mono-spaced Bold"
+msgstr "<literal>Mono-spaced Bold</literal>"
 
-#. Tag: para
-#, fuzzy, no-c-format
+#. Tag: para, no-c-format
 msgid ""
 "Used to highlight system input, including shell commands, file names and "
 "paths. Also used to highlight keycaps and key combinations. For example:"
 msgstr ""
-"শ্বেল আদেশ নথিপত্ৰ নাম আৰু পথৰ সৈতে, ব্যৱস্থাপ্ৰণালীৰ নিবেশ আলোকপাত কৰিবলৈ, ব্যৱহাৰ "
-"কৰা হয় । ইয়াৰ উপৰিও key caps আৰু key-combinations আলোকপাত কৰিবলৈ ব্যৱহাৰ কৰা "
+"শ্বেল আদেশ, নথিপত্ৰ নাম আৰু পথৰ সৈতে, ব্যৱস্থাপ্ৰণালীৰ নিবেশ আলোকপাত কৰিবলৈ, ব্যৱহাৰ "
+"কৰা হয় । ইয়াৰ উপৰিও keycaps আৰু key combinations আলোকপাত কৰিবলৈ ব্যৱহাৰ কৰা "
 "হয় । যেনে:"
 
 #. Tag: para
@@ -88,23 +86,21 @@ msgstr ""
 "বিষয়বস্তু চাবলৈ, শ্বেল প্ৰ'মপ্টত <command>cat my_next_bestselling_novel</command> "
 "লিখকআৰু আদেশ চলাবলৈ <keycap>Enter</keycap> টিপক ।"
 
-#. Tag: para
-#, fuzzy, no-c-format
+#. Tag: para, no-c-format
 msgid ""
 "The above includes a file name, a shell command and a keycap, all presented "
 "in mono-spaced bold and all distinguishable thanks to context."
 msgstr ""
-"ওপৰত এটা নথিপত্ৰৰ নাম, এটা শ্বেল আদেশ আৰু এটা key cap আছে, সকলো Mono-spaced "
-"Bold ত আৰু সকলো পৃথক, প্ৰসঙ্গৰ কাৰণে । "
+"ওপৰত এটা নথিপত্ৰৰ নাম, এটা শ্বেল আদেশ আৰু এটা keycap আছে, সকলো mono-spaced bold ত আৰু "
+"সকলো পৃথক প্ৰসঙ্গৰ কাৰণে । "
 
-#. Tag: para
-#, fuzzy, no-c-format
+#. Tag: para, no-c-format
 msgid ""
 "Key combinations can be distinguished from keycaps by the hyphen connecting "
 "each part of a key combination. For example:"
 msgstr ""
-"Key-combinations সমূহক key caps ৰ পৰা বেলেগ বুলি চিনাকি কৰিব পাৰি key-"
-"combination ৰ প্ৰত্যেকটো অংশৰ মাজত থকা এটা হাইফেনৰসংযোগেৰে । যেনে:"
+"Key combinations সমূহক keycaps ৰ পৰা বেলেগ বুলি চিনাকি কৰিব পাৰি key combination ৰ "
+"প্ৰত্যেকটো অংশৰ মাজত থকা এটা হাইফেনৰ সংযোগেৰে । যেনে:"
 
 #. Tag: para
 #, no-c-format
@@ -124,18 +120,16 @@ msgstr ""
 "যাবলৈ <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F7</"
 "keycap></keycombo> টিপক । "
 
-#. Tag: para
-#, fuzzy, no-c-format
+#. Tag: para, no-c-format
 msgid ""
 "The first paragraph highlights the particular keycap to press. The second "
 "highlights two key combinations (each a set of three keycaps with each set "
 "pressed simultaneously)."
 msgstr ""
-"প্ৰথম বাক্যই টিপিব লগা নিৰ্দ্দিষ্ট key cap দেখুৱাই । দ্বিতীয় বাক্যই তিনিটা key caps "
-"ৰ দুটা গোটক আলোকপাত কৰে, প্ৰত্যেক গোটক একেলগে টিপিব লাগে ।"
+"প্ৰথম পৰিচ্ছেদে টিপিব লগা নিৰ্দ্দিষ্ট keycap দেখুৱাই । দ্বিতীটোৱে দুটা key combinations "
+"ৰ কথা কয় (প্ৰত্যেক এটা তিনিটা keycaps ৰ গোট য'ত প্ৰত্যেক গোটক একেলগে টিপা হয় ) ।"
 
-#. Tag: para
-#, fuzzy, no-c-format
+#. Tag: para, no-c-format
 msgid ""
 "If source code is discussed, class names, methods, functions, variable names "
 "and returned values mentioned within a paragraph will be presented as above, "
@@ -143,7 +137,7 @@ msgid ""
 msgstr ""
 "উৎসৰ কোডৰ কথা আলোচনা কৰিলে, এটা পৰিচ্ছেদত থকা class names, methods, "
 "functions, variable names আৰু returned values ওপৰৰ ধৰণেদেখুওৱা হ'ব, "
-"<literal>Mono-spaced Bold</literal> ত । যেনে:"
+"<literal>mono-spaced bold</literal> ত । যেনে:"
 
 #. Tag: para
 #, no-c-format
@@ -160,10 +154,9 @@ msgstr ""
 #. Tag: para
 #, no-c-format
 msgid "<application>Proportional Bold</application>"
-msgstr ""
+msgstr "<application>Proportional Bold</application>"
 
-#. Tag: para
-#, fuzzy, no-c-format
+#. Tag: para, no-c-format
 msgid ""
 "This denotes words or phrases encountered on a system, including application "
 "names; dialog box text; labeled buttons; check-box and radio button labels; "
@@ -171,10 +164,9 @@ msgid ""
 msgstr ""
 "এটা ব্যৱস্থাপ্ৰণালীত থকা শব্দ আৰু খণ্ডবাক্যৰ কথা কয়, আৰু তাত অনুপ্ৰয়োগৰ নাম;সম্বাদ "
 "বাকছৰ লিপি; লেবেল থকা বুটাম; ছেক বাকছ আৰু ৰেডিঅ' বুটামৰ লেবেল;মেনুৰ শিৰোনাম আৰু "
-"ছাব-মেনুৰ শিৰোনাম থাকে । যেনে:"
+"উপ-মেনুৰ শিৰোনাম থাকে । যেনে:"
 
-#. Tag: para
-#, fuzzy, no-c-format
+#. Tag: para, no-c-format
 msgid ""
 "Choose <menuchoice><guimenu>System</guimenu><guisubmenu>Preferences</"
 "guisubmenu><guimenuitem>Mouse</guimenuitem></menuchoice> from the main menu "
@@ -184,14 +176,15 @@ msgid ""
 "primary mouse button from the left to the right (making the mouse suitable "
 "for use in the left hand)."
 msgstr ""
-"নিৰ্ব্বাচন কৰক <guimenu>ব্যৱস্থাপ্ৰণালী > পছন্দ > মাউছ</guimenu> মূখ্য তালিকাৰ বাৰৰ "
-"পৰা <application>মাউছৰ পছন্দ</application> আৰম্ভ কৰিবলৈ । <guilabel>বুটাম</"
-"guilabel> টেবত, <guilabel>Left-handed mouse</guilabel> ছেক বাকছ টিপক আৰু "
-"<guibutton>বন্ধ কৰক</guibutton> টিপক মূখ্য মাউছ বুটামক বাওঁৰ পৰা সোঁ-ফাললৈসলনি "
+"মূখ্য তালিকাৰ বাৰৰ পৰা <menuchoice><guimenu>ব্যৱস্থাপ্ৰণালী </guimenu><guisubmenu> "
+"পছন্দ </"
+"guisubmenu><guimenuitem> মাউছ</guimenuitem></menuchoice> নিৰ্ব্বাচন কৰক <application>"
+"মাউছৰ পছন্দ</application> আৰম্ভ কৰিবলৈ । <guilabel>বুটাম</guilabel> টেবত, <guilabel>"
+"বাওঁ-হতীয়া মাউছ</guilabel> ছেক বাকছ টিপক আৰু <guibutton>বন্ধ কৰক</guibutton> টিপক মূখ্য "
+"মাউছ বুটামক বাওঁৰ পৰা সোঁ-ফাললৈ সলনি "
 "কৰিবলৈ (বাওঁ হাতেৰে মাউছৰ ব্যৱহাৰ কৰা সুবিধা জনক কৰিবলৈ) ।"
 
-#. Tag: para
-#, fuzzy, no-c-format
+#. Tag: para, no-c-format
 msgid ""
 "To insert a special character into a <application>gedit</application> file, "
 "choose <menuchoice><guimenu>Applications</guimenu><guisubmenu>Accessories</"
@@ -207,20 +200,22 @@ msgid ""
 "document and choose <menuchoice><guimenu>Edit</guimenu><guimenuitem>Paste</"
 "guimenuitem></menuchoice> from the <application>gedit</application> menu bar."
 msgstr ""
-"এটা বিশেষ আখৰ এটা <application>gedit</application> নথিপত্ৰ ভৰাবলৈ, মূখ্য "
-"তালিকাৰ বাৰৰ পৰা <guimenu>অনুপ্ৰয়োগ > অতিৰিক্ত > কেৰেক্টাৰ মেৰ</guimenu> "
-"নিৰ্ব্বাচন কৰক । ইয়াৰ পিছত, choose <guimenu>বিচাৰক > Find&hellip;</guimenu> "
-"<application>কেৰেক্টাৰ মেপ</application> মেনু বাৰৰ পৰা নিৰ্ব্বাচন কৰক, "
-"<guilabel>Search</guilabel> ক্ষেত্ৰত আখৰৰ নাম লিখকআৰু <guibutton>পিছলৈ</"
+"এটা বিশেষ আখৰক এটা <application>gedit</application> নথিপত্ৰ ভৰাবলৈ, মূখ্য "
+"তালিকাৰ বাৰৰ পৰা <menuchoice><guimenu>অনুপ্ৰয়োগ </guimenu><guisubmenu> অতিৰিক্ত </"
+"guisubmenu><guimenuitem> কেৰেক্টাৰ মেপ</guimenuitem></menuchoice> "
+"নিৰ্ব্বাচন কৰক । ইয়াৰ পিছত, <application>কেৰেক্টাৰ মেপ</application> মেনু বাৰৰ পৰা <"
+"menuchoice><guimenu> বিচাৰক </guimenu><guimenuitem> Find&hellip;</guimenuitem><"
+"/menuchoice> "
+"নিৰ্ব্বাচন কৰক, <guilabel>বিচাৰক</guilabel> ক্ষেত্ৰত আখৰৰ নাম লিখকআৰু <guibutton>পিছলৈ</"
 "guibutton> টিপক । <guilabel>কেৰেক্টাৰ টেবুল</guilabel> ত আপুনি বিচৰা আখৰক  "
 "আলোকপাত কৰা হ'ব ।<guilabel>নকল কৰিব লগা লিপি</guilabel> ক্ষেত্ৰত এই আখৰ "
-"ৰাখিবলৈ আলোকপাত কৰা এই আখৰক ডাবুল-ক্লিক কৰকআৰু তাৰ পিছত  <guibutton>নকল কৰক</"
-"guibutton> বুটাম টিপক । এতিয়া আপোনাৰ আলেখ্যনলৈ ওভতি আহক আৰু <guimenu>সম্পাদন কৰক "
-"> আঠা লগাওক</guimenu> নিৰ্ব্বাচন কৰক <application>gedit</application> তালিকা "
-"বাৰৰ পৰা ।"
+"ৰাখিবলৈ আলোকপাত কৰা এই আখৰক ডাবুল-ক্লিক কৰক আৰু তাৰ পিছত  <guibutton>নকল কৰক</"
+"guibutton> বুটাম টিপক । এতিয়া আপোনাৰ আলেখ্যনলৈ ওভতি আহক আৰু  <application>gedit<"
+"/application> তালিকা "
+"বাৰৰ পৰা <menuchoice><guimenu>সম্পাদন কৰক </guimenu><guimenuitem> আঠা লগাওক</"
+"guimenuitem></menuchoice> নিৰ্ব্বাচন কৰক ।"
 
-#. Tag: para
-#, fuzzy, no-c-format
+#. Tag: para, no-c-format
 msgid ""
 "The above text includes application names; system-wide menu names and items; "
 "application-specific menu names; and buttons and text found within a GUI "
@@ -229,7 +224,7 @@ msgid ""
 msgstr ""
 "ওপৰৰ লিপিত অনুপ্ৰয়োগৰ নাম; ব্যৱস্থাপ্ৰণালৰ ব্যাপকতালিকাৰ নাম আৰু বস্তু ; অনুপ্ৰয়োগ "
 "বিশেষ তালিকাৰ নাম; আৰু বুটাম আৰু এটা GUI সংযোগমাধ্যমত থকালিপি আছে, সকলোকে "
-"Proportional Bold ত দেখুওৱা হৈছে আৰু সকলোকেসন্দৰ্ভৰে পৃথক কৰিব পাৰি ।"
+"proportional bold ত দেখুওৱা হৈছে আৰু সকলোকে সন্দৰ্ভৰ মতে পৃথক কৰিব পাৰি ।"
 
 #. Tag: para
 #, no-c-format
@@ -242,15 +237,14 @@ msgstr ""
 "<application><replaceable>Proportional Bold Italic</replaceable></"
 "application>"
 
-#. Tag: para
-#, fuzzy, no-c-format
+#. Tag: para, no-c-format
 msgid ""
 "Whether mono-spaced bold or proportional bold, the addition of italics "
 "indicates replaceable or variable text. Italics denotes text you do not "
 "input literally or displayed text that changes depending on circumstance. "
 "For example:"
 msgstr ""
-"Mono-spaced Bold বা Proportional Bold হ'লে, Italics যোগ কৰিলে সলনি কৰিব পৰা "
+"mono-spaced bold বা proportional bold এই হওক, italics যোগ কৰিলে সলনি কৰিব পৰা "
 "বা বিভিন্ন মান থকা লিপি বুজায় । Italics আপুনি নিবেশ নকৰা লিপি বুজায় বা পৰিস্থিতিৰ "
 "মতে সলনি হোৱা লিপি বুজায় । যেনে:"
 
@@ -318,37 +312,33 @@ msgstr ""
 #. Tag: para
 #, no-c-format
 msgid "Publican is a <firstterm>DocBook</firstterm> publishing system."
-msgstr ""
+msgstr "Publican এটা <firstterm>DocBook</firstterm> প্ৰকাশনৰ প্ৰণালী ।"
 
 #. Tag: title
 #, no-c-format
 msgid "Pull-quote Conventions"
 msgstr "Pull-quote আচাৰ বিধি"
 
-#. Tag: para
-#, fuzzy, no-c-format
+#. Tag: para, no-c-format
 msgid ""
 "Terminal output and source code listings are set off visually from the "
 "surrounding text."
-msgstr ""
-"দুটা, সাধাৰণতে multi-line, তথ্যৰ ধৰণক ওচৰৰ লিপিৰ পৰা প্ৰত্যক্ষ ভাবে আঁতৰুৱা হয় ।"
+msgstr "টাৰ্মিনেলৰ নিৰ্গম আৰু উৎসৰ কোডৰ তালিকা ওচৰৰ লিপিৰ পৰা প্ৰত্যক্ষ ভাবে আঁতৰুৱা হয় ।"
 
-#. Tag: para
-#, fuzzy, no-c-format
+#. Tag: para, no-c-format
 msgid ""
 "Output sent to a terminal is set in <computeroutput>mono-spaced roman</"
 "computeroutput> and presented thus:"
 msgstr ""
-"এটা টাৰ্মিনেললৈ আগবঢ়োৱা নিৰ্গম <computeroutput>Mono-spaced Roman</"
+"এটা টাৰ্মিনেললৈ আগবঢ়োৱা নিৰ্গম <computeroutput>mono-spaced roman</"
 "computeroutput> ত নিৰ্ধাৰিত কৰা হয় আৰু এনেধৰণে দেখুওৱা হয়: "
 
-#. Tag: para
-#, fuzzy, no-c-format
+#. Tag: para, no-c-format
 msgid ""
 "Source-code listings are also set in <computeroutput>mono-spaced roman</"
 "computeroutput> but add syntax highlighting as follows:"
 msgstr ""
-"উৎস-কোডৰ তালিকাও <computeroutput>Mono-spaced Roman</computeroutput> ত "
+"উৎস-কোডৰ তালিকাও <computeroutput>mono-spaced roman</computeroutput> ত "
 "নিৰ্ধাৰিত কৰা হয় কিন্তু এনে ধৰণে দেখুৱা আৰু আলোকপাত কৰা হয়:"
 
 #. Tag: title
@@ -370,14 +360,13 @@ msgstr ""
 msgid "Note"
 msgstr "টোকা"
 
-#. Tag: para
-#, fuzzy, no-c-format
+#. Tag: para, no-c-format
 msgid ""
 "Notes are tips, shortcuts or alternative approaches to the task at hand. "
 "Ignoring a note should have no negative consequences, but you might miss out "
 "on a trick that makes your life easier."
 msgstr ""
-"হাতত থকা কামৰ এটা সঙ্কেত, চমু পথ বা এটা বৈকল্পিক প্ৰৱেশ হৈছে এটা টোকা । এটা টোকা "
+"সঙ্কেত, চমু পথ বা কাম সম্পূৰ্ণ এটা বৈকল্পিক প্ৰৱেশ হৈছে এটা টোকা । এটা টোকা "
 "আওকাণ কৰিলে কোনো ক্ষতি হ'ব নালাগে, কিন্তু আপোনাৰ জীৱন সহজ কৰা এটা কায়দা আপুনি "
 "এৰি যাব পাৰে ।"
 
@@ -386,8 +375,7 @@ msgstr ""
 msgid "Important"
 msgstr "গুৰুত্বপূৰ্ণ"
 
-#. Tag: para
-#, fuzzy, no-c-format
+#. Tag: para, no-c-format
 msgid ""
 "Important boxes detail things that are easily missed: configuration changes "
 "that only apply to the current session, or services that need restarting "
@@ -396,7 +384,8 @@ msgid ""
 msgstr ""
 "গুৰুত্বপূৰ্ণ বাকছত সহজে এৰি যোৱা বস্তুৰ বিৱৰণ থাকে: অকল বৰ্ত্তমানৰ অধিবেশনত প্ৰভাৱ "
 "পেলোৱা বিন্যাসৰ সাল সলনি, বা এটা উন্নয়নৰ প্ৰভাৱ পেলোৱাৰ পূৰ্বে পুনৰাৰম্ভ কৰিব লগা "
-"সেৱাসমূহ । গুৰুত্বপূৰ্ণ বাকছক আওকাণ কৰিলে তথ্য নেহেৰায় কিন্তু পিছত বিৰক্ত বা নিৰুৎসাহ "
+"সেৱাসমূহ । 'গুৰুত্বপূৰ্ণ' লেবেল কৰা বাকছক আওকাণ কৰিলে তথ্য নেহেৰায় কিন্তু আপুনি পিছত "
+"বিৰক্ত আৰু নিৰুৎসাহ "
 "হ'ব পাৰে ।"
 
 #. Tag: title
@@ -404,13 +393,12 @@ msgstr ""
 msgid "Warning"
 msgstr "সতৰ্কবাণী"
 
-#. Tag: para
-#, fuzzy, no-c-format
+#. Tag: para, no-c-format
 msgid ""
 "Warnings should not be ignored. Ignoring warnings will most likely cause "
 "data loss."
 msgstr ""
-"এটা সতৰ্কবাণীক আওকাণ কৰিব নালাগে । সতৰ্কবাণী আওকাণ কৰিলে অতি সম্ভৱ তথ্য হেৰুৱাব "
+"সতৰ্কবাণীক আওকাণ কৰিব নালাগে । সতৰ্কবাণী আওকাণ কৰিলে অতি সম্ভৱ তথ্য হেৰুৱাব "
 "পাৰে ।"
 
 #, fuzzy
