--- a/publican/datadir/Common_Content/common/de-DE/Feedback.po
+++ b/publican/datadir/Common_Content/common/de-DE/Feedback.po
@@ -1,15 +1,15 @@
-# translation of Feedback.po to German
+# translation of Feedback.po to
 # PGP-KeyID: 0x037FD3CF <ttrinks@redhat.com>, 2007.
 # Daniela Kugelmann <dkugelma@redhat.com >, 2008.
-# translation of Feedback.po to
+# Hedda Peters <hpeters@redhat.com>, 2009.
 msgid ""
 msgstr ""
 "Project-Id-Version: Feedback\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
 "POT-Creation-Date: 2009-07-27T05:14:21\n"
-"PO-Revision-Date: 2008-10-08 14:39+1000\n"
-"Last-Translator: Daniela Kugelmann <dkugelma@redhat.com >\n"
-"Language-Team: German <i18@redhat.com>\n"
+"PO-Revision-Date: 2009-12-02 15:33+1000\n"
+"Last-Translator: Hedda Peters <hpeters@redhat.com>\n"
+"Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -18,7 +18,7 @@ msgstr ""
 #. Tag: title
 #, no-c-format
 msgid "We Need Feedback!"
-msgstr "Wir freuen uns auf Ihr Feedback!"
+msgstr "Senden Sie uns Ihr Feedback"
 
 #. Tag: primary
 #, no-c-format
@@ -28,11 +28,10 @@ msgstr "Feedback"
 #. Tag: secondary
 #, no-c-format
 msgid "contact information for this manual"
-msgstr "Kontaktinformationen für dieses Handbuch"
+msgstr "Kontaktinformationen zu diesem Handbuch"
 
 #. Tag: para
 #, no-c-format
 msgid "You should over ride this by creating your own local Feedback.xml file."
-msgstr ""
-"Sie sollten dies durch die Erstellung Ihrer eigenen lokalen Feedback.xml -"
-"Datei überschreiben."
+msgstr "Sie sollten dies durch die Erstellung Ihrer eigenen lokalen Feedback.xml-Datei überschreiben."
+
