--- a/publican/datadir/Common_Content/common/it-IT/Conventions.po
+++ b/publican/datadir/Common_Content/common/it-IT/Conventions.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: Conventions\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
 "POT-Creation-Date: 2009-12-01T23:44:40\n"
-"PO-Revision-Date: 2008-10-10 15:35+1000\n"
+"PO-Revision-Date: 2009-12-03 09:45+1000\n"
 "Last-Translator: \n"
 "Language-Team:  <it@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -61,19 +61,16 @@ msgstr ""
 "circostanze alle quali vengono applicate, sono le seguenti."
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "<literal>Mono-spaced Bold</literal>"
-msgstr "Neretto monospazio"
+msgstr "<literal>Neretto monospazio</literal>"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Used to highlight system input, including shell commands, file names and "
 "paths. Also used to highlight keycaps and key combinations. For example:"
-msgstr ""
-"Usato per evidenziare l'input del sistema, incluso i comandi della shell, i "
-"nomi dei file ed i percorsi. Utilizzato anche per evidenziare tasti singoli "
-"e combinazione di tasti. Per esempio:"
+msgstr "Usato per evidenziare l'input del sistema, incluso i comandi della shell, i nomi dei file ed i percorsi. Utilizzato anche per evidenziare tasti e combinazione di tasti. Per esempio:"
 
 #. Tag: para
 #, no-c-format
@@ -89,24 +86,21 @@ msgstr ""
 "premere <keycap>Invio</keycap> per eseguire il comando. "
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "The above includes a file name, a shell command and a keycap, all presented "
 "in mono-spaced bold and all distinguishable thanks to context."
 msgstr ""
-"Quanto sopra riportato include un nome del file, un comando della shell ed "
-"un tasto, il tutto riportato in Neretto monospazio e distinguibile grazie al "
+"Quanto sopra riportato include il nome del file, un comando della shell ed "
+"un tasto, il tutto riportato in neretto monospazio e distinguibile grazie al "
 "contesto."
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Key combinations can be distinguished from keycaps by the hyphen connecting "
 "each part of a key combination. For example:"
-msgstr ""
-"Le combinazioni di tasti possono essere distinte dalle chiavi singole, "
-"tramite il trattino che collega ogni parte della combinazione di tasti. Per "
-"esempio:"
+msgstr "Le combinazioni di tasti possono essere distinte dai tasti tramite il trattino che collega ogni parte della combinazione. Per esempio:"
 
 #. Tag: para
 #, no-c-format
@@ -127,26 +121,26 @@ msgstr ""
 "keycombo> per ritornare alla sessione X-Windows."
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "The first paragraph highlights the particular keycap to press. The second "
 "highlights two key combinations (each a set of three keycaps with each set "
 "pressed simultaneously)."
 msgstr ""
-"La prima frase evidenzia il tasto specifico singolo da premere. La seconda "
-"evidenzia due set di tre tasti, ogni set viene premuto simultaneamente."
+"Il primo paragrafo evidenzia il tasto specifico singolo da premere. Il secondo "
+"riporta due combinazioni di tasti, (ognuno dei quali è un set di tre tasti premuti contemporaneamente)."
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "If source code is discussed, class names, methods, functions, variable names "
 "and returned values mentioned within a paragraph will be presented as above, "
 "in <literal>mono-spaced bold</literal>. For example:"
 msgstr ""
-"Se si affronta il codice sorgente, i nomi della classe, i metodi, le "
+"Se si discute del codice sorgente, i nomi della classe, i metodi, le "
 "funzioni i nomi della variabile ed i valori ritornati indicati all'interno "
 "di un paragrafo, essi verranno indicati come sopra, e cioè in "
-"<literal>Neretto monospazio</literal>. Per esempio:"
+"<literal>neretto monospazio</literal>. Per esempio:"
 
 #. Tag: para
 #, no-c-format
@@ -164,22 +158,22 @@ msgstr ""
 #. Tag: para
 #, no-c-format
 msgid "<application>Proportional Bold</application>"
-msgstr ""
+msgstr "<application>Proportional Bold</application>"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "This denotes words or phrases encountered on a system, including application "
 "names; dialog box text; labeled buttons; check-box and radio button labels; "
 "menu titles and sub-menu titles. For example:"
 msgstr ""
 "Ciò denota le parole e le frasi incontrate su di un sistema, incluso i nomi "
-"delle applicazioni; il testo delle caselle di dialogo; i pulsanti "
-"etichettati; le caselle e le etichette per pulsanti radio, titoli del menu e "
+"delle applicazioni; il testo delle caselle di dialogo; i pulsanti etichettati; "
+"le caselle e le etichette per pulsanti di selezione, titoli del menu e "
 "dei sottomenu. Per esempio:"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Choose <menuchoice><guimenu>System</guimenu><guisubmenu>Preferences</"
 "guisubmenu><guimenuitem>Mouse</guimenuitem></menuchoice> from the main menu "
@@ -189,16 +183,15 @@ msgid ""
 "primary mouse button from the left to the right (making the mouse suitable "
 "for use in the left hand)."
 msgstr ""
-"Selezionare <guimenu>Sistema > Preferenze > Mouse</guimenu> dalla barra del "
-"menu principale per lanciare <application>Preferenze del mouse</"
-"application>. Nella scheda  <guilabel>Pulsanti</guilabel>, fate clic sulla "
+"Selezionare <menuchoice><guimenu>Sistema</guimenu><guisubmenu>Preferenze</"
+"guisubmenu><guimenuitem>Mouse</guimenuitem></menuchoice> dalla barra del menu principale per lanciare <application>Preferenze del Mouse</application>. Nella scheda  <guilabel>Pulsanti</guilabel>, fate clic sulla "
 "casella di dialogo <guilabel>mouse per mancini</guilabel>, e successivamente "
 "fate clic su <guibutton>Chiudi</guibutton> per cambiare il pulsante primario "
 "del mouse da sinistra a destra (rendendo così il mouse idoneo per un "
 "utilizzo con la mano sinistra)."
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "To insert a special character into a <application>gedit</application> file, "
 "choose <menuchoice><guimenu>Applications</guimenu><guisubmenu>Accessories</"
@@ -215,20 +208,14 @@ msgid ""
 "guimenuitem></menuchoice> from the <application>gedit</application> menu bar."
 msgstr ""
 "Per inserire un carattere speciale in un file <application>gedit</"
-"application>, selezionare <guimenu>Applicazioni > Accessori > Mappa "
-"carattere</guimenu> dalla barra menu principale. Successivamente, "
-"selezionare <guimenu>Cerca > Trova&hellip;</guimenu> dalla barra del menu "
-"<application>Mappa carattere</application>, inserire il nome del carattere "
-"nel campo <guilabel>Cerca</guilabel> e cliccare <guibutton>Successivo</"
-"guibutton>. Il carattere ricercato verrà evidenziato nella <guilabel>Tabella "
-"caratteri</guilabel>. Fate un doppio clic sul carattere evidenziato per "
-"posizionarlo nel campo <guilabel>Testo da copiare</guilabel>, e "
-"successivamente fate clic sul pulsante <guibutton>Copia</guibutton>. Ora "
-"ritornate al vostro documento e selezionate <guimenu>Modifica > Incolla</"
-"guimenu> dalla barra del menu di <application>gedit</application>."
+"application>, selezionare <menuchoice><guimenu>Applicazioni</guimenu><guisubmenu>Accessori</"
+"guisubmenu><guimenuitem>Mappa carattere</guimenuitem></menuchoice> dalla barra menu principale. Successivamente, "
+"selezionare <menuchoice><guimenu>Cerca</"
+"guimenu><guimenuitem>Trova&hellip;</guimenuitem></menuchoice> dalla barra del menu <application>Mappa carattere</application>, inserire il nome del carattere nel campo <guilabel>Cerca</guilabel> e cliccare <guibutton>Successivo</guibutton>. Il carattere ricercato verrà evidenziato nella <guilabel>Tabella caratteri</guilabel>. Fare un doppio clic sul carattere evidenziato per posizionarlo nel campo <guilabel>Testo da copiare</guilabel>, e successivamente fare clic sul pulsante <guibutton>Copia</guibutton>. Ritornare ora al documento e selezionare <menuchoice><guimenu>Modifica</guimenu><guimenuitem>Incolla</"
+"guimenuitem></menuchoice> dalla barra del menu di <application>gedit</application>."
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "The above text includes application names; system-wide menu names and items; "
 "application-specific menu names; and buttons and text found within a GUI "
@@ -238,7 +225,7 @@ msgstr ""
 "Il testo sopra riportato include i nomi delle applicazioni; nomi ed oggetti "
 "del menu per l'intero sistema; nomi del menu specifici alle applicazioni; e "
 "pulsanti e testo trovati all'interno di una interfaccia GUI, tutti "
-"presentati in Neretto proporzionale e distinguibili dal contesto."
+"presentati in neretto proporzionale e distinguibili dal contesto."
 
 #. Tag: para
 #, no-c-format
@@ -252,18 +239,13 @@ msgstr ""
 "application>"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Whether mono-spaced bold or proportional bold, the addition of italics "
 "indicates replaceable or variable text. Italics denotes text you do not "
 "input literally or displayed text that changes depending on circumstance. "
 "For example:"
-msgstr ""
-"Sia se si tratta di Corsivo neretto monospazio o Corsivo neretto "
-"proporzionale, l'aggiunta del carattere Corsivo indica un testo variabile o "
-"sostituibile . Il carattere Corsivo denota un testo che non viene inserito "
-"letteralmente, o visualizzato che varia a seconda delle circostanze. Per "
-"esempio:"
+msgstr "Sia se si tratta di neretto monospazio o neretto proporzionale, l'aggiunta del carattere corsivo indica un testo variabile o sostituibile . Il carattere corsivo denota un testo che non viene inserito letteralmente, o visualizzato che varia a seconda delle circostanze. Per esempio:"
 
 #. Tag: para
 #, no-c-format
@@ -331,7 +313,7 @@ msgstr ""
 #. Tag: para
 #, no-c-format
 msgid "Publican is a <firstterm>DocBook</firstterm> publishing system."
-msgstr ""
+msgstr "Publican è un sistema di pubblicazione per <firstterm>DocBook</firstterm>."
 
 #. Tag: title
 #, no-c-format
@@ -339,31 +321,29 @@ msgid "Pull-quote Conventions"
 msgstr "Convenzioni del documento"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Terminal output and source code listings are set off visually from the "
 "surrounding text."
-msgstr ""
-"Due tipi di dati, comunemente con più righe, vengono evidenziati rispetto al "
-"testo circostante."
+msgstr "Gli elenchi originati dal codice sorgente e l'output del terminale vengono evidenziati rispetto al testo circostante."
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Output sent to a terminal is set in <computeroutput>mono-spaced roman</"
 "computeroutput> and presented thus:"
 msgstr ""
-"L'output inviato ad un terminale è impostato su <computeroutput>Tondo "
+"L'output inviato ad un terminale è impostato su <computeroutput>tondo "
 "monospazio</computeroutput> e così presentato:"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Source-code listings are also set in <computeroutput>mono-spaced roman</"
 "computeroutput> but add syntax highlighting as follows:"
 msgstr ""
-"Gli elenchi del codice sorgente sono impostati in <computeroutput>Mono-"
-"spaced Roman</computeroutput> ma vengono presentati ed evidenziati nel modo "
+"Gli elenchi del codice sorgente sono impostati in <computeroutput>tondo "
+"monospazio</computeroutput> ma vengono presentati ed evidenziati nel modo "
 "seguente:"
 
 #. Tag: title
@@ -386,7 +366,7 @@ msgid "Note"
 msgstr "Nota Bene"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Notes are tips, shortcuts or alternative approaches to the task at hand. "
 "Ignoring a note should have no negative consequences, but you might miss out "
@@ -403,17 +383,17 @@ msgid "Important"
 msgstr "Importante"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Important boxes detail things that are easily missed: configuration changes "
 "that only apply to the current session, or services that need restarting "
 "before an update will apply. Ignoring a box labeled 'Important' won't cause "
 "data loss but may cause irritation and frustration."
 msgstr ""
-"Caselle importanti riportano informazioni che potrebbero passare facilmente "
+"Le caselle 'importante' riportano informazioni che potrebbero passare facilmente "
 "inosservate: modifiche alla configurazione applicabili solo alla sessione "
 "corrente, o servizi i quali necessitano di un riavvio prima di applicare un "
-"aggiornamento. Ignorare queste caselle non causa alcuna perdita di dati, ma "
+"aggiornamento. Ignorare queste caselle non causa alcuna perdita di dati ma "
 "potrebbe causare irritazione e frustrazione da parte dell'utente."
 
 #. Tag: title
@@ -422,98 +402,11 @@ msgid "Warning"
 msgstr "Avvertenza"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Warnings should not be ignored. Ignoring warnings will most likely cause "
 "data loss."
 msgstr ""
-"Un avvertimento non dovrebbe essere ignorato. Se ignorato, potrebbe "
+"Un Avvertimento non dovrebbe essere ignorato. Se ignorato, potrebbe "
 "verificarsi una perdita di dati."
 
-#, fuzzy
-#~ msgid ""
-#~ "Note the <guimenu>&#62;</guimenu> shorthand used to indicate traversal "
-#~ "through a menu and its sub-menus. This avoids difficult-to-follow "
-#~ "phrasing such as &#39;Select <guimenuitem>Mouse</guimenuitem> from the "
-#~ "<guimenu>Preferences</guimenu> sub-menu in the <guimenu>System</guimenu> "
-#~ "menu of the main menu bar&#39;."
-#~ msgstr ""
-#~ "Da notare <guimenu>></guimenu> l'abbreviazione usata per andare da un "
-#~ "menu e sottomenu relativi. Tale operazione viene eseguita per evitare "
-#~ "l'uso di 'Seleziona <guimenuitem>Mouse</guimenuitem> dal sottomenu "
-#~ "<guimenu>Preferenze</guimenu> nel menu <guimenu>Sistema</guimenu> della "
-#~ "barra principale del menu."
-
-#~ msgid ""
-#~ "When the Apache HTTP Server accepts requests, it dispatches child "
-#~ "processes or threads to handle them. This group of child processes or "
-#~ "threads is known as a <firstterm>server-pool</firstterm>. Under Apache "
-#~ "HTTP Server 2.0, the responsibility for creating and maintaining these "
-#~ "server-pools has been abstracted to a group of modules called "
-#~ "<firstterm>Multi-Processing Modules</firstterm> (<firstterm>MPMs</"
-#~ "firstterm>). Unlike other modules, only one module from the MPM group can "
-#~ "be loaded by the Apache HTTP Server."
-#~ msgstr ""
-#~ "Quando il server HTTP Apache accetta le richieste, esso invia i processi "
-#~ "figlio o thread per la loro gestione. Questo gruppo di processi figlio o "
-#~ "thread è conosciuto come <firstterm>server-pool</firstterm>. Con Apache "
-#~ "HTTP Server 2.0, la responsabilità per la creazione e gestione di questi "
-#~ "server-pool si riassume in un gruppo di moduli chiamati <firstterm>Multi-"
-#~ "Processing Modules</firstterm> (<firstterm>MPMs</firstterm>). "
-#~ "Diversamente da altri moduli, solo un modulo dal gruppo MPM può essere "
-#~ "caricato del server HTTP Apache."
-
-#~ msgid "Proportional Bold"
-#~ msgstr "Neretto proporzionale"
-
-#~ msgid ""
-#~ "books        Desktop   documentation  drafts  mss    photos   stuff  svn\n"
-#~ "books_tests  Desktop1  downloads      images  notes  scripts  svgs"
-#~ msgstr ""
-#~ "books        Desktop   documentation  drafts  mss    photos   stuff  svn\n"
-#~ "books_tests  Desktop1  downloads      images  notes  scripts  svgs"
-
-#~ msgid ""
-#~ "package org.jboss.book.jca.ex1;\n"
-#~ "\n"
-#~ "import javax.naming.InitialContext;\n"
-#~ "\n"
-#~ "public class ExClient\n"
-#~ "{\n"
-#~ "   public static void main(String args[]) \n"
-#~ "       throws Exception\n"
-#~ "   {\n"
-#~ "      InitialContext iniCtx = new InitialContext();\n"
-#~ "      Object         ref    = iniCtx.lookup(\"EchoBean\");\n"
-#~ "      EchoHome       home   = (EchoHome) ref;\n"
-#~ "      Echo           echo   = home.create();\n"
-#~ "\n"
-#~ "      System.out.println(\"Created Echo\");\n"
-#~ "\n"
-#~ "      System.out.println(\"Echo.echo('Hello') = \" + echo.echo(\"Hello"
-#~ "\"));\n"
-#~ "   }\n"
-#~ "   \n"
-#~ "}"
-#~ msgstr ""
-#~ "package org.jboss.book.jca.ex1;\n"
-#~ "\n"
-#~ "import javax.naming.InitialContext;\n"
-#~ "\n"
-#~ "public class ExClient\n"
-#~ "{\n"
-#~ "   public static void main(String args[]) \n"
-#~ "       throws Exception\n"
-#~ "   {\n"
-#~ "      InitialContext iniCtx = new InitialContext();\n"
-#~ "      Object         ref    = iniCtx.lookup(\"EchoBean\");\n"
-#~ "      EchoHome       home   = (EchoHome) ref;\n"
-#~ "      Echo           echo   = home.create();\n"
-#~ "\n"
-#~ "      System.out.println(\"Created Echo\");\n"
-#~ "\n"
-#~ "      System.out.println(\"Echo.echo('Hello') = \" + echo.echo(\"Hello"
-#~ "\"));\n"
-#~ "   }\n"
-#~ "   \n"
-#~ "}"
