--- a/publican/datadir/Common_Content/common/ko-KR/Conventions.po
+++ b/publican/datadir/Common_Content/common/ko-KR/Conventions.po
@@ -1,18 +1,18 @@
 # translation of Conventions.po to Korean
-# Eunju Kim <eukim@redhat.com>, 2007, 2008.
+# Eunju Kim <eukim@redhat.com>, 2007, 2008, 2009.
 msgid ""
 msgstr ""
 "Project-Id-Version: Conventions\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
 "POT-Creation-Date: 2009-12-01T23:44:40\n"
-"PO-Revision-Date: 2008-10-10 15:22+1000\n"
+"PO-Revision-Date: 2009-12-03 13:49+1000\n"
 "Last-Translator: Eunju Kim <eukim@redhat.com>\n"
 "Language-Team: Korean <ko@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: KBabel 1.11.4\n"
-"Plural-Forms:  nplurals=2; plural=(n!=1);\n"
+"Plural-Forms:  nplurals=1; plural=0;\n"
 "\n"
 "\n"
 "\n"
@@ -66,18 +66,18 @@ msgstr ""
 "규정 및 적용 방식은 다음과 같습니다.   "
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "<literal>Mono-spaced Bold</literal>"
-msgstr "고정폭 굵은 글꼴 "
+msgstr "<literal>고정폭 굵은체</literal>     "
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Used to highlight system input, including shell commands, file names and "
 "paths. Also used to highlight keycaps and key combinations. For example:"
 msgstr ""
-"쉘 명령어, 파일 이름 및 경로를 포함한 시스템 입력을 강조하기 위해 사용됩니"
-"다. 키 캡 및 키 조합을 강조하기 위해 사용되기도 합니다. 예: "
+"쉘 명령, 파일 이름 및 경로를 포함한 시스템 입력을 강조하기 위해 사용됩니"
+"다. 키 캡 및 키 조합을 강조하기 위해 사용되기도 합니다. 예:  "
 
 #. Tag: para
 #, no-c-format
@@ -93,22 +93,22 @@ msgstr ""
 "를 눌러 명령을 실행합니다."
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "The above includes a file name, a shell command and a keycap, all presented "
 "in mono-spaced bold and all distinguishable thanks to context."
 msgstr ""
-"위에서 파일 이름, 쉘 명령어, 키 캡 모두는 고정폭 굵은체로 나타나 있어 내용과 "
-"구별될 수 있습니다. "
+"위에서 파일 이름, 쉘 명령, 키 캡 모두는 고정폭 굵은체로 나타나 있어 내용과 "
+"구별될 수 있습니다.  "
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Key combinations can be distinguished from keycaps by the hyphen connecting "
 "each part of a key combination. For example:"
 msgstr ""
 "키 조합은 키 조합의 각 부분을 하이픈으로 연결하여 키 캡과 구별되게 할 수 있습"
-"니다. 예: "
+"니다. 예:  "
 
 #. Tag: para
 #, no-c-format
@@ -129,17 +129,17 @@ msgstr ""
 "션으로 돌아갑니다. "
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "The first paragraph highlights the particular keycap to press. The second "
 "highlights two key combinations (each a set of three keycaps with each set "
 "pressed simultaneously)."
 msgstr ""
 "첫 번째 문장에서는 눌러야 하는 특정 키 캡을 강조하고 있습니다. 두 번째 문장에"
-"서는 동시에 눌러야 하는 세 개의 키 캡 두 묶음을 강조하고 있습니다. "
+"서는 동시에 눌러야 하는 세 개의 키 캡 두 묶음을 강조하고 있습니다.  "
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "If source code is discussed, class names, methods, functions, variable names "
 "and returned values mentioned within a paragraph will be presented as above, "
@@ -147,7 +147,7 @@ msgid ""
 msgstr ""
 "소스 코드를 설명해야 할 경우, 문장에서 언급된 클래스 이름, 방식, 기능, 변수 "
 "이름 및 반환값은 위와 같이 <literal>고정폭 굵은체</literal>로 나타나게 됩니"
-"다. 예: "
+"다. 예:  "
 
 #. Tag: para
 #, no-c-format
@@ -164,10 +164,10 @@ msgstr ""
 #. Tag: para
 #, no-c-format
 msgid "<application>Proportional Bold</application>"
-msgstr ""
+msgstr "<application>가변폭 굵은체</application>  "
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "This denotes words or phrases encountered on a system, including application "
 "names; dialog box text; labeled buttons; check-box and radio button labels; "
@@ -175,10 +175,10 @@ msgid ""
 msgstr ""
 "이는 프로그램 이름; 대화 상자 텍스트; 레이블된 버튼; 체크 박스 및 라디오 버"
 "튼 레이블; 메뉴 제목; 하부 메뉴 제목을 포함하여 시스템에 있는 단어 또는 구문"
-"을 나타냅니다. 예: "
+"을 나타냅니다. 예:  "
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Choose <menuchoice><guimenu>System</guimenu><guisubmenu>Preferences</"
 "guisubmenu><guimenuitem>Mouse</guimenuitem></menuchoice> from the main menu "
@@ -188,14 +188,12 @@ msgid ""
 "primary mouse button from the left to the right (making the mouse suitable "
 "for use in the left hand)."
 msgstr ""
-"주 메뉴 바에서 <guimenu>시스템 > 기본설정 > 마우스</guimenu>를 선택하여 "
-"<application>마우스 기본 설정</application>을 시작합니다. <guilabel>버튼</"
-"guilabel> 탭에서, <guilabel>왼손 잡이 마우스</guilabel> 체크 상자를 선택하고 "
-"<guibutton>닫기</guibutton>를 클릭하여 주요 마우스 버튼을 왼쪽에서 오른쪽으"
-"로 전환합니다 (왼손 잡이일 경우 보다 적절하게 마우스 사용을 할 수 있게 함). "
+"주 메뉴 바에서 <menuchoice><guimenu>시스템</guimenu><guisubmenu>기본설정</"
+"guisubmenu><guimenuitem>마우스</guimenuitem></menuchoice>를 선택하여 <application>마우스 기본 설정</application>을 시작합니다. <guilabel>버튼</guilabel> 탭에서, <guilabel>왼손 잡이 마우스</guilabel> 체크 상자를 선택하고 <guibutton>닫기</guibutton>를 클릭하여 주요 마우스 버튼을 왼쪽에서 오른쪽으"
+"로 전환합니다 (왼손 잡이일 경우 보다 적절하게 마우스 사용을 할 수 있게 함).   "
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "To insert a special character into a <application>gedit</application> file, "
 "choose <menuchoice><guimenu>Applications</guimenu><guisubmenu>Accessories</"
@@ -212,17 +210,17 @@ msgid ""
 "guimenuitem></menuchoice> from the <application>gedit</application> menu bar."
 msgstr ""
 "<application>gedit</application> 파일에 특수 문자를 삽입하려면, 주 메뉴 바에"
-"서 <guimenu>프로그램 > 보조 프로그램 > 글자 표</guimenu>를 선택합니다. 다음으"
-"로 <application>글자 표</application>에서 <guimenu>찾기 > &hellip; 찾기</"
-"guimenu>를 선택하고, <guilabel>찾기</guilabel>란에 글자 이름을 입력한 후 "
-"<guibutton>다음</guibutton> 버튼을 클릭합니다. 찾으려는 글자가 <guilabel>글"
+"서 <menuchoice><guimenu>프로그램</guimenu><guisubmenu>보조 프로그램</"
+"guisubmenu><guimenuitem>글자 표</guimenuitem></menuchoice>를 선택합니다. 다음으로 "
+"<application>글자 표</application>에서 <menuchoice><guimenu>검색</"
+"guimenu><guimenuitem>찾기&hellip;</guimenuitem></menuchoice>를 선택하고, <guilabel>검색</guilabel>란에 글자 이름을 입력한 후 <guibutton>다음</guibutton> 버튼을 클릭합니다. 찾으려는 글자가 <guilabel>글"
 "자 표</guilabel>에 표시되면, 이를 더블 클릭하여 <guilabel>복사할 글자</"
 "guilabel>란에 위치하게 한 후, <guibutton>복사</guibutton> 버튼을 클릭합니다. "
-"그 후 문서로 다시 돌아와서 <application>gedit</application> 메뉴 바에서 "
-"<guimenu>편집 > 붙이기</guimenu>를 선택합니다. "
+"그 후 문서로 다시 돌아와서 <application>gedit</application> 메뉴 바에서 <menuchoice><guimenu>편집</guimenu><guimenuitem>붙이기</"
+"guimenuitem></menuchoice>를 선택합니다.     "
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "The above text includes application names; system-wide menu names and items; "
 "application-specific menu names; and buttons and text found within a GUI "
@@ -231,7 +229,7 @@ msgid ""
 msgstr ""
 "위의 내용에는 프로그램 이름, 다양한 시스템 메뉴 이름 및 항목; 특정 프로그램 "
 "메뉴 이름; GUI 인터페이스에 있는 버튼 및 텍스트가 포함되어 있으며, 텍스트와 "
-"구별 가능하도록 모두 가변폭 굵은체로 되어 있습니다. "
+"구별 가능하도록 모두 가변폭 굵은체로 되어 있습니다.  "
 
 #. Tag: para
 #, no-c-format
@@ -244,7 +242,7 @@ msgstr ""
 "<application><replaceable>가변폭 굵은 이텔릭체</replaceable></application>"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Whether mono-spaced bold or proportional bold, the addition of italics "
 "indicates replaceable or variable text. Italics denotes text you do not "
@@ -254,7 +252,7 @@ msgstr ""
 "고정폭 굵은체이던 가변폭 굵은체이던지 간에 이텔릭체가 추가될 경우 이는 교체 "
 "또는 변경 가능한 텍스트를 나타내는 것입니다. 글자 그대로 입력하지 말아야 할 "
 "텍스트나 또는 상황에 따라 변경해야 하는 텍스트의 경우 이텔릭체로 나타냅니다. "
-"예: "
+"예:  "
 
 #. Tag: para
 #, no-c-format
@@ -320,7 +318,7 @@ msgstr ""
 #. Tag: para
 #, no-c-format
 msgid "Publican is a <firstterm>DocBook</firstterm> publishing system."
-msgstr ""
+msgstr "Publican은 <firstterm>DocBook</firstterm> 발행 시스템입니다.  "
 
 #. Tag: title
 #, no-c-format
@@ -328,31 +326,27 @@ msgid "Pull-quote Conventions"
 msgstr "인용문 규정 "
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Terminal output and source code listings are set off visually from the "
 "surrounding text."
-msgstr ""
-"두 개의 일반적으로 여러 행으로된 데이터 유형은 주위의 문장에서 잘 보이는 위치"
-"에 설정됩니다.  "
+msgstr "터미널 출력 결과 및 소스 코드 목록은 주위의 문장에서 잘 보이는 위치에 설정됩니다.      "
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Output sent to a terminal is set in <computeroutput>mono-spaced roman</"
 "computeroutput> and presented thus:"
 msgstr ""
-"터미널로 보내진 출력 결과는 <computeroutput>Mono-spaced Roman</"
-"computeroutput>에 설정되어 다음과 같이 나타납니다: "
+"터미널로 보내진 출력 결과는<computeroutput>mono-spaced roman</"
+"computeroutput>에 설정되어 다음과 같이 나타납니다:   "
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Source-code listings are also set in <computeroutput>mono-spaced roman</"
 "computeroutput> but add syntax highlighting as follows:"
-msgstr ""
-"소스 코드 목록은 <computeroutput>Mono-spaced Roman</computeroutput> 에서도 설"
-"정되어 있지만, 다음과 같이 나타나 강조됩니다: "
+msgstr "소스 코드 목록도 <computeroutput>mono-spaced roman</computeroutput>에 설정되지만, 다음과 같이 구문 강조가 추가되어 있습니다:  "
 
 #. Tag: title
 #, no-c-format
@@ -374,7 +368,7 @@ msgid "Note"
 msgstr "알림"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Notes are tips, shortcuts or alternative approaches to the task at hand. "
 "Ignoring a note should have no negative consequences, but you might miss out "
@@ -382,7 +376,7 @@ msgid ""
 msgstr ""
 "알림에서는 현재 작업에 대한 도움말, 지름길 또는 대안적 방법을 제공합니다. 알"
 "림 내용을 무시해도 상관없지만 효율적으로 작업할 수 있는 방법을 놓칠 수 있습니"
-"다.        "
+"다.         "
 
 #. Tag: title
 #, no-c-format
@@ -390,7 +384,7 @@ msgid "Important"
 msgstr "중요"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Important boxes detail things that are easily missed: configuration changes "
 "that only apply to the current session, or services that need restarting "
@@ -400,7 +394,7 @@ msgstr ""
 "중요 상자에서는 현재 세션에만 적용되는 설정을 변경하거나 업데이트를 적용하기 "
 "전 다시 시작해야 하는 서비스와 같이 간과하기 쉬운 세부 사항을 제공합니다. 중"
 "요 상자를 무시해도 데이터를 손실하게 되지 않지만 문제를 일으킬 수 있습니"
-"다.     "
+"다.      "
 
 #. Tag: title
 #, no-c-format
@@ -408,97 +402,11 @@ msgid "Warning"
 msgstr "경고"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Warnings should not be ignored. Ignoring warnings will most likely cause "
 "data loss."
 msgstr ""
 "경고는 무시해서는 안됩니다. 경고를 무시할 경우 대부분 데이터가 손실될 수 있습"
-"니다. "
+"니다.  "
 
-#, fuzzy
-#~ msgid ""
-#~ "Note the <guimenu>&#62;</guimenu> shorthand used to indicate traversal "
-#~ "through a menu and its sub-menus. This avoids difficult-to-follow "
-#~ "phrasing such as &#39;Select <guimenuitem>Mouse</guimenuitem> from the "
-#~ "<guimenu>Preferences</guimenu> sub-menu in the <guimenu>System</guimenu> "
-#~ "menu of the main menu bar&#39;."
-#~ msgstr ""
-#~ "<guimenu>></guimenu> 표시는 메뉴 및 서부 메뉴에서 실행 순서를 나타내기 위"
-#~ "해 사용되고 있음에 유의합니다. 이는 '주 메뉴 바의 <guimenu>시스템</"
-#~ "guimenu> 메뉴에 있는 <guimenu>기본 설정</guimenu> 하부 메뉴에서 "
-#~ "<guimenuitem>마우스</guimenuitem>를 선택합니다'와 같이 실행 순서를 따라하"
-#~ "기 어렵게 되지 않도록 하기 위함입니다. "
-
-#~ msgid ""
-#~ "When the Apache HTTP Server accepts requests, it dispatches child "
-#~ "processes or threads to handle them. This group of child processes or "
-#~ "threads is known as a <firstterm>server-pool</firstterm>. Under Apache "
-#~ "HTTP Server 2.0, the responsibility for creating and maintaining these "
-#~ "server-pools has been abstracted to a group of modules called "
-#~ "<firstterm>Multi-Processing Modules</firstterm> (<firstterm>MPMs</"
-#~ "firstterm>). Unlike other modules, only one module from the MPM group can "
-#~ "be loaded by the Apache HTTP Server."
-#~ msgstr ""
-#~ "Apache HTTP 서버가 요청을 허용하면, 이를 처리하기 위해 자식 프로세스 또는 "
-#~ "스레드를 디스패치합니다. 이러한 자식 프로세스 또는 스레드 그룹은 "
-#~ "<firstterm>server-pool</firstterm>이라고 합니다. Apache HTTP 서버 2.0 하에"
-#~ "서, 이러한 server-pool을 생성 및 관리 책임은  <firstterm>MPMs</firstterm> "
-#~ "(<firstterm>Multi-Processing Modules</firstterm>)이라는 모듈 그룹으로 추상"
-#~ "화됩니다. 다른 모듈과 다르게, MPM 그룹에서 하나의 모듈만을 Apache HTTP 서"
-#~ "버가 불러올 수 있습니다. "
-
-#~ msgid "Proportional Bold"
-#~ msgstr "가변폭 굵은체"
-
-#~ msgid ""
-#~ "books        Desktop   documentation  drafts  mss    photos   stuff  svn\n"
-#~ "books_tests  Desktop1  downloads      images  notes  scripts  svgs"
-#~ msgstr ""
-#~ "books        Desktop   documentation  drafts  mss    photos   stuff  svn\n"
-#~ "books_tests  Desktop1  downloads      images  notes  scripts  svgs"
-
-#~ msgid ""
-#~ "package org.jboss.book.jca.ex1;\n"
-#~ "\n"
-#~ "import javax.naming.InitialContext;\n"
-#~ "\n"
-#~ "public class ExClient\n"
-#~ "{\n"
-#~ "   public static void main(String args[]) \n"
-#~ "       throws Exception\n"
-#~ "   {\n"
-#~ "      InitialContext iniCtx = new InitialContext();\n"
-#~ "      Object         ref    = iniCtx.lookup(\"EchoBean\");\n"
-#~ "      EchoHome       home   = (EchoHome) ref;\n"
-#~ "      Echo           echo   = home.create();\n"
-#~ "\n"
-#~ "      System.out.println(\"Created Echo\");\n"
-#~ "\n"
-#~ "      System.out.println(\"Echo.echo('Hello') = \" + echo.echo(\"Hello"
-#~ "\"));\n"
-#~ "   }\n"
-#~ "   \n"
-#~ "}"
-#~ msgstr ""
-#~ "package org.jboss.book.jca.ex1;\n"
-#~ "\n"
-#~ "import javax.naming.InitialContext;\n"
-#~ "\n"
-#~ "public class ExClient\n"
-#~ "{\n"
-#~ "   public static void main(String args[]) \n"
-#~ "       throws Exception\n"
-#~ "   {\n"
-#~ "      InitialContext iniCtx = new InitialContext();\n"
-#~ "      Object         ref    = iniCtx.lookup(\"EchoBean\");\n"
-#~ "      EchoHome       home   = (EchoHome) ref;\n"
-#~ "      Echo           echo   = home.create();\n"
-#~ "\n"
-#~ "      System.out.println(\"Created Echo\");\n"
-#~ "\n"
-#~ "      System.out.println(\"Echo.echo('Hello') = \" + echo.echo(\"Hello"
-#~ "\"));\n"
-#~ "   }\n"
-#~ "   \n"
-#~ "}"
