--- a/publican/datadir/Common_Content/common/ml-IN/Conventions.po
+++ b/publican/datadir/Common_Content/common/ml-IN/Conventions.po
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version: Conventions\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
 "POT-Creation-Date: 2009-12-01T23:44:40\n"
-"PO-Revision-Date: 2008-10-07 12:19+0530\n"
+"PO-Revision-Date: 2009-12-02 17:14+0530\n"
 "Last-Translator: \n"
 "Language-Team:  <en@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -61,18 +61,19 @@ msgstr ""
 "follows."
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "<literal>Mono-spaced Bold</literal>"
-msgstr "മോണോ-സ്പെയിസ്ഡ് ബോള്‍ഡ്"
+msgstr "<literal>മോണോ-സ്പെയിസ്ഡ് ബോള്‍ഡ്</literal>"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Used to highlight system input, including shell commands, file names and "
 "paths. Also used to highlight keycaps and key combinations. For example:"
 msgstr ""
-"Used to highlight system input, including shell commands, file names and "
-"paths. Also used to highlight key caps and key-combinations. For example:"
+"ഷെല്‍ കമാന്‍ഡുകള്‍, ഫയല്‍ നാമങ്ങള്‍ പാഥുകള്‍ എന്നവി ഉള്‍പ്പെടുന്ന സിസ്റ്റം ഇന്‍പുട്ട് "
+"എടുത്തു് കാണിക്കുവാന്‍ ഉപയോഗിക്കുന്നു. കീമാപ്പുകളും കീ കൂട്ടങ്ങളും ഇവ എടുത്തു "
+"കാണിക്കുവാന്‍ സഹായിക്കുന്നു. ഉദാഹരണത്തിനു്:"
 
 #. Tag: para
 #, no-c-format
@@ -82,6 +83,10 @@ msgid ""
 "my_next_bestselling_novel</command> command at the shell prompt and press "
 "<keycap>Enter</keycap> to execute the command."
 msgstr ""
+"നിങ്ങള്‍ ഇപ്പോള്‍ നില്‍ക്കുന്ന ഡയറക്ടറിയില്‍ <filename>my_next_bestselling_novel</"
+"filename> ഫയല്‍ കാണുന്നതിനായി, ഷെല്‍ പ്രോംപ്റ്റില്‍ <command>cat "
+"my_next_bestselling_novel</command> കമാന്‍ഡ് നല്‍കി <keycap>Enter</keycap> "
+"കീ അമര്‍ത്തുക."
 
 #. Tag: para
 #, no-c-format
@@ -89,6 +94,8 @@ msgid ""
 "The above includes a file name, a shell command and a keycap, all presented "
 "in mono-spaced bold and all distinguishable thanks to context."
 msgstr ""
+"മുകളില്‍ പറഞ്ഞിരിക്കുന്നതില്‍ ഒരു ഫയല്‍നാമം, ഷെല്‍ കമാന്‍ഡ്, കീകാപ്പ് എന്നിവ ഉള്‍പ്പെടുന്നു. "
+"എല്ലാം മോണോ-സ്പെയിഡ് ബോള്‍ഡില്‍ നല്‍കിയിരിക്കുന്നു, വ്യക്തമായി തിരിച്ചറിയുവാനും സാധിക്കുന്നു."
 
 #. Tag: para
 #, no-c-format
@@ -96,11 +103,13 @@ msgid ""
 "Key combinations can be distinguished from keycaps by the hyphen connecting "
 "each part of a key combination. For example:"
 msgstr ""
+"കീ കൂട്ടങ്ങളും കീകാപ്പുകളും തമ്മില്‍ തിരിച്ചറിയുന്നതിനായി, ഓരോ കീ കൂട്ടത്തിന്റേയും "
+"ഭാഗം ഹൈഫന്‍ ഉപയോഗിച്ചു് ബന്ധപ്പെടുത്തുക. ഉദാഹരണത്തിനു്:"
 
 #. Tag: para
 #, no-c-format
 msgid "Press <keycap>Enter</keycap> to execute the command."
-msgstr ""
+msgstr "കമാന്‍ഡ് നടപ്പിലാക്കുന്നതിനായി <keycap>Enter</keycap> അമര്‍ത്തുക."
 
 #. Tag: para
 #, no-c-format
@@ -110,6 +119,10 @@ msgid ""
 "<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F7</keycap></"
 "keycombo> to return to your X-Windows session."
 msgstr ""
+"ആദ്യത്തെ വിര്‍ച്ച്വല്‍ ടെര്‍മിനലിലേക്ക് പോകുന്നതിനായി <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</keycap></keycombo> "
+"ഉപയോഗിക്കുക. തിരികെ നിങ്ങളുടെ X-Windows സെഷനിലേക്ക് മടങ്ങുന്നതിനായി"
+"<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F7</keycap></keycombo> "
+"ഉപയോഗിക്കുക."
 
 #. Tag: para
 #, no-c-format
@@ -118,6 +131,9 @@ msgid ""
 "highlights two key combinations (each a set of three keycaps with each set "
 "pressed simultaneously)."
 msgstr ""
+"ആദ്യത്തെ ഖണ്ഡിക അമര്‍ത്തുന്നതിനുള്ള കീക്കാപ്പ് എടുത്തുകാണിക്കുന്നു. രണ്ടാമത്തെ "
+"ഖണ്ഡിക രണ്ടു് കീ കൂട്ടങ്ങളെ കാണിക്കുന്നു. (ഓരോന്നും മൂന്നു് കീക്കാപ്പുകള്‍ ഉള്ള സെറ്റ്, "
+"അതില്‍ ഓരോ സെറ്റും അടുപ്പിച്ചു് അമര്‍ത്തുന്നു)"
 
 #. Tag: para
 #, no-c-format
@@ -126,6 +142,10 @@ msgid ""
 "and returned values mentioned within a paragraph will be presented as above, "
 "in <literal>mono-spaced bold</literal>. For example:"
 msgstr ""
+"സോഴ്സ് കോഡിനെപ്പറ്റി പറയുമ്പോള്‍, ഒരു ഖണ്ഡികയില്‍ ലഭ്യമാകുന്ന ക്ലാസ്സ് നെയിമുകള്‍, "
+"മെഥേഡുകള്‍, ഫംഗ്ഷനുകള്‍, വേരിയബിള്‍ നെയിമുകള്‍, തിരികെ ലഭിക്കുന്ന മൂല്ല്യങ്ങള്‍ എന്നിവ "
+"മുകളില്‍ പറഞ്ഞിരിക്കുന്നതു് പോലെ <literal>മോണോ-സ്പെയിസ്ഡ് ബോള്‍ഡ്</literal> "
+"ലഭ്യമാകുന്നു. ഉദാഹരണത്തിനു്:"
 
 #. Tag: para
 #, no-c-format
@@ -135,11 +155,15 @@ msgid ""
 "classname> for directories. Each class has its own associated set of "
 "permissions."
 msgstr ""
+"ഫയലിനോടു് അനുബന്ധിച്ചുള്ള ക്ലാസ്സുകളില്‍, ഫയല്‍ സിസ്റ്റത്തിനു് <classname>"
+"filesystem</classname>, ഫയലുകള്‍ക്കു് <classname>file</classname>, ഡയറക്ടറികള്‍ക്കു് "
+"<classname>dir</classname> എന്നിവ ഉള്‍പ്പെടുന്നു. ഓരോ ക്ലാസ്സിനും അതിനനുസരിച്ചുള്ള "
+"അനുവാദങ്ങളുമുണ്ടു്."
 
 #. Tag: para
 #, no-c-format
 msgid "<application>Proportional Bold</application>"
-msgstr ""
+msgstr "<application>പ്രൊപോര്‍ഷണ്‍ ബോള്‍ഡ്</application>"
 
 #. Tag: para
 #, no-c-format
@@ -148,6 +172,10 @@ msgid ""
 "names; dialog box text; labeled buttons; check-box and radio button labels; "
 "menu titles and sub-menu titles. For example:"
 msgstr ""
+"പ്രയോങ്ങളുടെ പേരുകള്‍; ഡയലോഗ് ബോക്സ് ടെക്സ്റ്റ്; ലേബല്‍ഡ് ബട്ടണുകള്‍; "
+"ചെക്ക്-ബോക്സും റേഡിയോ ബട്ടണ്‍ ലേബലുകളും; മെനുവിന്റെ തലക്കെട്ടുകളും ഉപ-മെനു "
+"തലക്കെട്ടുകളും എന്നിങ്ങനെയുള്ള സിസ്റ്റത്തില്‍ നിങ്ങള്‍ക്കു് ലഭ്യമാകുന്ന വാക്കുകളേയും "
+"വാക്ക്യങ്ങളേയും ഇവ സൂചിപ്പിക്കുന്നു. ഉദാഹരണത്തിനു്:"
 
 #. Tag: para
 #, no-c-format
@@ -160,6 +188,11 @@ msgid ""
 "primary mouse button from the left to the right (making the mouse suitable "
 "for use in the left hand)."
 msgstr ""
+"<application>മൌസിനുള്ള മുന്‍ഗണനകള്‍</application> ലഭ്യമാക്കുന്നതിനായി പ്രധാന മെനുവില്‍ "
+"നിന്നും <menuchoice><guimenu>സിസ്റ്റം</guimenu><guisubmenu>മുന്‍ഗണനകള്‍</"
+"guisubmenu><guimenuitem>മൌസ്</guimenuitem></menuchoice> തെരഞ്ഞെടുക്കുക."
+"പ്രൈമറി മൌസ് ബട്ടണ്‍ ഇടത്തു് നിന്നും വലത്തേക്കു് മാറ്റുന്നതിനായി (ഇടത്തു് കൈയ്യുപയോഗിച്ചുള്ള "
+"മൌസ് പ്രവര്‍ത്തനത്തിനായി)<guilabel>ബട്ടണുകള്‍ </guilabel> എന്ന റ്റാബില്‍, <guilabel>ലെഫ്റ്റ്-ഹാന്‍ഡഡ് മൌസ്</guilabel> ചെക്ക് ബോക്സ് ക്ലിക്ക് ചെയ്തു് <guibutton>അടയ്ക്കുക</guibutton> ക്ലിക്ക് ചെയ്യുക ."
 
 #. Tag: para
 #, no-c-format
@@ -178,6 +211,17 @@ msgid ""
 "document and choose <menuchoice><guimenu>Edit</guimenu><guimenuitem>Paste</"
 "guimenuitem></menuchoice> from the <application>gedit</application> menu bar."
 msgstr ""
+"ഒരു <application>gedit</application> ഫയലിലേക്ക് ഒരു പ്രത്യേക അക്ഷരം ഉള്‍പ്പെടുത്തുന്നതിനായി, "
+"പ്രധാന മെനുബാറില്‍ നിന്നും <menuchoice><guimenu>പ്രയോഗങ്ങള്‍</guimenu><guisubmenu>ആക്സസറീസ്</"
+"guisubmenu><guimenuitem>ക്യാറക്ടര്‍ മാപ്പ്</guimenuitem></menuchoice> തെരഞ്ഞെടുക്കുക. അടുത്തതു്, <application>ക്യാറക്ടര്‍ മാപ്പ്</application>-ല്‍ മെനുബാറില്‍ നിന്നും <menuchoice><guimenu>തെരയുക</"
+"guimenu><guimenuitem>കണ്ടുപിടിക്കുക&hellip;</guimenuitem></menuchoice> തെരഞ്ഞെടുത്തു് "
+"<guilabel>തെരയുക</guilabel> ഫീള്‍ഡില്‍ അക്ഷരം ടൈപ്പ് ചെയ്തു് <guibutton>അടുത്തതു് "
+"</guibutton> ക്ലിക്ക് ചെയ്യുക. നിങ്ങള്‍ തെരയുന്ന അക്ഷരം <guilabel>ക്യാറക്ടര്‍ ടേബിളില്‍</guilabel> "
+"എടുത്തു് കാണിക്കപ്പെടുന്നു. <guilabel>പകര്‍ത്തേണ്ട വാചകം</guilabel> എന്ന ഫീള്‍ഡില്‍ ഈ "
+"അക്ഷരം ലഭിക്കുന്നതിനായി ഡബിള്‍ ക്ലിക്ക് ചെയ്യുക, എന്നിട്ടു് <guibutton>പകര്‍ത്തുക</guibutton> "
+"ബട്ടണ്‍ ക്ലിക്ക് ചെയ്യുക. ഇനി നിങ്ങളുടെ രേഖയിലേക്ക് തിരികെ പോയി, <application>gedit</application> "
+"പ്രധാന ബാറില്‍ നിന്നും <menuchoice><guimenu>ചിട്ടപ്പെടുത്തുക</guimenu><guimenuitem>ഒട്ടിക്കുക</"
+"guimenuitem></menuchoice> തെരഞ്ഞെടുക്കുക."
 
 #. Tag: para
 #, no-c-format
@@ -187,6 +231,11 @@ msgid ""
 "interface, all presented in proportional bold and all distinguishable by "
 "context."
 msgstr ""
+"പ്രയോഗത്തിന്റെ പേരുകള്‍; സിസ്റ്റത്തിലുള്ള മെനുവിന്റെ പേരുകളും വസ്തുക്കളും; "
+"പ്രയോഗമസുസരിച്ചുള്ള മെനുകള്‍; ഒരു ജിയുഐ ഇന്റര്‍ഫെയിസിലുള്ള ബട്ടണുകളും "
+"വാചകങ്ങളും എന്നിവ മുകളില്‍ പറഞ്ഞിരിക്കുന്ന വാചകത്തില്‍ ഉള്‍പ്പെടുന്നു. ഇവ എല്ലാം "
+"പ്രൊപോര്‍ഷണല്‍ ബോള്‍ഡ് ഉപയോഗിച്ചു് സൂചിപ്പിച്ചിരിക്കുന്നു, എല്ലാം കോണ്‍ടെക്സ്റ്റ് "
+"അനുസരിച്ചു് വ്യക്തമാകുകയും ചെയ്യുന്നു."
 
 #. Tag: para
 #, no-c-format
@@ -195,6 +244,9 @@ msgid ""
 "<application><replaceable>Proportional Bold Italic</replaceable></"
 "application>"
 msgstr ""
+"<command><replaceable>മോണോ-സ്പെയിസ്ഡ് ബോള്‍ഡ് ഇറ്റാലിക്</replaceable></command> "
+"അല്ലെങ്കില്‍ <application><replaceable>പ്രൊപോര്‍ഷണല്‍ ബോള്‍ഡ് ഇറ്റാലിക്</replaceable></"
+"application>"
 
 #. Tag: para
 #, no-c-format
@@ -204,6 +256,10 @@ msgid ""
 "input literally or displayed text that changes depending on circumstance. "
 "For example:"
 msgstr ""
+"മോണോ-സ്പെയിസ്ഡ് ബോള്‍ഡ് ആണെങ്കിലും പ്രൊപോര്‍ഷണല്‍ ബോള്‍ഡാണെങ്കിലും "
+"മാറ്റം സ്ഥാപിക്കുന്ന അല്ലെങ്കില്‍ വേരിയബിള്‍ വാചകത്തെ ചരിഞ്ഞുള്ള അക്ഷരശൈലി "
+"സൂചിപ്പിക്കുന്നു. നിങ്ങള്‍ ഇന്‍പുട്ട് ചെയ്യാത്ത വാചകങ്ങള്‍ അല്ലെങ്കില്‍ സാഹചര്യമനുസരിച്ചുള്ള "
+"വാചകങ്ങളെയാണു് ചരിഞ്ഞുള്ള അക്ഷരങ്ങള്‍ സൂചിപ്പിക്കുന്നതു്. ഉദാഹരണത്തിനു്:"
 
 #. Tag: para
 #, no-c-format
@@ -214,6 +270,11 @@ msgid ""
 "filename> and your username on that machine is john, type <command>ssh "
 "john@example.com</command>."
 msgstr ""
+"ssh ഉപയോഗിച്ചു് വിദൂരത്തിലുള്ള ഒരു സിസ്റ്റവുമായി ബന്ധപ്പെടുന്നതിനു്, ഷെല്‍ പ്രോംപ്റ്റില്‍ "
+"<command>ssh <replaceable>username</replaceable>@<replaceable>domain.name</replaceable></"
+"command> ടൈപ്പ് ചെയ്യുക. വീദൂര സിസ്റ്റം <filename>example.com</filename> എന്നും "
+"നിങ്ങളുടെ ഉപയോക്തൃനാമം john എന്നുമാണെങ്കില്‍, <command>ssh john@example.com</command> "
+"എന്നു് ടൈപ്പ് ചെയ്യുക."
 
 #. Tag: para
 #, no-c-format
@@ -223,6 +284,10 @@ msgid ""
 "<filename>/home</filename> file system, the command is <command>mount -o "
 "remount /home</command>."
 msgstr ""
+"<command>mount -o remount <replaceable>file-system</replaceable></command> കമാന്‍ഡ് "
+"നല്‍കിയിരിക്കുന്ന ഫയല്‍ സിസ്റ്റത്തിനെ റീമൌണ്ട് ചെയ്യുന്നു. ഉദാഹരണത്തിനു്, "
+"<filename>/home</filename> ഫയല്‍ സിസ്റ്റം റീമൌണ്ട് ചെയ്യുന്നതിനായുള്ള കമാന്‍ഡ് - "
+"<command>mount -o remount /home</command>."
 
 #. Tag: para
 #, no-c-format
@@ -232,6 +297,10 @@ msgid ""
 "result as follows: <command><replaceable>package-version-release</"
 "replaceable></command>."
 msgstr ""
+"ഇപ്പോള്‍ ഇന്‍സ്റ്റോള്‍ ചെയ്തിരിക്കുന്ന പാക്കേജിന്റെ നിലവിലുള്ള പതിപ്പു് കാണുന്നതിനായി, "
+"<command>rpm -q <replaceable>package</replaceable></command> കമാന്‍ഡ് "
+"ഉപയോഗിക്കുക. ഫലം: <command><replaceable>package-version-release</"
+"replaceable></command>."
 
 #. Tag: para
 #, no-c-format
@@ -240,6 +309,10 @@ msgid ""
 "system, package, version and release. Each word is a placeholder, either for "
 "text you enter when issuing a command or for text displayed by the system."
 msgstr ""
+"മുകളില്‍ പറഞ്ഞിരിക്കുന്ന ചരഞ്ഞ കട്ടിയിലുള്ള വാക്കുകള്‍ ശ്രദ്ധിക്കുക &mdash; username, "
+"domain.name, file-system, package, version, release. ഓരോ വാക്കും ഓരോ കാര്യത്തെ സൂചിപ്പിക്കുന്നു, "
+"ഒന്നുകില്‍ നിങ്ങള്‍ നല്‍കുന്ന കമാന്‍ഡിനുള്ള വാചകത്തിനു് അല്ലെങ്കില്‍ സിസ്റ്റം ലഭ്യമാക്കുന്ന "
+"വാചകം."
 
 #. Tag: para
 #, no-c-format
@@ -247,11 +320,13 @@ msgid ""
 "Aside from standard usage for presenting the title of a work, italics "
 "denotes the first use of a new and important term. For example:"
 msgstr ""
+"ഒരു സംരംഭത്തിന്റെ തലക്കെട്ട് വ്യക്തമാക്കുന്നതിനു പുറമേ, പുതിയതും പ്രധാനപ്പെട്ടതുമായ "
+"വാക്കിന്റെ ആദ്യത്തെ ഉപയോഗവും ചരിഞ്ഞ അക്ഷരശൈലിയില്‍ കാണിക്കുന്നു."
 
 #. Tag: para
 #, no-c-format
 msgid "Publican is a <firstterm>DocBook</firstterm> publishing system."
-msgstr ""
+msgstr "Publican ഒരു <firstterm>DocBook</firstterm> പബ്ലിഷിങ് സിസ്റ്റമാണു്."
 
 #. Tag: title
 #, no-c-format
@@ -259,25 +334,25 @@ msgid "Pull-quote Conventions"
 msgstr "Pull-quote Conventions"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Terminal output and source code listings are set off visually from the "
 "surrounding text."
 msgstr ""
-"Two, commonly multi-line, data types are set off visually from the "
+"Terminal output and source code listings are set off visually from the "
 "surrounding text."
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Output sent to a terminal is set in <computeroutput>mono-spaced roman</"
 "computeroutput> and presented thus:"
 msgstr ""
-"ഒരു ടെര്‍മിനലിലേക്കുള്ള ഔട്ട്പുട്ടും <computeroutput>മോണോ-സ്പെയിസ്ഡ് റോമനില്‍</"
+"ഒരു ടെര്‍മിനലിലേക്കുള്ള ഔട്ട്പുട്ട് <computeroutput>മോണോ-സ്പെയിസ്ഡ് റോമനില്‍</"
 "computeroutput> ക്രമികരിച്ചിരിക്കുന്നു. അവ നല്‍കിയിരിക്കുന്നതു് ഇപ്രകാരമാണു്:"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Source-code listings are also set in <computeroutput>mono-spaced roman</"
 "computeroutput> but add syntax highlighting as follows:"
@@ -305,15 +380,15 @@ msgid "Note"
 msgstr "കുറിപ്പ്"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Notes are tips, shortcuts or alternative approaches to the task at hand. "
 "Ignoring a note should have no negative consequences, but you might miss out "
 "on a trick that makes your life easier."
 msgstr ""
-"നിങ്ങള്‍ ചെയ്യുന്ന ജോലിയ്ക്കാവശ്യമുള്ള ഒരു സൂചന അല്ലെങ്കില്‍ ഒരു കുറുക്കുവഴി ആണു് കുറിപ്പുകള്‍. ഇവ "
-"അവഗണിക്കുന്നതു് വിവരങ്ങള്‍ നഷ്ടമാക്കുന്നില്ല എങ്കിലും നിങ്ങളുടെ ജോലി എളുപ്പമാക്കുന്ന ഒരു കുറുക്കുവഴി "
-"നിങ്ങള്‍ക്കു് നഷ്ടപ്പെട്ടേക്കാം."
+"നിങ്ങള്‍ ചെയ്യുന്ന ജോലിയ്ക്കാവശ്യമുള്ള ഒരു സൂചന അല്ലെങ്കില്‍ ഒരു കുറുക്കുവഴി ആണു് കുറിപ്പുകള്‍. "
+"ഇവ അവഗണിക്കുന്നതു് വിവരങ്ങള്‍ നഷ്ടമാക്കുന്നില്ല എങ്കിലും നിങ്ങളുടെ ജോലി എളുപ്പമാക്കുന്ന "
+"ഒരു കുറുക്കുവഴി നിങ്ങള്‍ക്കു് നഷ്ടപ്പെട്ടേക്കാം."
 
 #. Tag: title
 #, no-c-format
@@ -321,7 +396,7 @@ msgid "Important"
 msgstr "പ്രധാനപ്പെട്ടതു്"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Important boxes detail things that are easily missed: configuration changes "
 "that only apply to the current session, or services that need restarting "
@@ -339,62 +414,11 @@ msgid "Warning"
 msgstr "മുന്നറിയിപ്പ്"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Warnings should not be ignored. Ignoring warnings will most likely cause "
 "data loss."
 msgstr ""
-"മുന്നറിയിപ്പുകള്‍ അവഗണിക്കുന്നതു് വിവരങ്ങള്‍ നഷ്ടപ്പെടുന്നതിനിടയാക്കുന്നു. അതിനാല്‍ അവ പ്രത്യേകം "
-"ശ്രദ്ധിക്കുക."
+"മുന്നറിയിപ്പുകള്‍ അവഗണിക്കുന്നതു് വിവരങ്ങള്‍ നഷ്ടപ്പെടുന്നതിനിടയാക്കുന്നു. "
+"അതിനാല്‍ അവ പ്രത്യേകം ശ്രദ്ധിക്കുക."
 
-#~ msgid ""
-#~ "books        Desktop   documentation  drafts  mss    photos   stuff  svn\n"
-#~ "books_tests  Desktop1  downloads      images  notes  scripts  svgs"
-#~ msgstr ""
-#~ "books        Desktop   documentation  drafts  mss    photos   stuff  svn\n"
-#~ "books_tests  Desktop1  downloads      images  notes  scripts  svgs"
-
-#~ msgid ""
-#~ "package org.jboss.book.jca.ex1;\n"
-#~ "\n"
-#~ "import javax.naming.InitialContext;\n"
-#~ "\n"
-#~ "public class ExClient\n"
-#~ "{\n"
-#~ "   public static void main(String args[]) \n"
-#~ "       throws Exception\n"
-#~ "   {\n"
-#~ "      InitialContext iniCtx = new InitialContext();\n"
-#~ "      Object         ref    = iniCtx.lookup(\"EchoBean\");\n"
-#~ "      EchoHome       home   = (EchoHome) ref;\n"
-#~ "      Echo           echo   = home.create();\n"
-#~ "\n"
-#~ "      System.out.println(\"Created Echo\");\n"
-#~ "\n"
-#~ "      System.out.println(\"Echo.echo('Hello') = \" + echo.echo(\"Hello"
-#~ "\"));\n"
-#~ "   }\n"
-#~ "   \n"
-#~ "}"
-#~ msgstr ""
-#~ "package org.jboss.book.jca.ex1;\n"
-#~ "\n"
-#~ "import javax.naming.InitialContext;\n"
-#~ "\n"
-#~ "public class ExClient\n"
-#~ "{\n"
-#~ "   public static void main(String args[]) \n"
-#~ "       throws Exception\n"
-#~ "   {\n"
-#~ "      InitialContext iniCtx = new InitialContext();\n"
-#~ "      Object         ref    = iniCtx.lookup(\"EchoBean\");\n"
-#~ "      EchoHome       home   = (EchoHome) ref;\n"
-#~ "      Echo           echo   = home.create();\n"
-#~ "\n"
-#~ "      System.out.println(\"Created Echo\");\n"
-#~ "\n"
-#~ "      System.out.println(\"Echo.echo('Hello') = \" + echo.echo(\"Hello"
-#~ "\"));\n"
-#~ "   }\n"
-#~ "   \n"
-#~ "}"
