--- a/publican/datadir/Common_Content/common/mr-IN/Conventions.po
+++ b/publican/datadir/Common_Content/common/mr-IN/Conventions.po
@@ -1,14 +1,15 @@
-# translation of Conventions.po to marathi
+# translation of Conventions.po to Marathi
 # sandeep shedmake <sandeep.shedmake@gmail.com>, 2007.
 # Sandeep Shedmake <sandeep.shedmake@gmail.com>, 2008.
+# Sandeep Shedmake <sshedmak@redhat.com>, 2009.
 msgid ""
 msgstr ""
 "Project-Id-Version: Conventions\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
 "POT-Creation-Date: 2009-12-01T23:44:40\n"
-"PO-Revision-Date: 2008-10-08 12:51+0530\n"
-"Last-Translator: Sandeep Shedmake <sandeep.shedmake@gmail.com>\n"
-"Language-Team: marathi\n"
+"PO-Revision-Date: 2009-12-02 16:24+0530\n"
+"Last-Translator: Sandeep Shedmake <sshedmak@redhat.com>\n"
+"Language-Team: Marathi <fedora-trans-mr@redhat.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -18,7 +19,7 @@ msgstr ""
 #. Tag: title
 #, no-c-format
 msgid "Document Conventions"
-msgstr "दस्तऐवज पध्दती"
+msgstr "दस्तऐवज नियमावली"
 
 #. Tag: para
 #, no-c-format
@@ -27,7 +28,7 @@ msgid ""
 "and draw attention to specific pieces of information."
 msgstr ""
 "ठराविक शब्द व वाक्यरचना ठळक करण्याकरीता व ठराविक माहितीकडे लक्ष वेधण्याकरीता ही "
-"पुस्तिका विविध पद्धती वापरते."
+"पुस्तिका विविध नियमावली वापरते."
 
 #. Tag: para
 #, no-c-format
@@ -48,7 +49,7 @@ msgstr ""
 #. Tag: title
 #, no-c-format
 msgid "Typographic Conventions"
-msgstr "टायपोग्राफीक पद्धती"
+msgstr "टायपोग्राफीक नियमावली"
 
 #. Tag: para
 #, no-c-format
@@ -57,22 +58,22 @@ msgid ""
 "and phrases. These conventions, and the circumstances they apply to, are as "
 "follows."
 msgstr ""
-"ठराविक शब्द व वाक्यरचना करीता लक्ष वेधण्याकरीता चार टायपोग्राफिक पद्धती वापरले जाते. "
-"या पद्धती, व त्याच्याशी संबंधीत लागू करण्याजोगी वातावरण, खालिल नुरूप आहेत."
+"ठराविक शब्द व वाक्यरचना करीता लक्ष वेधण्याकरीता चार टायपोग्राफिक नियमावली वापरले जाते. "
+"या नियमावली, व त्याच्याशी संबंधीत लागू करण्याजोगी वातावरण, खालिल नुरूप आहेत."
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "<literal>Mono-spaced Bold</literal>"
-msgstr "मोनो-स्पेस्ड् गडद"
+msgstr "<literal>मोनो-स्पेस्ड् बोल्ड</literal>"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Used to highlight system input, including shell commands, file names and "
 "paths. Also used to highlight keycaps and key combinations. For example:"
 msgstr ""
-"प्रणाली इन्पुट, सर्व शेल आदेश, फाइल नाव व मार्ग ठळक करण्याकरीता वापरले जाते. कि कॅप व "
-"कि-प्रकार ठळक करण्याकरीता देखिल वापरले जाते. उदाहरणार्थ:"
+"प्रणाली इन्पुट, सर्व शेल आदेश, फाइलचे नावे व मार्ग ठळक करण्यासाठी वापरले जाते. किकॅप्स् व "
+"कि-प्रकार ठळक करण्यासाठी देखील वापरले जाते. उदाहरणार्थ:"
 
 #. Tag: para
 #, no-c-format
@@ -88,21 +89,18 @@ msgstr ""
 "<keycap>Enter</keycap> आदेश चालवा."
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "The above includes a file name, a shell command and a keycap, all presented "
 "in mono-spaced bold and all distinguishable thanks to context."
-msgstr ""
-"वरील अंतर्गत फाइल नाव, शेल आदेश व कि कॅप मोनो-स्पेस्ड् गडद फॉन्ट नुरूप समाविष्ठीत आहे."
+msgstr "वरीलमध्ये पाइलचे नाव, शेल आदेश व किकॅपचे समावेश आहे, सर्व मोनो-स्पेस्ड् बोल्ड मध्ये प्रस्तुत केले जातात व सगळ्यांचे संदर्भ वेगळे आढळतात."
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Key combinations can be distinguished from keycaps by the hyphen connecting "
 "each part of a key combination. For example:"
-msgstr ""
-"कि-जोडणी प्रकार कि कॅपशी विभिन्न आहे हे कि-जोडणीच्या हायफेन द्वारे ओळखले जाऊ शकते. "
-"उदाहरणार्थ:"
+msgstr "कि जोडणी प्रकारसाठी हायफन द्वारे प्रत्येक कि जोडणी प्रकार किकॅप्स् पासून वेगळू करणे शक्य आहे. उहाहरणार्थ:"
 
 #. Tag: para
 #, no-c-format
@@ -123,24 +121,22 @@ msgstr ""
 "keycap></keycombo> दाबा ."
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "The first paragraph highlights the particular keycap to press. The second "
 "highlights two key combinations (each a set of three keycaps with each set "
 "pressed simultaneously)."
-msgstr ""
-"पहिली वाक्यरचना दाबण्याजोगी ठराविक किकॅप दर्शविते. दुसरी वाक्यरचना दाबण्याजोगी तीन "
-"कि कॅपचे दोन संच दर्शविते, प्रत्येक संच समवेळी दाबले जाते."
+msgstr "पहिला परिच्छेद दाबण्याजोगी ठराविक किकॅप ठळक करतो. दुसरा दोन कि प्रकार ठळक करतो (प्रत्येक संचामध्ये तीन किकॅप्स् असतात व प्रत्येक संच तीनवेळा लागोपाठ दाबला जातो)."
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "If source code is discussed, class names, methods, functions, variable names "
 "and returned values mentioned within a paragraph will be presented as above, "
 "in <literal>mono-spaced bold</literal>. For example:"
 msgstr ""
-"स्त्रोत कोड संबंधित परिच्छेद अंतर्गत, क्लास् नाव, पद्धती, कार्यपद्धती, वेरियेबल नाव व "
-"रिटअर्न मुल्य, <literal>मोनो-स्पेस्ड् गडद</literal> नुरूप दर्शविले जातील. उदाहरणार्थ:"
+"सोअर्स् कोडचा उल्लेख केल्यावर परिच्छेदातील, क्लास्चे नाव, मेथड्स्, फंक्शन्स्, वेरियेबल नावे व "
+"रिटअर्न मूल्य <literal>मोनो-स्पेस्ड् बोल्ड</literal> मध्ये प्रस्तूत केले जातील. उदाहरणार्थ:"
 
 #. Tag: para
 #, no-c-format
@@ -157,21 +153,21 @@ msgstr ""
 #. Tag: para
 #, no-c-format
 msgid "<application>Proportional Bold</application>"
-msgstr ""
+msgstr "<application>प्रप्रोर्श्नल बोल्ड</application>"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "This denotes words or phrases encountered on a system, including application "
 "names; dialog box text; labeled buttons; check-box and radio button labels; "
 "menu titles and sub-menu titles. For example:"
 msgstr ""
-"हे प्रणाली वरील शब्द किंवा वाक्यरचना दर्शविते, ज्यातअनुप्रयोग नाव; संवाद चौकोन पाठ्य; "
-"लेबल बटन; चेक-बॉक्स् व रेडिओ बटन लेबल; मेन्यू शिर्षक व उप-मेन्यू शिर्षक समाविष्टीत आहे. "
+"हे प्रणालीवरील शब्द किंवा वाक्यरचना दाखवते, ज्यामध्ये ऍनीमेशनचे नाव; संवादपेटीतील मजकूर; "
+"लेबल बटने; चेक-बॉक्स् व रेडिओ बटन लेबल्स्; मेन्यू शिर्षक व उप-मेन्यू शिर्षकाचे समावेश आहे. "
 "उदाहरणार्थ:"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Choose <menuchoice><guimenu>System</guimenu><guisubmenu>Preferences</"
 "guisubmenu><guimenuitem>Mouse</guimenuitem></menuchoice> from the main menu "
@@ -181,15 +177,13 @@ msgid ""
 "primary mouse button from the left to the right (making the mouse suitable "
 "for use in the left hand)."
 msgstr ""
-"<application>माऊस प्राधान्यता</application> दाखल करण्याकरीता मुख्य मेन्यू पट्टी पासून "
-"<guimenu>प्रणाली > प्राधान्यता > माऊस</guimenu> निवडा.  <guilabel>बटन</"
-"guilabel> टॅब अंतर्गत, <guilabel>डावी-हाताळणी माऊस</guilabel> चेक बॉक्सवर क्लिक "
-"करा व प्राथमिक माऊस बटण बदलविण्याकरीता किंवा डावी पासून उजवीकडे जाण्याकरीता "
-"<guibutton>बंद करा</guibutton> यावर क्लिक् करा (डावी हाथाळणी करीता माऊसचा वापर "
-"सुलभ होते )."
+"<menuchoice><guimenu>प्रणाली</guimenu><guisubmenu>पसंती</"
+"guisubmenu><guimenuitem>माऊस</guimenuitem></menuchoice> पर्याय मुख्य मेन्यू पट्टीतून नीवडा व <application>माऊस पसंती</application> सुरू करा. "
+"<guilabel>बटन्स्</guilabel> टॅबमध्ये, <guilabel>डावे-हाताळणी माऊस</"
+"guilabel> चेक बॉक्स क्लिक करा व <guibutton>बंद करा</guibutton> क्लिक करून प्राथमीक माऊस बटन डावीपासून ऊजवीकडे बदला (यामुले उजव्या हाताळणीच्या वापरकर्त्यांना माऊस हाताळणी सोपे होते)."
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "To insert a special character into a <application>gedit</application> file, "
 "choose <menuchoice><guimenu>Applications</guimenu><guisubmenu>Accessories</"
@@ -205,28 +199,23 @@ msgid ""
 "document and choose <menuchoice><guimenu>Edit</guimenu><guimenuitem>Paste</"
 "guimenuitem></menuchoice> from the <application>gedit</application> menu bar."
 msgstr ""
-"<application>gedit</application> फाइल अंतर्गत विशेष अक्षर प्रविष्ट करायचे असल्यास, "
-"मुख्य मेन्यू पट्टी पासून <guimenu>अनुप्रयोग > अगाऊ उपकरण > अक्षर मॅप</guimenu> वापरा. "
-"पुढे, <application>अक्षर मॅप Map</application> मेन्यू पट्टी पासून <guimenu>शोधा > "
-"शोधा&hellip;</guimenu> निवडा, <guilabel>शोधा</guilabel> गुणविशेष अंतर्गत अक्षराचे "
-"नाव प्रविष्ट करा व <guibutton>पुढिल</guibutton> यावर क्लिक करा. प्रविष्ट अक्षर "
-"<guilabel>अक्षर तक्ता</guilabel> अंतर्गत ठळकरित्या दर्शविले जाईल. ठळक अक्षरावर "
-"दोनवेळा क्लिक करून यांस <guilabel>प्रतिकृतजोगी पाठ्य</guilabel> गुणविशेष येथे स्थानांतरीत "
-"करा व <guibutton>प्रतिकृत करा</guibutton> बटनावर क्लिक करा. आता दस्तऐवजाकडे जा व "
-"<application>gedit</application> मेन्यू पट्टीतून <guimenu>संपादन > चिकटवा</"
-"guimenu> निवडा."
+"<application>gedit</application> फाइलमध्ये विशेष अक्षर अंतर्भूत करण्यासाठी, मुख्य मेन्यू पट्टीतून "
+"<menuchoice><guimenu>ऍप्लिकेशन्स्</guimenu><guisubmenu>ऍक्सेसरीज्</"
+"guisubmenu><guimenuitem>अक्षर मॅप</guimenuitem></menuchoice> नीवडा. पुढे, <menuchoice><guimenu>शोधा</guimenu><guimenuitem>शोधा&hellip;</guimenuitem></menuchoice> नीवडा, "
+"<application>अक्षर मॅप</application> मेन्यू पट्टीतून, अक्षराचे नाव <guilabel>शोधा</guilabel> क्षेत्रात टाईप करा व "
+"<guibutton>पुढचे</guibutton>बटन क्लिक करा. शोधकरण्याजोगी अक्षर <guilabel>अक्षर तक्ता</guilabel> येथे ठळक केले जाईल. हे ठळक केलेले अक्षराला दोनवेळा क्लिक केल्यानंतर <guilabel>प्रत बनवण्याजोगी मजकूर</guilabel> क्षेत्रात स्थीत करा व <guibutton>प्रत बनवा</guibutton> बटनावर क्लिक करा. आत्ता दस्तऐवजाकडे जा व <menuchoice><guimenu>संपादीत करा</guimenu><guimenuitem>चिकटवा</"
+"guimenuitem></menuchoice> पर्याय <application>gedit</application> मेन्यू पट्टीतून नीवडा."
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "The above text includes application names; system-wide menu names and items; "
 "application-specific menu names; and buttons and text found within a GUI "
 "interface, all presented in proportional bold and all distinguishable by "
 "context."
 msgstr ""
-"वरील पाठ्य अंतर्गत अनुप्रयोग नाव; प्रणाली-क्षेत्रमेन्यू नाव व घटक; अनुप्रयोग-निर्देशीत मेन्यू "
-"नाव; व बटन वGUI संवाद अंतर्गत आढळलेले पाठ्य समाविष्टीत आहे, सर्व Proportional Bold "
-"अंतर्ग व संबंधित संदर्भशी निगडीत."
+"वरील मजकूरमध्ये ऍप्लिकेशनचे नावे; प्रणाली-क्षेत्र मेन्यू नावे व घटके; ऍप्लिकेशन्स्-निर्देशीत मेन्यू "
+"नावे; व बटने व GUI संवादमधील मजकूर समाविष्टीत आहे, सर्व प्रप्रोर्श्नल बोल्डमध्ये प्रस्तुत केले आहेत व संदर्भशी नीगडीत आहे."
 
 #. Tag: para
 #, no-c-format
@@ -235,19 +224,19 @@ msgid ""
 "<application><replaceable>Proportional Bold Italic</replaceable></"
 "application>"
 msgstr ""
-"<command><replaceable>Mono-spaced Bold Italic</replaceable></command> किंवा "
-"<application><replaceable>Proportional Bold Italic</replaceable></"
+"<command><replaceable>मोनो-स्पेस्ड् बोल्ड इटॅलीक</replaceable></command> किंवा "
+"<application><replaceable>प्रप्रोर्श्नल बोल्ड इटॅलीक</replaceable></"
 "application>"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Whether mono-spaced bold or proportional bold, the addition of italics "
 "indicates replaceable or variable text. Italics denotes text you do not "
 "input literally or displayed text that changes depending on circumstance. "
 "For example:"
 msgstr ""
-"Mono-spaced Bold किंवा Proportional Bold, इटॅलीक्स् बदलविण्याजोगी किंवा बदलाव पाठ्य "
+"मोनो-स्पेस्ड् बोल्ड किंवा प्रप्रोर्श्नल बोल्ड, इटॅलीक्स् बदलविण्याजोगी किंवा बदलाव पाठ्य "
 "दर्शविते. इटॅलीक्स् तुम्ही इच्छिकरित्या प्रविष्ट न केलेलेकिंवा परस्पर स्थिती नुरूप बदलणारे पाठ्य "
 "दर्शविते. उदाहरणार्थ:"
 
@@ -313,39 +302,35 @@ msgstr ""
 #. Tag: para
 #, no-c-format
 msgid "Publican is a <firstterm>DocBook</firstterm> publishing system."
-msgstr ""
+msgstr "पब्लिकन <firstterm>डॉकबूक</firstterm> प्रकाशन प्रणाली आहे."
 
 #. Tag: title
 #, no-c-format
 msgid "Pull-quote Conventions"
-msgstr "पूल्ल-कोट् पद्धती"
+msgstr "पूल्ल-कोट् नियमावली"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Terminal output and source code listings are set off visually from the "
 "surrounding text."
-msgstr ""
-"आजूबाजूचे पाठ्य पासून दोन, सर्वसाधारणरिती बहु-ओळ, माहिती प्रकार दृश्यास्परित्या निश्चित "
-"केले जाते."
+msgstr "भोवतालच्या मजकूर पासून टर्मिनलचे आऊटपुट व स्रोत कोड सूची दृष्यास्पदपणे सेट केले जाते."
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Output sent to a terminal is set in <computeroutput>mono-spaced roman</"
 "computeroutput> and presented thus:"
-msgstr ""
-"टर्मिनल करीता पाठविलेले आऊटपुट <computeroutput>Mono-spaced Roman</"
-"computeroutput> अतंर्गत निश्चित केले जाते व खालिलरित्या प्रस्तुत केले जाते:"
+msgstr "टर्मिनलकरीता पाठवलेले आऊटपुट <computeroutput>मोनो-स्पेस्ड् रोमन</computeroutput> मध्ये निश्चित केले असते व याप्रमाणे प्रस्तुत केले जाते:"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Source-code listings are also set in <computeroutput>mono-spaced roman</"
 "computeroutput> but add syntax highlighting as follows:"
 msgstr ""
-"<computeroutput>मोनो-स्पेस्ड् रोमन</computeroutput> अंतर्गत स्त्रोत-कोड यादी सुद्धता "
-"निश्चित केली जाते:"
+"सोअर्स-कोड सूची देखील <computeroutput>मोनो-स्पेस्ड् रोमन</"
+"computeroutput> मध्ये सेट केले जाते परंतु रचना या प्रकारे ठळक केली जाते:"
 
 #. Tag: title
 #, no-c-format
@@ -357,8 +342,7 @@ msgstr "टिप व सावधानता"
 msgid ""
 "Finally, we use three visual styles to draw attention to information that "
 "might otherwise be overlooked."
-msgstr ""
-"शेवटी, दुर्लक्ष करण्याजोगी माहितीकडे लक्ष वेधण्याकरीता तीन दृश्यास्पद शैली वापरली जाते."
+msgstr "शेवटी, दुर्लक्ष करण्याजोगी माहितीकडे लक्ष वेधण्याकरीता तीन दृश्यास्पद शैली वापरली जाते."
 
 #. Tag: title
 #, no-c-format
@@ -366,15 +350,14 @@ msgid "Note"
 msgstr "टिप्पणी"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Notes are tips, shortcuts or alternative approaches to the task at hand. "
 "Ignoring a note should have no negative consequences, but you might miss out "
 "on a trick that makes your life easier."
 msgstr ""
-"टिपण्णी टिप किंवा शार्टकट किंवा ठराविक कार्य करीता वैकल्पिक दृष्टीकोण आहे. टिपण्णीकडे "
-"दुर्लक्ष केल्यास नकारात्मक परिणाम आढळत नाही, परंतु तुम्ही सुलभ व सोपे पद्धत पासून वंचीत होऊ "
-"शकता."
+"टिपण्णी सहसा टिपा, शार्टकट्स् किंवा ठराविक कार्यसाठी वैकल्पिक पर्याय आहे. "
+"टिपांकडे दुर्लक्ष केल्यास नकारात्मक परिणाम आढळत नाही, परंतु बरेच सोप्या गोष्टी तुम्ही गमवाल."
 
 #. Tag: title
 #, no-c-format
@@ -382,16 +365,13 @@ msgid "Important"
 msgstr "महत्वाचे"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Important boxes detail things that are easily missed: configuration changes "
 "that only apply to the current session, or services that need restarting "
 "before an update will apply. Ignoring a box labeled 'Important' won't cause "
 "data loss but may cause irritation and frustration."
-msgstr ""
-"सहज न आढळणाऱ्या गोष्टी महत्वाचे चौकोन द्वारे दर्शविले जाते: संयोजना बदल फक्त वर्तमान "
-"सत्र, किंवा सेवा ज्यांस अद्ययावतपूर्वी पुन्हप्रारंभची आवश्यकता आहे त्यांस लागू होते. महत्वाचे "
-"चौकोनकडे दुर्लक्ष केल्यास माहिती लुप्त होत नाही पण उगाच त्रास वाढू शकतो."
+msgstr "महत्वाच्या बॉक्सेजमध्ये सहज न आढळणाऱ्या बाबचे समावेश आहे: संरचना बदल जे फक्त सध्याच्या सत्रकरीता लागू होतात, किंवा सेवा ज्यांस सुधारणापूर्वी पुनः सुरू करणे आवश्यक आहे लागू केले जातात. 'महत्वाचे' असे लेबल केलेल्या बॉक्सकडे दुर्लक्ष केल्यास डाटा नाहीसा होत नाही परंतु त्रास नक्की होतो."
 
 #. Tag: title
 #, no-c-format
@@ -399,93 +379,9 @@ msgid "Warning"
 msgstr "सावधानता"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Warnings should not be ignored. Ignoring warnings will most likely cause "
 "data loss."
 msgstr "सावधानता दुर्लक्ष करू नका. सावधानताकडे दुर्लक्ष केल्यास माहिती लुप्त होऊ शकते."
 
-#, fuzzy
-#~ msgid ""
-#~ "Note the <guimenu>&#62;</guimenu> shorthand used to indicate traversal "
-#~ "through a menu and its sub-menus. This avoids difficult-to-follow "
-#~ "phrasing such as &#39;Select <guimenuitem>Mouse</guimenuitem> from the "
-#~ "<guimenu>Preferences</guimenu> sub-menu in the <guimenu>System</guimenu> "
-#~ "menu of the main menu bar&#39;."
-#~ msgstr ""
-#~ "लक्षात घ्या <guimenu>></guimenu> मेन्यू व उप-मेन्यू अंतर्गत संचारन दर्शविते. यामुळे लागू "
-#~ "करण्याजोगी कठीण 'मुख्य मेन्यू पट्टी अतंर्गत <guimenu>प्रणाली</guimenu> उप-मेन्यू "
-#~ "<guimenu>प्राधान्यता</guimenu> पासून <guimenuitem>माऊस</guimenuitem> निवडा' "
-#~ "दृष्टीकोण टाळले जाऊ शकते."
-
-#~ msgid ""
-#~ "When the Apache HTTP Server accepts requests, it dispatches child "
-#~ "processes or threads to handle them. This group of child processes or "
-#~ "threads is known as a <firstterm>server-pool</firstterm>. Under Apache "
-#~ "HTTP Server 2.0, the responsibility for creating and maintaining these "
-#~ "server-pools has been abstracted to a group of modules called "
-#~ "<firstterm>Multi-Processing Modules</firstterm> (<firstterm>MPMs</"
-#~ "firstterm>). Unlike other modules, only one module from the MPM group can "
-#~ "be loaded by the Apache HTTP Server."
-#~ msgstr ""
-#~ "Apache HTTP सर्वर जेव्हा विनंती स्वीकारतो, तेव्हा हाताळणीकरीता उप कार्य किंवा "
-#~ "थ्रेडचा वापर केला जातो. या उपकार्य किंवा थ्रेड गटास<firstterm>सर्वर-संग्रह</"
-#~ "firstterm> असे म्हटले जाते. Apache HTTP सर्वर 2.0 वरील, सर्वर-संग्रह बनविण्याची व "
-#~ "सुस्थीत करण्याचे काम <firstterm>Multi-Processing Modules</firstterm> "
-#~ "(<firstterm>MPMs</firstterm>) या विभाग गट द्वारे हाताळले जाते. अन्य विभागपेक्षा, "
-#~ "MPM गट पासूनचे फक्त एकच विभागApache HTTP सर्वर द्वारे दाखल केले जाऊ शकते."
-
-#~ msgid "Proportional Bold"
-#~ msgstr "प्रपोशनल गडद"
-
-#~ msgid ""
-#~ "books        Desktop   documentation  drafts  mss    photos   stuff  svn\n"
-#~ "books_tests  Desktop1  downloads      images  notes  scripts  svgs"
-#~ msgstr ""
-#~ "पुस्तक        डेस्कटॉप   दस्तऐवज  ड्राफ्ट  mss    चित्र   इत्यादी  svn\n"
-#~ "पुस्तक_चाचणी  डेसक्टॉप1  डाऊनलोडस्      प्रतिमा  टिप  स्क्रिप्ट  svgs"
-
-#~ msgid ""
-#~ "package org.jboss.book.jca.ex1;\n"
-#~ "\n"
-#~ "import javax.naming.InitialContext;\n"
-#~ "\n"
-#~ "public class ExClient\n"
-#~ "{\n"
-#~ "   public static void main(String args[]) \n"
-#~ "       throws Exception\n"
-#~ "   {\n"
-#~ "      InitialContext iniCtx = new InitialContext();\n"
-#~ "      Object         ref    = iniCtx.lookup(\"EchoBean\");\n"
-#~ "      EchoHome       home   = (EchoHome) ref;\n"
-#~ "      Echo           echo   = home.create();\n"
-#~ "\n"
-#~ "      System.out.println(\"Created Echo\");\n"
-#~ "\n"
-#~ "      System.out.println(\"Echo.echo('Hello') = \" + echo.echo(\"Hello"
-#~ "\"));\n"
-#~ "   }\n"
-#~ "   \n"
-#~ "}"
-#~ msgstr ""
-#~ "package org.jboss.book.jca.ex1;\n"
-#~ "\n"
-#~ "import javax.naming.InitialContext;\n"
-#~ "\n"
-#~ "public class ExClient\n"
-#~ "{\n"
-#~ "   public static void main(String args[]) \n"
-#~ "       throws Exception\n"
-#~ "   {\n"
-#~ "      InitialContext iniCtx = new InitialContext();\n"
-#~ "      Object         ref    = iniCtx.lookup(\"EchoBean\");\n"
-#~ "      EchoHome       home   = (EchoHome) ref;\n"
-#~ "      Echo           echo   = home.create();\n"
-#~ "\n"
-#~ "      System.out.println(\"Created Echo\");\n"
-#~ "\n"
-#~ "      System.out.println(\"Echo.echo('Hello') = \" + echo.echo(\"Hello"
-#~ "\"));\n"
-#~ "   }\n"
-#~ "   \n"
-#~ "}"
