--- a/publican/datadir/Common_Content/common/or-IN/Conventions.po
+++ b/publican/datadir/Common_Content/common/or-IN/Conventions.po
@@ -1,18 +1,20 @@
 # translation of Conventions.po to Oriya
 # Subhransu Behera <arya_subhransu@yahoo.co.in>, 2007.
+# Manoj Kumar Giri <mgiri@redhat.com>, 2009.
 msgid ""
 msgstr ""
 "Project-Id-Version: Conventions\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
 "POT-Creation-Date: 2009-12-01T23:44:40\n"
-"PO-Revision-Date: 2007-11-06 19:23+0530\n"
-"Last-Translator: Subhransu Behera <arya_subhransu@yahoo.co.in>\n"
-"Language-Team: Oriya <oriya-group@lists.sarovar.org>\n"
+"PO-Revision-Date: 2009-12-03 12:48+0530\n"
+"Last-Translator: Manoj Kumar Giri <mgiri@redhat.com>\n"
+"Language-Team: Oriya <oriya-it@googlegroups.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: KBabel 1.11.4\n"
-"Plural-Forms: Plural-Forms: nplurals=2; plural=(n!=1);\n"
+"Plural-Forms:  nplurals=2; plural=(n!=1);\n\n"
+"\n"
 "\n"
 "\n"
 
@@ -27,6 +29,8 @@ msgid ""
 "This manual uses several conventions to highlight certain words and phrases "
 "and draw attention to specific pieces of information."
 msgstr ""
+"ଏହି ହସ୍ତପୁସ୍ତକ କିଛି ଶବ୍ଦ ଏବଂ ବାକ୍ୟାଂଶକୁ ଆଲୋକିତ କରିବା ପାଇଁ ଅନେକ ନିୟମକୁ ବ୍ୟବହାର କରିଥାଏ ଏବଂ "
+"କିଛି ନିର୍ଦ୍ଦିଷ୍ଟ ସୂଚନା ଆଡ଼କୁ ଦୃଷ୍ଟି ଦେଇଥାଏ।"
 
 #. Tag: para
 #, no-c-format
@@ -38,11 +42,17 @@ msgid ""
 "displayed. Note: Red Hat Enterprise Linux 5 and later includes the "
 "Liberation Fonts set by default."
 msgstr ""
+"PDF ଏବଂ କାଗଜ ସମ୍ପାଦନରେ, ଏହି ହସ୍ତପୁସ୍ତକ <ulink url=\"https://fedorahosted.org/liberation-fonts/\"> "
+"Liberation Fonts</ulink> ସେଟରୁ କଢ଼ାଯାଉଥିବା typefaces କୁ ବ୍ୟବହାର କରିଥାଏ। "
+"ମୁକ୍ତି ଅକ୍ଷରରୂପ ସେଟକୁ HTML ସମ୍ପାଦନରେ ମଧ୍ଯରେ ବ୍ବହାର କରାଯାଇଥାଏ, ଯଦି ସେହି ସେଟକୁ ଆପଣଙ୍କ "
+"ତନ୍ତ୍ରରେ ସ୍ଥାପନ କରାଯାଇଥାଏ। ଯଦି ହୋଇନଥାଏ, ତେବେ ବୈକଳ୍ପିକ ତଥା ସମାନ ପ୍ରକାର typefaces ଗୁଡ଼ିକୁ "
+"ଦର୍ଶାଯାଇଥାଏ। ଟିପ୍ପଣୀ: Red Hat Enterprise Linux 5 ଏବଂ ପରେ ପୂର୍ବନିର୍ଦ୍ଧାରିତ ଭାବରେ ସେଟ "
+"କରାଯାଇଥିବା ମୁକ୍ତ ଅକ୍ଷରରୂପକୁ ଅନ୍ତର୍ଭୁକ୍ତ କରିଥାଏ।"
 
 #. Tag: title
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Typographic Conventions"
-msgstr "ଦଲିଲକରଣ ନିୟମ"
+msgstr "ଲିଖିତ ନିୟମ"
 
 #. Tag: para
 #, no-c-format
@@ -51,11 +61,13 @@ msgid ""
 "and phrases. These conventions, and the circumstances they apply to, are as "
 "follows."
 msgstr ""
+"କିଛି ନିର୍ଦ୍ଦିଷ୍ଟ ଶବ୍ଦ ବାକ୍ୟାଂଶକୁ ଆମନ୍ତ୍ରଣ କରିବା ପାଇଁ ଚାରୋଟି ଲିଖିତ ନିୟମକୁ ବ୍ୟବହାର କରାଯାଇଥାଏ। "
+"ଏହି ନିୟମଗୁଡ଼ିକ, ଏବଂ ସେମାନେ ପ୍ରୟୋଗ କରୁଥିବା ପରିସ୍ଥିତିଗୁଡ଼ିକ, ଏହିପରି ଭାବରେ।"
 
 #. Tag: para
 #, no-c-format
 msgid "<literal>Mono-spaced Bold</literal>"
-msgstr ""
+msgstr "<literal>Mono-spaced Bold</literal>"
 
 #. Tag: para
 #, no-c-format
@@ -63,6 +75,8 @@ msgid ""
 "Used to highlight system input, including shell commands, file names and "
 "paths. Also used to highlight keycaps and key combinations. For example:"
 msgstr ""
+"ସେଲ ନିର୍ଦ୍ଦେଶ, ଫାଇଲ ନାମ ଏବଂ ପଥକୁ ଅନ୍ତର୍ଭୁକ୍ତ କରି, ତନ୍ତ୍ର ନିବେଶକୁ ଆଲୋକିତ କରିବା ପାଇଁ ବ୍ୟବହାର କରାହୋଇଥାଏ। "
+"କି କ୍ୟାପ ଏବଂ କି ଯୁଗଳକୁ ଆଲୋକିତ କରିବା ପାଇଁ ମଧ୍ଯ ବ୍ୟବହାର କରାଯାଇଥାଏ। ଉଦାହରଣ ସ୍ୱରୂପ:"
 
 #. Tag: para
 #, no-c-format
@@ -72,6 +86,10 @@ msgid ""
 "my_next_bestselling_novel</command> command at the shell prompt and press "
 "<keycap>Enter</keycap> to execute the command."
 msgstr ""
+"ଆପଣଙ୍କର କାର୍ଯ୍ୟରତ ଡିରେକ୍ଟୋରୀରେ ଫାଇଲର ବିଷୟବସ୍ତୁକୁ ଦେଖିବା ପାଇଁ <filename> "
+"my_next_bestselling_novel</filename>, <command>cat "
+"my_next_bestselling_novel</command> ନିର୍ଦ୍ଦେଶକୁ ସେଲ ପ୍ରମ୍ପଟରେ ଭରଣ କରନ୍ତୁ ଏବଂ"
+"ନିର୍ଦ୍ଦେଶକୁ ନିଷ୍ପାଦନ କରିବା ପାଇଁ <keycap>Enter</keycap> କୁ ଦବାନ୍ତୁ।"
 
 #. Tag: para
 #, no-c-format
@@ -79,6 +97,8 @@ msgid ""
 "The above includes a file name, a shell command and a keycap, all presented "
 "in mono-spaced bold and all distinguishable thanks to context."
 msgstr ""
+"ଉପର ଲିଖିତରେ ଗୋଟିଏ ଫାଇଲ ନାମ, ସେଲ ନିର୍ଦ୍ଦେଶ ଏବଂ କି କ୍ୟାପ ଅନ୍ତର୍ଭୁକ୍ତ, ସମସ୍ତକୁ mono-spaced ଗାଢ଼ ଭାବରେ "
+"ଉପସ୍ଥାପନ କରାଯାଇଥାଏ ଏବଂ ପ୍ରସଙ୍ଗକୁ ଧନ୍ୟବାଦ।"
 
 #. Tag: para
 #, no-c-format
@@ -86,11 +106,13 @@ msgid ""
 "Key combinations can be distinguished from keycaps by the hyphen connecting "
 "each part of a key combination. For example:"
 msgstr ""
+"କି ର ପ୍ରତ୍ୟେକ ଅଂଶରେ କି ସଂଯୋଗଗୁଡ଼ିକୁ ହାଇଫେନ ଦ୍ୱାରା କି କ୍ୟାପରୁ ପୃଥକ କରାହୋଇଥାଏ। "
+"ଉଦାହରଣ ସ୍ୱରୂପ:"
 
 #. Tag: para
 #, no-c-format
 msgid "Press <keycap>Enter</keycap> to execute the command."
-msgstr ""
+msgstr "ଏହି ନିର୍ଦ୍ଦେଶକୁ ନିଷ୍ପାଦନ କରିବା ପାଇଁ <keycap>ଭରଣ କରନ୍ତୁ</keycap> କୁ ଦବାନ୍ତୁ।"
 
 #. Tag: para
 #, no-c-format
@@ -100,6 +122,10 @@ msgid ""
 "<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F7</keycap></"
 "keycombo> to return to your X-Windows session."
 msgstr ""
+"ପ୍ରଥମ ଆଭାସୀ ଟର୍ମିନାଲକୁ ସ୍ଥାନାନ୍ତରିତ ହେବା ପାଇଁ <keycombo><keycap>Ctrl</keycap> "
+"<keycap>Alt</keycap><keycap>F1</keycap></keycombo> କୁ ଦବାନ୍ତୁ।"
+"ଆପଣଙ୍କର X-ୱିଣ୍ଡୋ ଅଧିବେଶନକୁ ଫେରିବା ପାଇଁ <keycombo><keycap>Ctrl</keycap> "
+"<keycap>Alt</keycap><keycap>F7</keycap></keycombo> କୁ ଦବାନ୍ତୁ।"
 
 #. Tag: para
 #, no-c-format
@@ -108,6 +134,8 @@ msgid ""
 "highlights two key combinations (each a set of three keycaps with each set "
 "pressed simultaneously)."
 msgstr ""
+"ପ୍ରଥମ ପାରାଟି ଦବାଇବା ପାଇଁ ଏକ ନିର୍ଦ୍ଦିଷ୍ଟ କି କ୍ୟାପକୁ ଆଲୋକିତ କରିଥାଏ। ଦ୍ୱିତୀୟଟି ଦୁଇଟି କି ସଂଯୋଗକୁ "
+"ଆଲୋକିତ କରିଥାଏ (ପ୍ରତ୍ୟେକଟିରେ ତିନିଟିକିଆ କି କ୍ୟାପର ସେଟକୁ ଏକସଙ୍ଗରେ ଦବାଯାଇଥାଏ)।"
 
 #. Tag: para
 #, no-c-format
@@ -116,6 +144,9 @@ msgid ""
 "and returned values mentioned within a paragraph will be presented as above, "
 "in <literal>mono-spaced bold</literal>. For example:"
 msgstr ""
+"ଯଦି ଉତ୍ସ ସଂକେତକୁ ଆଲୋଚନା କରାଯାଏ, ଶ୍ରେଣୀ ନାମ, ପଦ୍ଧତି, ଫଳନ, ପ୍ରାଚଳ ନାମଗୁଡ଼ିକୁ"
+"ଏବଂ ପରିଚ୍ଛେଦ ମଧ୍ଯରେ ଉଲ୍ଲେଖ କରାଯାଇଥିବା ଫେରସ୍ତ ମୂଲ୍ୟକୁ <literal>mono-spaced "
+"ଗାଢ଼</literal> ଉପରେ ଉପସ୍ଥାପନା କରାହେବ। ଉଦାହରଣ ସ୍ୱରୂପ:"
 
 #. Tag: para
 #, no-c-format
@@ -125,11 +156,14 @@ msgid ""
 "classname> for directories. Each class has its own associated set of "
 "permissions."
 msgstr ""
+"ଫାଇଲ ସମ୍ପର୍କୀୟ ଶ୍ରେଣୀଗୁଡ଼ିକ ଫାଇଲତନ୍ତ୍ର ପାଇଁ <classname>filesystem</classname> କୁ "
+"ଅନ୍ତର୍ଭୁକ୍ତ କରିଥାଏ, ଫାଇଲ ପାଇଁ <classname>file</classname>, ଏବଂ ଡିରେକ୍ଟୋରୀ ପାଇଁ <classname>dir</"
+"classname>। ପ୍ରତ୍ୟେକ ଶ୍ରେଣୀରେ ସେମାନଙ୍କର ସମ୍ପୃକ୍ତ ଅନୁମତିଗୁଡ଼ିକ ଥାଏ।"
 
 #. Tag: para
 #, no-c-format
 msgid "<application>Proportional Bold</application>"
-msgstr ""
+msgstr "<application>ଆନୁପାତିକ ଗାଢ଼</application>"
 
 #. Tag: para
 #, no-c-format
@@ -138,6 +172,9 @@ msgid ""
 "names; dialog box text; labeled buttons; check-box and radio button labels; "
 "menu titles and sub-menu titles. For example:"
 msgstr ""
+"ଏହା ତନ୍ତ୍ରରେ ଶବ୍ଦ ଅଥବା ବାକ୍ୟାଂଶକୁ ଦର୍ଶାଇଥାଏ, ପ୍ରୟୋଗ ନାମକୁ ଅନ୍ତର୍ଭୁକ୍ତ କରି; "
+"ସଂଳାପ ବାକ୍ସ ପାଠ୍ୟ; ନାମିତ ବଟନ; ଯାଞ୍ଚ-ବାକ୍ସ ଏବଂ ରେଡିଓ ବଟନ ନାମପଟିଗୁଡ଼ିକ; "
+"ତାଲିକା ଶୀର୍ଷକ ଏବଂ ଉପ-ତାଲିକା ଶୀର୍ଷକଗୁଡ଼ିକ। ଉଦାହରଣ ସ୍ୱରୂପ:"
 
 #. Tag: para
 #, no-c-format
@@ -150,6 +187,11 @@ msgid ""
 "primary mouse button from the left to the right (making the mouse suitable "
 "for use in the left hand)."
 msgstr ""
+"<application>Mouse Preferences</application> କୁ ଆରମ୍ଭ କରିବା ପାଇଁ <menuchoice><guimenu>System</guimenu><guisubmenu>Preferences</"
+"guisubmenu><guimenuitem>Mouse</guimenuitem></menuchoice> କୁ ମୂଖ୍ୟ ତାଲିକାରୁ "
+"ବାଛନ୍ତୁ। <guilabel>Buttons</guilabel> ଟ୍ୟାବରେ, <guilabel>Left-handed mouse</"
+"guilabel> ଯାଞ୍ଚ ବାକ୍ସକୁ କ୍ଲିକ କରନ୍ତୁ ଏବଂ ପ୍ରାଥମିକ ମାଉସ ବଟନକୁ ବାମରୁ ଡ଼ାହାଣକୁ ସ୍ଥାନାନ୍ତରିତ ହେବା ପାଇଁ "
+"<guibutton>Close</guibutton> କୁ କ୍ଲିକ କରନ୍ତୁ (ମାଉସକୁ ବାମ ହାତରେ ବ୍ୟବହାର ପାଇଁ ଉପଯୋଗୀ କରିବାକୁ)।"
 
 #. Tag: para
 #, no-c-format
@@ -168,6 +210,17 @@ msgid ""
 "document and choose <menuchoice><guimenu>Edit</guimenu><guimenuitem>Paste</"
 "guimenuitem></menuchoice> from the <application>gedit</application> menu bar."
 msgstr ""
+"<application>gedit</application> ଫାଇଲରେ ଗୋଟିଏ ବିଶେଷ ଅକ୍ଷର ଭର୍ତ୍ତିକରିବା ପାଇଁ, "
+"<menuchoice><guimenu>Applications</guimenu><guisubmenu>Accessories</"
+"guisubmenu><guimenuitem>Character Map</guimenuitem></menuchoice> କୁ "
+"ମୂଖ୍ୟ ତାଲିକା ପଟିରୁ ବାଛନ୍ତୁ। ପରବର୍ତ୍ତୀ, <menuchoice><guimenu>Search</"
+"guimenu><guimenuitem>Find&hellip;</guimenuitem></menuchoice> କୁ"
+"<application>Character Map</application> ତାଲିକାପଟିରୁ ବାଛନ୍ତୁ, <guilabel>Search "
+"</guilabel> କ୍ଷେତ୍ରରେ ଅକ୍ଷରର ନାମ ଉଲ୍ଲେଖ କରନ୍ତୁ ଏବଂ <guibutton>Next</guibutton>କୁ କ୍ଲିକ କରନ୍ତୁ। "
+"<guilabel>Character Table</guilabel> ରେ ଆପଣ ଆଣିଥିବା ଅକ୍ଷରକୁ ଆଲୋକିତ କରନ୍ତୁ। "
+"<guilabel>Text to copy</guilabel> କ୍ଷେତ୍ରରେ ରଖିବା ପାଇଁ ଏହି ଆଲୋକିତ ଅକ୍ଷରକୁ ଦୁଇଥର କ୍ଲିକ କରନ୍ତୁ "
+"ଏବଂ ତାପରେ <guibutton>Copy</guibutton> ବଟନକୁ କ୍ଲିକ କରନ୍ତୁ। ବର୍ତ୍ତମାନ ଆପଣଙ୍କର ଦଲିଲକୁ ଫେରନ୍ତୁ ଏବଂ<menuchoice><guimenu>Edit</guimenu><guimenuitem>Paste</"
+"guimenuitem></menuchoice> କୁ <application>gedit</application> ତାଲିକା ପଟିରୁ ବାଛନ୍ତୁ।"
 
 #. Tag: para
 #, no-c-format
@@ -177,6 +230,9 @@ msgid ""
 "interface, all presented in proportional bold and all distinguishable by "
 "context."
 msgstr ""
+"ଉପରଲିଖିତ ପାଠ୍ୟରେ ପ୍ରୟୋଗ ନାମ; ତନ୍ତ୍ର-ମୟ ତାଲିକା ନାମ ଏବଂ ବସ୍ତୁ; ପ୍ରୟୋଗ ନିର୍ଦ୍ଦିଷ୍ଟ ତାଲିକା ନାମ; "
+"ଏବଂ ବଟନ ଏବଂ GUI ଅନ୍ତରାପୃଷ୍ଠରେ ମିଳିଥିବା ପାଠ୍ୟକୁ ଅନ୍ତର୍ଭୁକ୍ତ କରିଥାଏ, ସମସ୍ତଙ୍କୁ ଗାଢ଼ ଏବଂ "
+"ପ୍ରସଙ୍ଗ ଦ୍ୱାର ନିର୍ଦ୍ଦିଷ୍ଟ ହୋଇଥାଏ।"
 
 #. Tag: para
 #, no-c-format
@@ -185,6 +241,9 @@ msgid ""
 "<application><replaceable>Proportional Bold Italic</replaceable></"
 "application>"
 msgstr ""
+"<command><replaceable>Mono-spaced ଗାଢ଼ ଇଟାଲିୟ</replaceable></command> ଅଥବା"
+"<application><replaceable>ଆନୁପାତିକ ଗାଢ଼ ଇଟାଲିୟ</replaceable></"
+"application>"
 
 #. Tag: para
 #, no-c-format
@@ -194,6 +253,10 @@ msgid ""
 "input literally or displayed text that changes depending on circumstance. "
 "For example:"
 msgstr ""
+"କାଳେ mono-spaced ଗାଢ଼ ଅଥବା ଆନୁପାତିକ ଗାଢ଼, ଇଟାଲିୟ ଅଥବା ଚଳନ୍ତି ପାଠ୍ୟ ଯୋଗକୁ ସ୍ଥାନାନ୍ତରଣ "
+"ଯୋଗ୍ୟ ଭାବରେ ଦର୍ଶାଯାଇଥାଏ। ଇଟାଲିୟ ଆପଣ ଇଚ୍ଛାମୁତାବକ ଭାବରେ ନିବେଶ କରିନଥିବା ପାଠ୍ୟକୁ ଦର୍ଶାଇଥାଏ "
+"ଅଥବା ପରିସ୍ଥିତି ଅନୁସାରେ ବଦଳୁନଥିବା ପାଠ୍ୟକୁ ଦର୍ଶାଇଥାଏ। "
+"ଉଦାହରଣ ସ୍ୱରୂପ:"
 
 #. Tag: para
 #, no-c-format
@@ -204,6 +267,11 @@ msgid ""
 "filename> and your username on that machine is john, type <command>ssh "
 "john@example.com</command>."
 msgstr ""
+"ssh ବ୍ୟବହାର କରି ଗୋଟିଏ ସୁଦୂର ଯନ୍ତ୍ର ସହିତ ସଂଯୋଗ କରିବା ପାଇଁ, <command>ssh "
+"<replaceable>username</replaceable>@<replaceable>domain.name</replaceable></"
+"command> କୁ ସେଲ ପ୍ରମ୍ପଟରେ ଲେଖନ୍ତୁ। ଯଦି ସୁଦୂର ଯନ୍ତ୍ର <filename>example.com</"
+"filename> ଏବଂ ଯନ୍ତ୍ରରେ ଥିବା ଆପଣଙ୍କର ଚାଳକ ନାମଟି ହେଉଛି john, <command>ssh "
+"john@example.com</command> ଲେଖନ୍ତୁ।"
 
 #. Tag: para
 #, no-c-format
@@ -213,6 +281,10 @@ msgid ""
 "<filename>/home</filename> file system, the command is <command>mount -o "
 "remount /home</command>."
 msgstr ""
+"<command>mount -o remount <replaceable>file-system</replaceable></"
+"command> ନିର୍ଦ୍ଦେଶ ନାମିତ ଫାଇଲତନ୍ତ୍ରକୁ ପୁନସ୍ଥାପନ କରିଥାଏ। ଉଦାହରଣ ସ୍ୱରୂପ, <filename>/home "
+"</filename> ଫାଇଲତନ୍ତ୍ରକୁ ପୁନସ୍ଥାପନ କରିବା ପାଇଁ, ନିର୍ଦ୍ଦେଶଟି ହେଉଛି <command>mount -o "
+"remount /home</command>।"
 
 #. Tag: para
 #, no-c-format
@@ -222,6 +294,10 @@ msgid ""
 "result as follows: <command><replaceable>package-version-release</"
 "replaceable></command>."
 msgstr ""
+"ସାମ୍ପ୍ରତିକ ସ୍ଥାପିତ ପ୍ୟାକେଜକୁ ଦେଖିବା ପାଇଁ, <command>rpm -q <replaceable>package</replaceable> "
+"</command> ନିର୍ଦ୍ଦେଶକୁ ବ୍ୟବହାର କରନ୍ତୁ। ଏହା ନିମ୍ନଲିଖିତ ଭାବରେ ଗୋଟିଏ ଫଳାଫଳ ଫେରାଇଥାଏ: "
+"<command><replaceable>package-version-release</"
+"replaceable></command>."
 
 #. Tag: para
 #, no-c-format
@@ -230,6 +306,9 @@ msgid ""
 "system, package, version and release. Each word is a placeholder, either for "
 "text you enter when issuing a command or for text displayed by the system."
 msgstr ""
+"ଉପରେ ଥିବା ଗାଢ଼ ଇଟାଲିୟ ଶବ୍ଦ &mdash; ଚାଳକନାମ, ରdomain.name,ଫାଇଲ-ତନ୍ତ୍ରm "
+"ପ୍ୟାକେଜe,ସଂସ୍କରଣ ଏବଂ ପ୍ରକାଶନକୁ ଲେଖନ୍ତୁ।.ପ୍ରତ୍ୟେକ ଶବ୍ଦଟି ସ୍ଥାନ ଧାରଣ ସରିଥାଏr,ଗୋଟିଏ ନିର୍ଦ୍ଦେଶକୁ "
+"ନ୍ୟସ୍ତ କରିବା ସମୟରେ ଆପଣ ଭରଣ କରୁଥିବା ପାଠ୍ୟ ପାଇଁ ଅଥବା ତନ୍ତ୍ର ଦ୍ୱାରା ଦର୍ଶାଯାଇଥିବା ପାଠ୍ୟ ପାଇଁ।."
 
 #. Tag: para
 #, no-c-format
@@ -237,23 +316,25 @@ msgid ""
 "Aside from standard usage for presenting the title of a work, italics "
 "denotes the first use of a new and important term. For example:"
 msgstr ""
+"କାର୍ଯ୍ୟର ଶୀର୍ଷକକୁ ଉପସ୍ଥାପନ କରିବା ପାଇଁ ମାନକ ଉପଯୋଗିତା ବ୍ୟତୀତ, ଇଟାଲିୟ ଗୋଟିଏ ନୂତନ "
+"ଏବଂ ଆବଶ୍ୟକୀୟର ପ୍ରଥମ ଉପଯୋଗିତାକୁ ଦର୍ଶାଇଥାଏ। ଉଦାହରଣ ସ୍ୱରୂପ:"
 
 #. Tag: para
 #, no-c-format
 msgid "Publican is a <firstterm>DocBook</firstterm> publishing system."
-msgstr ""
+msgstr "Publican ହେଉଛି <firstterm>DocBook</firstterm> ପ୍ରକାଶନ ତନ୍ତ୍ର।"
 
 #. Tag: title
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Pull-quote Conventions"
-msgstr "ଦଲିଲକରଣ ନିୟମ"
+msgstr "Pull-quote ନିୟମ"
 
 #. Tag: para
 #, no-c-format
 msgid ""
 "Terminal output and source code listings are set off visually from the "
 "surrounding text."
-msgstr ""
+msgstr "ଟର୍ମିନାଲ ଫଳାଫଳ ଏବଂ ଉତ୍ସ ସଂକେତ ତାଲିକାକୁ ପାରିପାର୍ଶ୍ୱିକ ଦୃଶ୍ୟ ବାହାରେ ସେଟ କରାଯାଇଥାଏ।"
 
 #. Tag: para
 #, no-c-format
@@ -261,6 +342,8 @@ msgid ""
 "Output sent to a terminal is set in <computeroutput>mono-spaced roman</"
 "computeroutput> and presented thus:"
 msgstr ""
+"ଟର୍ମିନାଲକୁ ପଠାଯାଉଥିବା ଫଳାଫଳକୁ <computeroutput>mono-spaced roman</"
+"computeroutput> ରେ ସେଟ କରାଯାଇଛି ଏବଂ ତେଣୁ ଉପସ୍ଥାପିତ କରାହୋଇଛି:"
 
 #. Tag: para
 #, no-c-format
@@ -268,11 +351,13 @@ msgid ""
 "Source-code listings are also set in <computeroutput>mono-spaced roman</"
 "computeroutput> but add syntax highlighting as follows:"
 msgstr ""
+"ଉତ୍ସ-ସଂକେତ ତାଲିକାକୁ <computeroutput>mono-spaced roman</computeroutput> ରେ "
+"ସେଟ କରାହୋଇଛି କିନ୍ତୁ ନିମ୍ନଲିଖିତ ଭାବରେ ସାଙ୍କେତିକ ଆଲୋକିତ ଯୋଗକରାହୋଇଥାଏ:"
 
 #. Tag: title
 #, no-c-format
 msgid "Notes and Warnings"
-msgstr ""
+msgstr "ଟିପ୍ପଣୀ ଏବଂ ଚେତାବନୀ"
 
 #. Tag: para
 #, no-c-format
@@ -280,6 +365,8 @@ msgid ""
 "Finally, we use three visual styles to draw attention to information that "
 "might otherwise be overlooked."
 msgstr ""
+"ଶେଷରେ, ଆମେମାନେ ତିନୋଟି ଦୃଶ୍ୟମାନ ଶୈଳୀର ଦୃଷ୍ଟି ଆକର୍ଷଣ କରିଥାଏ ଯାହାକୁକି ଅନ୍ୟ "
+"ଭାବରେ ଅଦେଖା କରିହେବ।"
 
 #. Tag: title
 #, no-c-format
@@ -293,6 +380,9 @@ msgid ""
 "Ignoring a note should have no negative consequences, but you might miss out "
 "on a trick that makes your life easier."
 msgstr ""
+"ଟିପ୍ପଣୀଗୁଡିକ ହେଉଛି ପ୍ରାକ ସୂଚନା, ସଂକ୍ଷିପ୍ତ ପଥ ଅଥବା ହାତରେ ଥିବା କାର୍ଯ୍ୟର ବୈକଳ୍ପିକ ଆବେଦନ। "
+"ଟିପ୍ପଣୀକୁ ନ ମାନିଲେ କିଛି ଅସୁବିଧା ନାହିଁ, କିନ୍ତୁ ଆପଣ ହୁଏତଃ ଗୋଟିଏ କୌଶଳକୁ ହରାଇ ପାରନ୍ତି ଯାହାକି "
+"ଆପଣଙ୍କ ଜୀବନକୁ ସହଜମୟ କରିପାରେ।"
 
 #. Tag: title
 #, no-c-format
@@ -307,6 +397,11 @@ msgid ""
 "before an update will apply. Ignoring a box labeled 'Important' won't cause "
 "data loss but may cause irritation and frustration."
 msgstr ""
+"ଆବଶ୍ୟକୀୟ ବାକ୍ସ ବିବରଣୀ ବସ୍ତୁ ଯାହାକୁକି ସହଜରେ ହରାଇହେବ: ବିନ୍ୟାସ ପରିବର୍ତ୍ତନ "
+"ଯାହାକି କେବଳ ପ୍ରଚଳିତ ଅଧିବେଶନରେ ପ୍ରୟୋଗ ହୋଇଥାଏ, ଅଥବା ପୁନଃ ଚାଳନ ପାଇଁ "
+"ଆବଶ୍ୟକ ହେଉଥିବା ସର୍ଭିସଗୁଡ଼ିକୁ ପ୍ରୟୋଗ କରାଯାଇଥାଏ। 'Important' ଭାବରେ ଚିହ୍ନଟ "
+"ଗୋଟିଏ ବାକ୍ସ ନାମପଟିକୁ ଅଗ୍ରାହ୍ୟ କରିବା ଦ୍ୱାରା ତଥ୍ୟନଷ୍ଟ ଘଟିନଥାଏ କିନ୍ତୁ ଏହା ଫଳରେ "
+"ବିରକ୍ତି ଏବଂ ହତାସ ଭାବନା ଆସିଥାଏ।"
 
 #. Tag: title
 #, no-c-format
@@ -318,140 +413,5 @@ msgstr "ଚେତାବନୀ"
 msgid ""
 "Warnings should not be ignored. Ignoring warnings will most likely cause "
 "data loss."
-msgstr ""
+msgstr "ଚେତାବନୀକୁ ଅଗ୍ରାହ୍ୟ କରିବା ଉଚିତ ନୁହଁ। ଚେତାବନୀକୁ ଅଗ୍ରାହ୍ୟ କରିବା ଫଳରେ ତଥ୍ୟ ନଷ୍ଟ ହୋଇଥାଏ।"
 
-#~ msgid ""
-#~ "Certain words in this manual are represented in different fonts, styles, "
-#~ "and weights. This highlighting indicates that the word is part of a "
-#~ "specific category. The categories include the following:"
-#~ msgstr ""
-#~ "ଏହି ମେନ୍ଯୁଆଲରେ ଥିବା କିଛି ଶବ୍ଦ ମାନଙ୍କୁ ବିଭିନ୍ନ ଅକ୍ଷରରୂପ, ଶୈଳୀ, ଏବଂ ଓସାରରେ ଉଲ୍ଲେଖ "
-#~ "କରାଯାଇଥାଏ। ଗୋଟିଏ ଶବ୍ଦର ବିଶିଷ୍ଟତ ପ୍ରଦର୍ଶନ ଏହା ସୂଚୀତ କରିଥାଏ ଯେ ସେହି ଶବ୍ଦଟି ଗୋଟିଏ ନିର୍ଦ୍ଦିଷ୍ଟ "
-#~ "ବିଭାଗର ଅଂଶ ଅଟେ। ଏହି ବିଭାଗ ଗୁଡିକ ନିମ୍ନଲିଖିତ ମାନଙ୍କୁ ଅନ୍ତର୍ଭୂକ୍ତ କରିଥାଏ:"
-
-#~ msgid "Courier font"
-#~ msgstr "କୋରିଓର ଅକ୍ଷରରୂପ"
-
-#~ msgid ""
-#~ "Courier font represents <command>commands</command>, <filename>file names "
-#~ "and paths</filename>, and <prompt>prompts</prompt> ."
-#~ msgstr ""
-#~ "କୋରିଓର ଅକ୍ଷରରୂପ <command>ନିର୍ଦ୍ଦେଶ ମାନଙ୍କୁ</command>, <filename>ଫାଇଲ ନାମ ଏବଂ ପଥ "
-#~ "ମାନଙ୍କୁ</filename>, ଏବଂ <prompt>ପ୍ରୋମ୍ପ୍ଟ ମାନଙ୍କୁ</prompt> ଉଲ୍ଲେଖ କରିଥାଏ।"
-
-#, fuzzy
-#~ msgid ""
-#~ "Desktop       about.html       logs      paulwesterberg.png\n"
-#~ "Mail          backupfiles      mail      reports"
-#~ msgstr ""
-#~ "ତଳେ ଦେଖାଯାଇଥିବା ପରି ଯେତେବେଳେ, ଏହା କମ୍ପୁଟର ନିର୍ଗମକୁ ସୂଚୀତ କରିଥାଏ: <screen>\n"
-#~ "Desktop       about.html       logs      paulwesterberg.png\n"
-#~ "Mail          backupfiles      mail      reports\n"
-#~ "</screen>"
-
-#~ msgid "bold Courier font"
-#~ msgstr "ଗାଢ କୋରିଓର ଅକ୍ଷରରୂପ"
-
-#~ msgid ""
-#~ "Bold Courier font represents text that you are to type, such as: "
-#~ "<userinput>service jonas start</userinput>"
-#~ msgstr ""
-#~ "ଗାଢ କୋରିଓର ଅକ୍ଷରରୂପ ଆପଣ ଟାଇପ କରିବା ପାଠ୍ଯକୁ ଉଲ୍ଲେଖ କରିଥାଏ, ଯେପରିକି: "
-#~ "<userinput>service jonas start</userinput>"
-
-#~ msgid ""
-#~ "If you have to run a command as root, the root prompt (<literal>#</"
-#~ "literal>) precedes the command:"
-#~ msgstr ""
-#~ "ଆପଣଙ୍କୁ ଗୋଟିଏ ନିର୍ଦ୍ଦେଶ ରୁଟ ଚାଳକ ଭାବରେ ଚଳାଇବା ପାଇଁ ହେଲେ, ରୁଟ ପ୍ରୋମ୍ପ୍ଟ (<literal>#</"
-#~ "literal>) ନିର୍ଦ୍ଦେଶ ପୂର୍ବରୁ ଆସିଥାଏ:ଏ:"
-
-#~ msgid "italic Courier font"
-#~ msgstr "ଇଟାଲୀୟ କୋରିଓର ଅକ୍ଷରରୂପ"
-
-#, fuzzy
-#~ msgid ""
-#~ "Italic Courier font represents a variable, such as an installation "
-#~ "directory: <filename> <replaceable>install_dir</replaceable>/bin/</"
-#~ "filename>"
-#~ msgstr ""
-#~ "ଇଟାଲୀୟ କୋରିଓର ଅକ୍ଷରରୂପ ଗୋଟିଏ ଚଳକୁ ଉଲ୍ଲେଖ କରିଥାଏ, ଯେପରିକି ଗୋଟିଏ ସ୍ଥାପନ ଡିରେକ୍ଟୋରି: "
-#~ "<filename><replaceable>install_dir</replaceable>ୟୱଗଲୟ</filename>"
-
-#~ msgid "bold font"
-#~ msgstr "ବଡ ଅକ୍ଷର"
-
-#~ msgid ""
-#~ "Bold font represents <application>application programs</application> and "
-#~ "<guilabel>text found on a graphical interface</guilabel>."
-#~ msgstr ""
-#~ "ଗାଢ ଅକ୍ଷର <application>ପ୍ରୟୋଗ ପ୍ରୋଗ୍ରାମ</application> ଏବଂ <guilabel>ଗୋଟିଏ "
-#~ "ଆଲେଖୀକ ଅନ୍ତରାପୃଷ୍ଠରେ ମିଳିଥିବା ପାଠ୍ଯ</guilabel> କୁ ଉଲ୍ଲେଖ କରିଥାଏ।"
-
-#~ msgid ""
-#~ "When shown like this: <guibutton> OK </guibutton>, it indicates a button "
-#~ "on a graphical application interface."
-#~ msgstr ""
-#~ "ଏହିପରି ଭାବରେ ଦେଖାଗଲେ: <guibutton>ଠିକ ଅଛି</guibutton>, ଗୋଟିଏ ଆଲେଖୀକ ପ୍ରୟୋଗ "
-#~ "ଅନ୍ତରାପୃଷ୍ଠରେ ଏହା ଗୋଟିଏ ବଟନକୁ ଉଲ୍ଲେଖ କରିଥାଏ।"
-
-#~ msgid ""
-#~ "Additionally, the manual uses different strategies to draw your attention "
-#~ "to pieces of information. In order of how critical the information is to "
-#~ "you, these items are marked as follows:"
-#~ msgstr ""
-#~ "ଅତିରିକ୍ତ ଭାବରେ, ବିଭିନ୍ନ ସୂଚନା ଖଣ୍ଡ ପ୍ରତି ଆପଣଙ୍କ ଦୃଷ୍ଟି ଆକର୍ଷଣ କରିବା ପାଇଁ ମେନ୍ଯୁଆଲ ବିଭିନ୍ନ ଉପାୟ "
-#~ "ଅବଲମ୍ବନ କରିଥାଏ। ଆପଣଙ୍କ ପାଇଁ ସୂଚନାଟି କେତେ ଜରୁରୀ ତାହା ଉପରେ ନିର୍ଭର କରି, ଏହି ବସ୍ତୁ ଗୁଡିକୁ ତଳେ "
-#~ "ଉଲ୍ଲେଖ କରାଯାଇଛି:"
-
-#~ msgid ""
-#~ "A note is typically information that you need to understand the behavior "
-#~ "of the system."
-#~ msgstr ""
-#~ "ଗୋଟିଏ ଟିପ୍ପଣୀ ସାଧାରଣତଃ ଆପଣ ବୁଝିବା ପାଇଁ ଆବଶ୍ଯକୀୟ ତନ୍ତ୍ରର ଆଚରଣ ବିଷୟରେ ସୂଚନା ପ୍ରଦାନ "
-#~ "କରିଥାଏ।"
-
-#~ msgid "A tip is typically an alternative way of performing a task."
-#~ msgstr "ଗୋଟିଏ ପରାମର୍ଶ ଗୋଟିଏ କାର୍ଯ୍ଯ କରିବାର ଗୋଟିଏ ବୈକଳ୍ପକୁ ଉପାୟ ଅଟେ।"
-
-#~ msgid ""
-#~ "Important information is necessary, but possibly unexpected, such as a "
-#~ "configuration change that will not persist after a reboot."
-#~ msgstr ""
-#~ "ଗୁରୁତ୍ବପୂର୍ଣ୍ଣ ସୂଚନା ଆବଶ୍ଯକ ଅଟେ, କିନ୍ତୁ ସମ୍ଭବତଃ ଅପ୍ରତ୍ଯାଶିତ ଅଟେ, ଉଦାହରଣ ସ୍ବରୂପ ଗୋଟିଏ ବିନ୍ଯାସ "
-#~ "ପରିବର୍ତ୍ତନ ଯାହାକି ଥରେ ତନ୍ତ୍ରକୁ ପୁନର୍ଚାଳନ କରିବା ପରେ ପ୍ରଭାବିତ ହେବ ନାହିଁ।"
-
-#~ msgid "Caution"
-#~ msgstr "ସତର୍କତା"
-
-#~ msgid ""
-#~ "A caution indicates an act that would violate your support agreement, "
-#~ "such as recompiling the kernel."
-#~ msgstr ""
-#~ "ଗୋଟିଏ ଚେତାବନୀ ଗୋଟିଏ ନିୟମକୁ ସୂଚାଇଥାଏ ଯାହାକି ପୁନଃସଙ୍କଳନ  ଆପଣଙ୍କର ସମର୍ଥନ ରାଜିନାମାକୁ ଖଣ୍ଡନ "
-#~ "କରିବ, ଉଦାହରଣ ସ୍ବରୂପ କର୍ଣ୍ଣଲ ପୁନଃସଙ୍କଳନ"
-
-#~ msgid ""
-#~ "A warning indicates potential data loss, as may happen when tuning "
-#~ "hardware for maximum performance."
-#~ msgstr ""
-#~ "ସର୍ବାଧିକ ପ୍ରଦର୍ଶନ ପାଇଁ ହାର୍ଡୱେର ଟ୍ଯୁନ କରିବା ସମୟରେ ଘଟୁଥିବା, ଗୋଟିଏ ଚେତାବନୀ ତଥ୍ଯହାନୀ ହୋଉଛି "
-#~ "ବୋଲି ସୂଚାଇ ଥାଏ।"
-
-#~ msgid "gconftool-2\n"
-#~ msgstr "gconftool-2\n"
-
-#~ msgid ""
-#~ "\n"
-#~ "# <placeholder-1/>\n"
-#~ "\t\t\t\t"
-#~ msgstr ""
-#~ "\n"
-#~ "# <placeholder-1/>\n"
-#~ "\t\t\t\t"
-
-#~ msgid "Tip"
-#~ msgstr "ପରାମର୍ଶ"
-
-#~ msgid "translator-credits"
-#~ msgstr "ଶୁଭ୍ରାଂଶୁ ବେହେରା <arya_subhransu@yahoo.co.in>"
