--- a/publican/datadir/Common_Content/common/pt-BR/Feedback.po
+++ b/publican/datadir/Common_Content/common/pt-BR/Feedback.po
@@ -1,12 +1,12 @@
 # translation of Feedback.po to Portuguese
 # Leticia de Lima <ldelima@redhat.com>, 2007.
-# Glaucia Cintra <gcintra@redhat.com>, 2008.
+# Glaucia Cintra <gcintra@redhat.com>, 2008, 2009.
 msgid ""
 msgstr ""
 "Project-Id-Version: Feedback\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
 "POT-Creation-Date: 2009-07-27T05:14:21\n"
-"PO-Revision-Date: 2008-10-09 11:34+1000\n"
+"PO-Revision-Date: 2009-12-04 09:42+1000\n"
 "Last-Translator: Glaucia Cintra <gcintra@redhat.com>\n"
 "Language-Team: Portuguese <en@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -17,12 +17,12 @@ msgstr ""
 #. Tag: title
 #, no-c-format
 msgid "We Need Feedback!"
-msgstr "Nós precisamos de seu comentário"
+msgstr "Nós precisamos da sua opinião!"
 
 #. Tag: primary
 #, no-c-format
 msgid "feedback"
-msgstr "comentário"
+msgstr "Opinião"
 
 #. Tag: secondary
 #, no-c-format
@@ -33,3 +33,4 @@ msgstr "contato de informação para este manual"
 #, no-c-format
 msgid "You should over ride this by creating your own local Feedback.xml file."
 msgstr "Sobrescreva isto criando seu próprio arquivo Feedback.xml local."
+
