--- a/publican/datadir/Common_Content/common/ru-RU/Feedback.po
+++ b/publican/datadir/Common_Content/common/ru-RU/Feedback.po
@@ -1,12 +1,13 @@
 # translation of Feedback.po to
 # Yulia Poyarkova <yulia.poyarkova@redhat.com>, 2007, 2008.
+# Yulia <ypoyarko@redhat.com>, 2009.
 msgid ""
 msgstr ""
 "Project-Id-Version: Feedback\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
 "POT-Creation-Date: 2009-07-27T05:14:21\n"
-"PO-Revision-Date: 2008-10-09 12:36+1100\n"
-"Last-Translator: Yulia Poyarkova <yulia.poyarkova@redhat.com>\n"
+"PO-Revision-Date: 2009-12-02 16:33+1100\n"
+"Last-Translator: Yulia <ypoyarko@redhat.com>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -31,5 +32,5 @@ msgstr "контактная информация для данного руко
 #. Tag: para
 #, no-c-format
 msgid "You should over ride this by creating your own local Feedback.xml file."
-msgstr ""
-"Переопределите этот файл, создав собственный локальный файл Feedback.xml."
+msgstr "Переопределите эти настройки, создав собственный локальный файл Feedback.xml."
+
