--- a/publican/datadir/Common_Content/common/ta-IN/Conventions.po
+++ b/publican/datadir/Common_Content/common/ta-IN/Conventions.po
@@ -1,18 +1,19 @@
 # translation of Conventions.po to Tamil
-# I. Felix <ifelix@redhat.com>, 2007, 2008.
+# I. Felix <ifelix@redhat.com>, 2007, 2008, 2009.
 msgid ""
 msgstr ""
 "Project-Id-Version: Conventions\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
 "POT-Creation-Date: 2009-12-01T23:44:40\n"
-"PO-Revision-Date: 2008-10-07 16:34+0530\n"
-"Last-Translator: I. Felix <ifelix@redhat.com>\n"
-"Language-Team: Tamil <fedora-trans-ta@redhat.com>\n"
+"PO-Revision-Date: 2009-12-02 12:08+0530\n"
+"Last-Translator: \n"
+"Language-Team: American English <kde-i18n-doc@kde.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.11.4\n"
-"Plural-Forms: nplurals=2; plural=(n!=1);\\n\n"
+"X-Generator: Lokalize 1.0\n"
+"Plural-Forms: nplurals=2; plural=(n!=1);\\n"
+"\n"
 
 #. Tag: title
 #, no-c-format
@@ -60,18 +61,16 @@ msgstr ""
 "நான்கு டைப்போகிராபி பெயரிடல்கள் குறிப்பிட்ட வார்த்தைகள் அல்லது வாக்கியங்களை குறிப்பிட "
 "அழைக்க பயன்படுகிறது. இந்த பெயரிடல்கள் மற்றும் சூழ்நிலைகள் பின்வரும் இருக்கும்."
 
-#. Tag: para
-#, fuzzy, no-c-format
+#. Tag: para, no-c-format
 msgid "<literal>Mono-spaced Bold</literal>"
-msgstr "மோனோ-இடைவெளி தடிமன்"
+msgstr "<literal>மோனோ-இடைவெளி தடிமன்</literal>"
 
-#. Tag: para
-#, fuzzy, no-c-format
+#. Tag: para, no-c-format
 msgid ""
 "Used to highlight system input, including shell commands, file names and "
 "paths. Also used to highlight keycaps and key combinations. For example:"
 msgstr ""
-"கணினி உள்ளீடு, ஷெல் கட்டளைகள், கோப்பு பெயர்கள் மற்றும் பாதையுகளையும் சேர்த்து "
+"கணினி உள்ளீடு, ஷெல் கட்டளைகள், கோப்பு பெயர்கள் மற்றும் பாதைகளையும் சேர்த்து "
 "முன்னிலைப்படுத்த உதவுகிறது. மேலும் தலைப்பெழுத்து விசை மற்றும் விசை கலவைகளையும் "
 "முன்னிலைப்படுத்த பயன்படுகிறது. எடுத்துக்காட்டாக:"
 
@@ -88,17 +87,15 @@ msgstr ""
 "command> கட்டளையை கட்டளைவரியில் உள்ளிட்டு <keycap>Enter</keycap> ஐ அழுத்தி இதனை "
 "இயக்கவும். "
 
-#. Tag: para
-#, fuzzy, no-c-format
+#. Tag: para, no-c-format
 msgid ""
 "The above includes a file name, a shell command and a keycap, all presented "
 "in mono-spaced bold and all distinguishable thanks to context."
 msgstr ""
 "மேலே உள்ளது ஒரு கோப்பு பெயர், ஒரு ஷெல் கட்டளை மற்றும் ஒரு விசையை மோனோ இடைவெளி "
-"தடிமனாகவும் உள்ளிடும் மற்றும் இதர வேறுபடுத்தும் உரைகளுக்கு நன்றி. "
+"தடிமனாகவும் உள்ளிடும் மற்றும் இதர வேறுபடுத்தும் உரைகளுக்கு நன்றி."
 
-#. Tag: para
-#, fuzzy, no-c-format
+#. Tag: para, no-c-format
 msgid ""
 "Key combinations can be distinguished from keycaps by the hyphen connecting "
 "each part of a key combination. For example:"
@@ -124,27 +121,25 @@ msgstr ""
 "keycap><keycap>Alt</keycap><keycap>F7</keycap></keycombo> ஐ அழுத்தி X-Windows "
 "அமர்வுக்குத் திரும்பவும். "
 
-#. Tag: para
-#, fuzzy, no-c-format
+#. Tag: para, no-c-format
 msgid ""
 "The first paragraph highlights the particular keycap to press. The second "
 "highlights two key combinations (each a set of three keycaps with each set "
 "pressed simultaneously)."
 msgstr ""
 "முதல் வாக்கியம் குறிப்பிட்ட விசையை அழுத்த முன்னிலைப்படுத்தப்படுகிறது. இரண்டாவது இரண்டு "
-"செட்கள் மூன்று விசைகளை முன்னிலைப்படுத்துகிறது, ஒவ்வொரு செட்டும் ஒரே நேரத்தில் "
-"அழுத்தப்பட்டது. "
+"செட்கள் மூன்று விசைகளை முன்னிலைப்படுத்துகிறது (ஒவ்வொரு செட்டும் ஒரே நேரத்தில் "
+"அழுத்தப்பட்டது). "
 
-#. Tag: para
-#, fuzzy, no-c-format
+#. Tag: para, no-c-format
 msgid ""
 "If source code is discussed, class names, methods, functions, variable names "
 "and returned values mentioned within a paragraph will be presented as above, "
 "in <literal>mono-spaced bold</literal>. For example:"
 msgstr ""
 "மூலக்குறியீடு விவாதிக்கப்பட்டால், வகுப்பு பெயர்கள், முறைகள், செயல்பாடுகள், மாறி பெயர்கள் "
-"மற்றும் கொடுக்கப்பட்ட மதிப்புகள் ஒரு பத்திக்குள் மேல் <literal>Mono-spaced Bold</"
-"literal>இல் குறிப்பிட்டது போல கொடுக்கப்பட்டிருக்கும். எடுத்துக்காட்டாக: "
+"மற்றும் கொடுக்கப்பட்ட மதிப்புகள் ஒரு பத்திக்குள் மேல் <literal>ஒற்றை இடைவெளி தடிமனில்</"
+"literal> குறிப்பிட்டது போல கொடுக்கப்பட்டிருக்கும். எடுத்துக்காட்டாக: "
 
 #. Tag: para
 #, no-c-format
@@ -161,10 +156,9 @@ msgstr ""
 #. Tag: para
 #, no-c-format
 msgid "<application>Proportional Bold</application>"
-msgstr ""
+msgstr "<application>விகிதபடி தடிமன்</application>"
 
-#. Tag: para
-#, fuzzy, no-c-format
+#. Tag: para, no-c-format
 msgid ""
 "This denotes words or phrases encountered on a system, including application "
 "names; dialog box text; labeled buttons; check-box and radio button labels; "
@@ -174,8 +168,7 @@ msgstr ""
 "உரையாடல் பெட்டி உரை; பெயரிடப்பட்ட பொத்தான்கள்; சோதனை பெட்டி மற்றும் ரேடியோ பொத்தான் "
 "பெயர்கள் மெனு தலைப்புகள் மற்றும் துணை மெனு தலைப்புகளை கொண்டிருக்கும். எடுத்துக்காட்டாக:"
 
-#. Tag: para
-#, fuzzy, no-c-format
+#. Tag: para, no-c-format
 msgid ""
 "Choose <menuchoice><guimenu>System</guimenu><guisubmenu>Preferences</"
 "guisubmenu><guimenuitem>Mouse</guimenuitem></menuchoice> from the main menu "
@@ -185,15 +178,15 @@ msgid ""
 "primary mouse button from the left to the right (making the mouse suitable "
 "for use in the left hand)."
 msgstr ""
-"<guimenu>கணினி > முன்னுரிமைகள் > சுட்டி</guimenu> என்பதிலிருந்து "
-"<application>சுட்டி முன்னுரிமைகளை</application> தேர்ந்தெடுக்கலாம். "
-"<guilabel>பொத்தான்கள்</guilabel> தத்தலில், <guilabel>இடது கை சுட்டி</guilabel> "
-"சோதனை பெட்டியை சொடுக்கி  <guibutton>மூடு</guibutton> பொத்தனை சொடுக்கி முதன்மை "
-"சுட்டி பொத்தானான இடப்பக்கத்திலிருந்து வலப்பக்கத்திற்கு மாற்றவும் (இடது கை "
-"பழக்கமுள்ளவர்களுக்கு ஏற்றவாறு மாற்றலாம்)."
+"<menuchoice><guimenu>கணினி </guimenu><guisubmenu> முன்னுரிமைகள் </guisubmenu><guimenuitem> "
+"சுட்டி</guimenuitem></menuchoice> என்பதிலிருந்து <application>சுட்டி முன்னுரிமைகளை<"
+"/application> தேர்ந்தெடுக்கலாம். "
+"<guilabel>பொத்தான்கள்</guilabel> தத்தலில், <guilabel>இடது கை சுட்டி</guilabel> சோதனை "
+"பெட்டியை சொடுக்கி  <guibutton>மூடு</guibutton> பொத்தனை சொடுக்கி முதன்மை சுட்டி பொத்தானான "
+"இடப்பக்கத்திலிருந்து வலப்பக்கத்திற்கு மாற்றவும் (இடது கை பழக்கமுள்ளவர்களுக்கு ஏற்றவாறு "
+"மாற்றலாம்)."
 
-#. Tag: para
-#, fuzzy, no-c-format
+#. Tag: para, no-c-format
 msgid ""
 "To insert a special character into a <application>gedit</application> file, "
 "choose <menuchoice><guimenu>Applications</guimenu><guisubmenu>Accessories</"
@@ -209,19 +202,22 @@ msgid ""
 "document and choose <menuchoice><guimenu>Edit</guimenu><guimenuitem>Paste</"
 "guimenuitem></menuchoice> from the <application>gedit</application> menu bar."
 msgstr ""
-"<application>gedit</application> கோப்பில் சிறப்பு எழுத்துக்களை நுழைக்க, "
-"<guimenu>நிரல்கள் > துணைப்பொருட்களை > எழுத்துரு மேப்</guimenu> என்பதை முதன்மை மெனு "
-"பட்டியிலிருந்து தேர்ந்தெடுக்கவும். அடுத்து <guimenu>தேடு > கண்டுபிடி&hellip;</"
-"guimenu> என்பதை <application>எழுத்துரு மேப்</application> மெனு பட்டியில் "
+"<application>gedit</application> கோப்பில் சிறப்பு எழுத்துக்களை நுழைக்க, <menuchoice>"
+"<guimenu>நிரல்கள் </guimenu><guisubmenu> துணைப்பொருட்களை </"
+"guisubmenu><guimenuitem> எழுத்துரு மேப்<</guimenuitem></menuchoice> என்பதை முதன்மை மெனு "
+"பட்டியிலிருந்து தேர்ந்தெடுக்கவும். அடுத்து <menuchoice><guimenu>தேடு </guimenu><"
+"guimenuitem> கண்டுபிடி&hellip;</guimenuitem></menuchoice> என்பதை <application>எழுத்துரு "
+"மேப்</application> மெனு பட்டியில் "
 "தேர்ந்தெடுத்து, <guilabel>தேடு</guilabel> புலத்தில் உள்ளிட்டு <guibutton>அடுத்து</"
 "guibutton> என்பதை சொடுக்கவும். <guilabel>எழுத்து அட்டவணையில்</guilabel> நீங்கள் "
 "வரிசைப்படுத்திய எழுத்துக்களை முன்னிலைப்படும். இந்த முன்னிலைப்படுத்தப்பட்ட எழுத்தை "
 "<guilabel>நகலெடுக்க உரை</guilabel> புலத்தில் வைத்து <guibutton>நகல்</guibutton> "
-"பொத்தானை சொடுக்கவும். பின் உங்கள் ஆவணத்திற்கு சென்று <guimenu>திருத்து > ஒட்டு</"
-"guimenu> என்பதை <application>gedit</application> மெனு பட்டையில் தேர்ந்தெடுக்கவும். "
+"பொத்தானை சொடுக்கவும். பின் உங்கள் ஆவணத்திற்கு சென்று <menuchoice><guimenu>திருத்து<"
+"/guimenu><guimenuitem>ஒட்டு</"
+"guimenuitem></menuchoice> என்பதை <application>gedit</application> மெனு பட்டையில் "
+"தேர்ந்தெடுக்கவும். "
 
-#. Tag: para
-#, fuzzy, no-c-format
+#. Tag: para, no-c-format
 msgid ""
 "The above text includes application names; system-wide menu names and items; "
 "application-specific menu names; and buttons and text found within a GUI "
@@ -230,7 +226,7 @@ msgid ""
 msgstr ""
 "மேலே உள்ள உரை பயன்பாடு பெயர்கள்; கணினி மெனு பெயர்கள் மற்றும் உருப்படிகள்; பயன்பாடு "
 "குறிப்பிடும் மெனு பெயர்கள் மற்றும் பொத்தான்கள் மற்றும் வரைகலை முகப்பில் இருக்கும் உரைகள் "
-"ஆகியவற்றை கொண்டிருக்கும்."
+"ஆகியவற்றை கொண்டிருக்கும், அனைத்தும் விகிதப்படி தடிமன் மற்றும் சூழலில் மாறுப்பட்டிருக்கும். "
 
 #. Tag: para
 #, no-c-format
@@ -243,15 +239,14 @@ msgstr ""
 "<application><replaceable>Proportional Bold Italic</replaceable></"
 "application>"
 
-#. Tag: para
-#, fuzzy, no-c-format
+#. Tag: para, no-c-format
 msgid ""
 "Whether mono-spaced bold or proportional bold, the addition of italics "
 "indicates replaceable or variable text. Italics denotes text you do not "
 "input literally or displayed text that changes depending on circumstance. "
 "For example:"
 msgstr ""
-"மோனோ இடைவெளியிடப்பட்ட தடிமன் அல்லது தலைகீழ் தடிமன், சாய்வு மாற்றக்கூடிய அல்லது மாறி "
+"மோனோ இடைவெளியிடப்பட்ட தடிமன் அல்லது விகிதப்படி தடிமன், சாய்வு மாற்றக்கூடிய அல்லது மாறி "
 "உரையை குறிக்கிறது. சாய்வு நீங்கள் உள்ளிடும் உரையை அல்லது சூழ்நிலைக்கு ஏற்றவாறு "
 "காட்டப்படும் உரையை குறிக்கிறது. எடுத்துக்காட்டாக:"
 
@@ -319,23 +314,22 @@ msgstr ""
 #. Tag: para
 #, no-c-format
 msgid "Publican is a <firstterm>DocBook</firstterm> publishing system."
-msgstr ""
+msgstr "Publican என்பது ஒரு <firstterm>DocBook</firstterm> வெளியிடும் முறை."
 
 #. Tag: title
 #, no-c-format
 msgid "Pull-quote Conventions"
 msgstr "புல்-கோட் பெயரிடல்கள்"
 
-#. Tag: para
-#, fuzzy, no-c-format
+#. Tag: para, no-c-format
 msgid ""
 "Terminal output and source code listings are set off visually from the "
 "surrounding text."
 msgstr ""
-"இரண்டு, பொதுவாக பல வரி, தரவு வகைகள் சுற்றியுள்ள உரையிலிருந்து பார்வை நீக்கப்படுகிறது."
+"முனைய வெளிப்பாடு மற்றும் மூலக்குறியீடு பட்டியல்கள் சுற்றியுள்ள உரையிலிருந்து பார்வை "
+"நீக்கப்படுகிறது."
 
-#. Tag: para
-#, fuzzy, no-c-format
+#. Tag: para, no-c-format
 msgid ""
 "Output sent to a terminal is set in <computeroutput>mono-spaced roman</"
 "computeroutput> and presented thus:"
@@ -343,15 +337,13 @@ msgstr ""
 "ஒரு முனையத்திற்கு அனுப்பப்பட்ட வெளிப்பாடு <computeroutput>Mono-spaced Roman</"
 "computeroutput> இல் அமைப்பட்ட அங்கிருக்கும்:"
 
-#. Tag: para
-#, fuzzy, no-c-format
+#. Tag: para, no-c-format
 msgid ""
 "Source-code listings are also set in <computeroutput>mono-spaced roman</"
 "computeroutput> but add syntax highlighting as follows:"
 msgstr ""
-"மூலக்குறியீடு பட்டியலிடப்பட்டிருப்பதும் <computeroutput>Mono-spaced Roman</"
-"computeroutput>இல் அமைக்கப்பட்டிருக்கும் ஆனால் பின்வருவது போல "
-"முன்னிலைப்படுத்தப்பட்டிருக்கும்:"
+"மூலக்குறியீடு பட்டியலிடப்பட்டிருப்பதும் <computeroutput>Mono-spaced Roman</computeroutput>"
+"இல் அமைக்கப்பட்டிருக்கும் ஆனால் பின்வருவது போல இலக்கண முன்னிலைப்படுத்தப்பட்டிருக்கும்:"
 
 #. Tag: title
 #, no-c-format
@@ -372,8 +364,7 @@ msgstr ""
 msgid "Note"
 msgstr "குறிப்பு"
 
-#. Tag: para
-#, fuzzy, no-c-format
+#. Tag: para, no-c-format
 msgid ""
 "Notes are tips, shortcuts or alternative approaches to the task at hand. "
 "Ignoring a note should have no negative consequences, but you might miss out "
@@ -388,8 +379,7 @@ msgstr ""
 msgid "Important"
 msgstr "முக்கியமானது"
 
-#. Tag: para
-#, fuzzy, no-c-format
+#. Tag: para, no-c-format
 msgid ""
 "Important boxes detail things that are easily missed: configuration changes "
 "that only apply to the current session, or services that need restarting "
@@ -398,7 +388,7 @@ msgid ""
 msgstr ""
 "முக்கியமான பெட்டிகள் விவர பொருட்கள் எளிதாக விடுப்பட்டது: கட்டமைப்பு மாற்றங்கள் மட்டுமே "
 "நடப்பு அமர்வில் செயல்படுத்தப்படும் அல்லது சேவைகள் மேம்படுத்துவதற்கு முன் மறுதுவக்கப்பட "
-"வேண்டும். முக்கியமான பெட்டிகளை தவிர்த்தல் தரவு இழப்பை ஏற்படுத்தாது ஆனால் மன உளச்சலை "
+"வேண்டும். 'முக்கியமான' பெட்டிகளை தவிர்த்தல் தரவு இழப்பை ஏற்படுத்தாது ஆனால் மன உளச்சலை "
 "ஏற்படுத்தும்."
 
 #. Tag: title
@@ -406,13 +396,12 @@ msgstr ""
 msgid "Warning"
 msgstr "எச்சரிக்கை"
 
-#. Tag: para
-#, fuzzy, no-c-format
+#. Tag: para, no-c-format
 msgid ""
 "Warnings should not be ignored. Ignoring warnings will most likely cause "
 "data loss."
 msgstr ""
-"ஒரு எச்சரிக்கை தவிர்க்கப்பட கூடாது. எச்சரிக்கைகள் தவிர்த்தல் தரவு இழத்தலை ஏற்படுத்தும்."
+"ஒரு எச்சரிக்கை தவிர்க்கப்படக் கூடாது. எச்சரிக்கைகள் தவிர்த்தல் தரவு இழத்தலை ஏற்படுத்தும்."
 
 #, fuzzy
 #~ msgid ""
