--- a/publican/datadir/Common_Content/common/zh-TW/Conventions.po
+++ b/publican/datadir/Common_Content/common/zh-TW/Conventions.po
@@ -1,14 +1,15 @@
-# translation of Conventions.po to
+# translation of Conventions.po to Traditional Chinese
 # Terry Chuang <terry.chuang@redhat.com>, 2007.
-# Terry Chuang <tchuang@redhat.com>, 2008.
+# Terry Chuang <tchuang@redhat.com>, 2008, 2009.
+# translation of Conventions.po to
 msgid ""
 msgstr ""
 "Project-Id-Version: Conventions\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
 "POT-Creation-Date: 2009-12-01T23:44:40\n"
-"PO-Revision-Date: 2008-10-15 11:58+1000\n"
+"PO-Revision-Date: 2009-12-03 13:16+1000\n"
 "Last-Translator: Terry Chuang <tchuang@redhat.com>\n"
-"Language-Team:  <zh@li.org>\n"
+"Language-Team: Traditional Chinese <zh@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -24,7 +25,7 @@ msgstr "文件常規"
 msgid ""
 "This manual uses several conventions to highlight certain words and phrases "
 "and draw attention to specific pieces of information."
-msgstr "本指南使用了幾種常規來強調特定文字與詞組並著重於特定的資訊。"
+msgstr "本指南使用了幾種常規，以強調特定文字與詞組，並著重於特定的資訊。"
 
 #. Tag: para
 #, no-c-format
@@ -35,12 +36,7 @@ msgid ""
 "installed on your system. If not, alternative but equivalent typefaces are "
 "displayed. Note: Red Hat Enterprise Linux 5 and later includes the "
 "Liberation Fonts set by default."
-msgstr ""
-"在 PDF 和書面版本中，本指南使用了來自於 <ulink url=\"https://fedorahosted."
-"org/liberation-fonts/\">Liberation Fonts</ulink> 字體組的 typefaces。倘若 "
-"Liberation Fonts 字體已安裝在您系統上的話，該字體也會被使用於 HTML 版本中。若"
-"是沒有的話，其它相等的 typefaces 便會被顯示。請注意：就預設值來講，Red Hat "
-"Enterprise Linux 5（與更新版本）已包含了 Liberation Fonts 字體。"
+msgstr "在 PDF 和書面版本中，本指南使用了來自於 <ulink url=\"https://fedorahosted.org/liberation-fonts/\">Liberation Fonts</ulink> 字體組的 typefaces。倘若 Liberation Fonts 字體已安裝在您系統上的話，該字體也會被使用於 HTML 版本中。若是沒有的話，其它相等的 typefaces 便會被顯示。請注意：就預設值，Red Hat Enterprise Linux 5（與更新版本）已包含了 Liberation Fonts 字體。"
 
 #. Tag: title
 #, no-c-format
@@ -53,23 +49,19 @@ msgid ""
 "Four typographic conventions are used to call attention to specific words "
 "and phrases. These conventions, and the circumstances they apply to, are as "
 "follows."
-msgstr ""
-"有四種被用來強調特定文字與詞組的排字常規。這些常規以及它們所適用於的情況如"
-"下。"
+msgstr "有四種被用來強調特定文字與詞組的排字常規。這些常規以及它們所適用於的情況如下。"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "<literal>Mono-spaced Bold</literal>"
-msgstr "固定粗體字型（Mono-spaced Bold）"
+msgstr "<literal>固定粗體字型（Mono-spaced Bold）</literal>"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Used to highlight system input, including shell commands, file names and "
 "paths. Also used to highlight keycaps and key combinations. For example:"
-msgstr ""
-"用來強調系統輸入，包括 shell 指令、檔案名稱與路徑。同時也被使用來強調 key "
-"caps 與按鍵組合。例如："
+msgstr "用來強調系統輸入，包括 shell 指令、檔案名稱與路徑。同時也會被使用來強調 key caps 與按鍵組合。例如："
 
 #. Tag: para
 #, no-c-format
@@ -79,26 +71,22 @@ msgid ""
 "my_next_bestselling_novel</command> command at the shell prompt and press "
 "<keycap>Enter</keycap> to execute the command."
 msgstr ""
-"若要查看位於您目前工作目錄中的 <filename>my_next_bestselling_novel</"
-"filename> 檔案的話，請在 shell 提示中輸入 <command>cat "
-"my_next_bestselling_novel</command> 指令並按下 <keycap>Enter</keycap> 來執行"
-"該指令。"
+"若要查看位於您目前工作目錄中的 <filename>my_next_bestselling_novel</filename> 檔案的話，請在 shell 提示中輸入 <command>cat "
+"my_next_bestselling_novel</command> 指令並按下 <keycap>Enter</keycap> 來執行該指令。"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "The above includes a file name, a shell command and a keycap, all presented "
 "in mono-spaced bold and all distinguishable thanks to context."
-msgstr ""
-"以上包含了一個檔案名稱、shell 指令，以及 key cap，並且全部以固定粗體字型來顯"
-"示。"
+msgstr "以上包含了一個檔案名稱、shell 指令，以及 key cap，並且全部以固定粗體字型來顯示。"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Key combinations can be distinguished from keycaps by the hyphen connecting "
 "each part of a key combination. For example:"
-msgstr "按鍵組合可透過 key caps 藉由連字符號連接按鍵組合鍵來辨別。例如："
+msgstr "按鍵組合可透過 keycaps 藉由連字符號連接組合鍵來辨別。例如："
 
 #. Tag: para
 #, no-c-format
@@ -113,31 +101,24 @@ msgid ""
 "<keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F7</keycap></"
 "keycombo> to return to your X-Windows session."
 msgstr ""
-"請按下 <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</"
-"keycap></keycombo> 來切換至第一個虛擬終端機。按下 <keycombo><keycap>Ctrl</"
-"keycap><keycap>Alt</keycap><keycap>F7</keycap></keycombo> 來返回您的 X-"
+"請按下 <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F1</keycap></keycombo> 來切換至第一個虛擬終端機。按下 <keycombo><keycap>Ctrl</keycap><keycap>Alt</keycap><keycap>F7</keycap></keycombo> 來返回您的 X-"
 "Windows session。"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "The first paragraph highlights the particular keycap to press. The second "
 "highlights two key combinations (each a set of three keycaps with each set "
 "pressed simultaneously)."
-msgstr ""
-"第一個句子強調了應輸入的特定 key cap。第二個句子強調了兩組含有三個 key caps "
-"的組合，各個組合都是同時按下的。 "
+msgstr "第一段落強調了應輸入的特定 keycap。第二段落強調了兩組含有三個 keycaps 的組合鍵，各組組合鍵都是同時按下的。"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "If source code is discussed, class names, methods, functions, variable names "
 "and returned values mentioned within a paragraph will be presented as above, "
 "in <literal>mono-spaced bold</literal>. For example:"
-msgstr ""
-"若原始碼被討論到的話，某段落中所提及的 class 名稱、method、functions、"
-"variable 名稱與回傳值都將會如上一般地以 <literal>Mono-spaced Bold</literal> "
-"顯示出。例如："
+msgstr "若討論到原始碼的話，段落中所提及的 class 名稱、method、functions、variable 名稱與回傳值，都將會如上一般地以<literal>固定粗體字型</literal>顯示。例如："
 
 #. Tag: para
 #, no-c-format
@@ -146,28 +127,23 @@ msgid ""
 "systems, <classname>file</classname> for files, and <classname>dir</"
 "classname> for directories. Each class has its own associated set of "
 "permissions."
-msgstr ""
-"和檔案相關的 class，其中包含了<classname>filesystem</classname>（檔案系統）、"
-"<classname>file</classname>（檔案）以及 <classname>dir</classname>（目錄）。"
-"各個 class 都有和它關聯的權限組。"
+msgstr "和檔案相關的 class，其中包含了<classname>filesystem</classname>（檔案系統）、<classname>file</classname>（檔案）以及 <classname>dir</classname>（目錄）。各個 class 都有著與它關聯的權限組。"
 
 #. Tag: para
 #, no-c-format
 msgid "<application>Proportional Bold</application>"
-msgstr ""
+msgstr "<application>相稱粗體字型（Proportional Bold）</application>"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "This denotes words or phrases encountered on a system, including application "
 "names; dialog box text; labeled buttons; check-box and radio button labels; "
 "menu titles and sub-menu titles. For example:"
-msgstr ""
-"這代表在系統上所會看見的文字或詞組，這包含了應用程式名稱；對話方塊文字；被標"
-"記的按鈕；核取方塊與 radio button 標籤；選單標題以及子選單標題。例如："
+msgstr "這代表在系統上所會看見的文字或詞組，這包含了應用程式名稱；對話方塊文字；被標記的按鈕；核取方塊與 radio button 標籤；選單標題以及子選單標題。例如："
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Choose <menuchoice><guimenu>System</guimenu><guisubmenu>Preferences</"
 "guisubmenu><guimenuitem>Mouse</guimenuitem></menuchoice> from the main menu "
@@ -176,14 +152,10 @@ msgid ""
 "guilabel> check box and click <guibutton>Close</guibutton> to switch the "
 "primary mouse button from the left to the right (making the mouse suitable "
 "for use in the left hand)."
-msgstr ""
-"由主選單選取<guimenu>系統 > 偏好設定 > 滑鼠</guimenu> 來啟動<application>滑鼠"
-"偏好設定</application>。請在<guilabel>按鈕</guilabel>分頁中點選<guilabel>左手"
-"操作滑鼠</guilabel>核取方塊並按下<guibutton>關閉</guibutton>來將主要滑鼠按鍵"
-"由左邊切換至右邊（這可讓滑鼠適合使用於左手）。"
+msgstr "由主選單選取<menuchoice><guimenu>系統</guimenu><guisubmenu>偏好設定</guisubmenu><guimenuitem>滑鼠</guimenuitem></menuchoice>來啟動<application>滑鼠偏好設定</application>。請在<guilabel>按鈕</guilabel>分頁中點選<guilabel>左手操作滑鼠</guilabel>核取方塊並按下<guibutton>關閉</guibutton>來將主要滑鼠按鍵由左邊切換至右邊（這可讓滑鼠適合以左手使用）。"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "To insert a special character into a <application>gedit</application> file, "
 "choose <menuchoice><guimenu>Applications</guimenu><guisubmenu>Accessories</"
@@ -199,27 +171,18 @@ msgid ""
 "document and choose <menuchoice><guimenu>Edit</guimenu><guimenuitem>Paste</"
 "guimenuitem></menuchoice> from the <application>gedit</application> menu bar."
 msgstr ""
-"若要將特殊字元插入一個 <application>gedit</application> 檔案中的話，請由主選"
-"單中選擇<guimenu>應用程式 > 附屬應用程式 > 字元對應表</guimenu>。接下來，請由"
-"<application>字元對應表</application>的選單中選擇<guimenu>搜尋 > 尋找&hellip;"
-"</guimenu>，並在<guilabel>搜尋</guilabel>欄位中輸入字元的名稱然後按下"
-"<guibutton>下一個</guibutton>。您所選擇的字元將會顯示於<guilabel>字元表</"
-"guilabel>中。在被選定的字元上點兩下滑鼠左鍵便可將它放置在<guilabel>準備複製的"
-"文字</guilabel>欄位中，接下來請按下旁邊的<guibutton>複製</guibutton>按鈕。現"
-"在，請切換回您的文件並由 <application>gedit</application> 的選單上選擇"
-"<guimenu>編輯 > 貼上</guimenu>。"
+"若要將特殊字元插入一個 <application>gedit</application> 檔案中的話，請由主選單中選擇<menuchoice><guimenu>應用程式</guimenu><guisubmenu>附屬應用程式</guisubmenu><guimenuitem>字元對應表</guimenuitem></menuchoice>。接下來，請由"
+"<application>字元對應表</application>的選單中選擇<menuchoice><guimenu>搜尋</guimenu><guimenuitem>尋找&hellip;</guimenuitem></menuchoice>，並在<guilabel>搜尋</guilabel>欄位中輸入字元的名稱，然後按下<guibutton>下一步</guibutton>。您所選擇的字元將會顯示於<guilabel>字元表</guilabel>中。在被選定的字元上點兩下滑鼠便可將它放置在<guilabel>準備複製的文字</guilabel>欄位中，接下來請按下旁邊的<guibutton>複製</guibutton>按鈕。現在，請切換回您的文件並由 <application>gedit</application> 的選單上選擇<menuchoice><guimenu>編輯</guimenu><guimenuitem>貼上</"
+"guimenuitem></menuchoice>。"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "The above text includes application names; system-wide menu names and items; "
 "application-specific menu names; and buttons and text found within a GUI "
 "interface, all presented in proportional bold and all distinguishable by "
 "context."
-msgstr ""
-"以上文字包含了應用程式名稱；系統全域的選單名稱與項目；應用程式特屬的選單名"
-"稱；以及在 GUI 介面中所看到的按鈕與文字全部都以 Proportional Bold 來顯示，並"
-"且可透過內文來辨別。"
+msgstr "以上文字包含了應用程式名稱；系統全域的選單名稱與項目；應用程式特屬的選單名稱；以及在 GUI 介面中所看到的按鈕與文字全部皆以相稱粗體字型來顯示，並且可透過內文來辨別。"
 
 #. Tag: para
 #, no-c-format
@@ -227,22 +190,16 @@ msgid ""
 "<command><replaceable>Mono-spaced Bold Italic</replaceable></command> or "
 "<application><replaceable>Proportional Bold Italic</replaceable></"
 "application>"
-msgstr ""
-"<command><replaceable>Mono-spaced Bold Italic</replaceable></command>（固定粗"
-"體斜體字型）或是 <application><replaceable>Proportional Bold Italic</"
-"replaceable></application>（相稱粗體斜體字型）"
+msgstr "<command><replaceable>Mono-spaced Bold Italic</replaceable></command>（固定粗體斜體字型）或是 <application><replaceable>Proportional Bold Italic</replaceable></application>（相稱粗體斜體字型）"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Whether mono-spaced bold or proportional bold, the addition of italics "
 "indicates replaceable or variable text. Italics denotes text you do not "
 "input literally or displayed text that changes depending on circumstance. "
 "For example:"
-msgstr ""
-"無論是 Mono-spaced Bold 或是 Proportional Bold，額外的斜體字型便表示可替換或"
-"是變數文字。斜體字型代表您不會照字面地輸入的文字或是會依照情況而改變的文字。"
-"比方說："
+msgstr "無論是 Mono-spaced Bold 或是 Proportional Bold，額外的斜體字型便表示可替換或是變數文字。斜體字型代表您不會照字面輸入的文字，或是會依照情況而改變的文字。比方說："
 
 #. Tag: para
 #, no-c-format
@@ -252,11 +209,7 @@ msgid ""
 "command> at a shell prompt. If the remote machine is <filename>example.com</"
 "filename> and your username on that machine is john, type <command>ssh "
 "john@example.com</command>."
-msgstr ""
-"若要透過使用 ssh 來連至一部遠端機器，請在 shell 提示中輸入 <command>ssh "
-"<replaceable>用戶名稱</replaceable>@<replaceable>網域.名稱</replaceable></"
-"command>。若遠端機器為 <filename>example.com</filename> 而您在該機器上的用戶"
-"名稱為 john 的話，請輸入 <command>ssh john@example.com</command>。"
+msgstr "若要透過使用 ssh 來連至一部遠端機器，請在 shell 提示中輸入 <command>ssh <replaceable>用戶名稱</replaceable>@<replaceable>網域.名稱</replaceable></command>。若遠端機器為 <filename>example.com</filename> 而您在該機器上的用戶名稱為 john 的話，請輸入 <command>ssh john@example.com</command>。"
 
 #. Tag: para
 #, no-c-format
@@ -265,10 +218,7 @@ msgid ""
 "command> command remounts the named file system. For example, to remount the "
 "<filename>/home</filename> file system, the command is <command>mount -o "
 "remount /home</command>."
-msgstr ""
-"<command>mount -o remount <replaceable>檔案系統</replaceable></command> 指令"
-"會將 named 檔案系統重新掛載。比方說，若要重新掛載 <filename>/home</filename> "
-"檔案系統的話，該指令就會是 <command>mount -o remount /home</command>。"
+msgstr "<command>mount -o remount <replaceable>檔案系統</replaceable></command> 指令會將 named 檔案系統重新掛載。比方說，若要重新掛載 <filename>/home</filename> 檔案系統的話，該指令就會是 <command>mount -o remount /home</command>。"
 
 #. Tag: para
 #, no-c-format
@@ -277,10 +227,7 @@ msgid ""
 "<replaceable>package</replaceable></command> command. It will return a "
 "result as follows: <command><replaceable>package-version-release</"
 "replaceable></command>."
-msgstr ""
-"使用 <command>rpm -q <replaceable>套件</replaceable></command> 指令來查看目前"
-"已安裝套件的版本。系統將會回傳此結果：<command><replaceable>套件發行版本</"
-"replaceable></command>。"
+msgstr "使用 <command>rpm -q <replaceable>套件</replaceable></command> 指令來查看目前已安裝套件的版本。系統將會回傳此結果：<command><replaceable>套件發行版本</replaceable></command>。"
 
 #. Tag: para
 #, no-c-format
@@ -288,24 +235,19 @@ msgid ""
 "Note the words in bold italics above &mdash; username, domain.name, file-"
 "system, package, version and release. Each word is a placeholder, either for "
 "text you enter when issuing a command or for text displayed by the system."
-msgstr ""
-"請注意以上以粗體斜體字型所表現出的文字 &mdash; 用戶名稱、網域.名稱、檔案系"
-"統、套件以及發行版本。各個文字都是個佔位符號，這可代表您提供一項指令時所輸入"
-"的文字或是系統所顯示的文字。"
+msgstr "請注意以上以粗體斜體字型所表現出的文字 &mdash; 用戶名稱、網域.名稱、檔案系統、套件以及發行版本。所有文字皆為佔位符號，這可代表您提供一項指令時所輸入的文字或是系統所顯示的文字。"
 
 #. Tag: para
 #, no-c-format
 msgid ""
 "Aside from standard usage for presenting the title of a work, italics "
 "denotes the first use of a new and important term. For example:"
-msgstr ""
-"除了用來顯示一項作業標題這樣的標準用法，斜體字也可代表第一次使用的重要新詞"
-"彙。比方說："
+msgstr "除了用來顯示一項作業標題這樣的標準用法，斜體字也可代表第一次使用的重要新詞彙。比方說："
 
 #. Tag: para
 #, no-c-format
 msgid "Publican is a <firstterm>DocBook</firstterm> publishing system."
-msgstr ""
+msgstr "Publican 是個 <firstterm>DocBook</firstterm> 發佈系統。"
 
 #. Tag: title
 #, no-c-format
@@ -313,29 +255,27 @@ msgid "Pull-quote Conventions"
 msgstr "引述常規"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Terminal output and source code listings are set off visually from the "
 "surrounding text."
-msgstr "有兩種（一般多行的）資料類型會在圍繞它的文字中被強調出。"
+msgstr "終端機輸出與原始碼資料會被設為在附近的文字間不會被看見。"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Output sent to a terminal is set in <computeroutput>mono-spaced roman</"
 "computeroutput> and presented thus:"
-msgstr ""
-"傳送至終端機的輸出設置為 <computeroutput>Mono-spaced Roman</computeroutput> "
-"並且以此方式顯示："
+msgstr "傳送至終端機的輸出設置為 <computeroutput>mono-spaced roman</computeroutput>，並且以此方式顯示："
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Source-code listings are also set in <computeroutput>mono-spaced roman</"
 "computeroutput> but add syntax highlighting as follows:"
 msgstr ""
-"原始碼排列也設置為 <computeroutput>Mono-spaced Roman</computeroutput> 不過會"
-"被以下列方式顯示並強調："
+"原始碼排列亦設置為 <computeroutput>mono-spaced roman</"
+"computeroutput> 不過會如下加上語法強調："
 
 #. Tag: title
 #, no-c-format
@@ -347,132 +287,44 @@ msgstr "註解和警告"
 msgid ""
 "Finally, we use three visual styles to draw attention to information that "
 "might otherwise be overlooked."
-msgstr "最後，我們會使用三種視覺上的形式來強調可能會被漏掉的資訊。"
+msgstr "最後，我們將使用三種視覺上的形式，來強調可能會被遺漏掉的資訊。"
 
 #. Tag: title
 #, no-c-format
 msgid "Note"
-msgstr "Note（註解）"
+msgstr "註解"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Notes are tips, shortcuts or alternative approaches to the task at hand. "
 "Ignoring a note should have no negative consequences, but you might miss out "
 "on a trick that makes your life easier."
-msgstr ""
-"註解代表某些項目的提示、捷徑或是其它完成方式。忽略註解並不會有太大的影響，不"
-"過您可能會忽略掉某些能較輕鬆完成工作的方式。"
+msgstr "註解代表某些作業上的提示、捷徑或是其它完成方式。忽略註解並不會帶來太大的負面影響，不過您可能會忽略掉某些能夠較輕鬆完成工作的方式。"
 
 #. Tag: title
 #, no-c-format
 msgid "Important"
-msgstr "Important（重點）"
+msgstr "重點"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Important boxes detail things that are easily missed: configuration changes "
 "that only apply to the current session, or services that need restarting "
 "before an update will apply. Ignoring a box labeled 'Important' won't cause "
 "data loss but may cause irritation and frustration."
-msgstr ""
-"重點方塊會將容易漏掉的項目詳細列出：只對應於當下 session 的配置變更，或是某些"
-"要套用更新前必須將之重新啟用的服務。倘若您忽略掉重點方塊，雖然不會造成資料遺"
-"失，不過卻會造成工作上的不便和其它影響。"
+msgstr "重點方塊會將容易遺漏掉的項目詳細列出：只對應於當下 session 的配置變更，或是某些要套用更新前必須將之重新啟用的服務。倘若您忽略掉重點方塊，雖然不會造成資料遺失，不過卻會造成工作上的不便與其它影響。"
 
 #. Tag: title
 #, no-c-format
 msgid "Warning"
-msgstr "Warning（警告）"
+msgstr "警告"
 
 #. Tag: para
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "Warnings should not be ignored. Ignoring warnings will most likely cause "
 "data loss."
-msgstr "任何警告都不該被忽略掉。忽略警告的話很有可能會造成資料上的遺失。"
+msgstr "任何警告都不該被忽略掉。忽略警告則很有可能會造成資料上的遺失。"
 
-#, fuzzy
-#~ msgid ""
-#~ "Note the <guimenu>&#62;</guimenu> shorthand used to indicate traversal "
-#~ "through a menu and its sub-menus. This avoids difficult-to-follow "
-#~ "phrasing such as &#39;Select <guimenuitem>Mouse</guimenuitem> from the "
-#~ "<guimenu>Preferences</guimenu> sub-menu in the <guimenu>System</guimenu> "
-#~ "menu of the main menu bar&#39;."
-#~ msgstr ""
-#~ "請注意：<guimenu>></guimenu> 是個用來表示瀏覽至某個選單以及它的子選單的縮"
-#~ "寫。這是為了避免像是「由主選單的<guimenu>系統</guimenu>選單中的<guimenu>偏"
-#~ "好設定</guimenu>子選單中選擇<guimenuitem>滑鼠</guimenuitem>」一般難以遵循"
-#~ "的方式。"
-
-#~ msgid ""
-#~ "When the Apache HTTP Server accepts requests, it dispatches child "
-#~ "processes or threads to handle them. This group of child processes or "
-#~ "threads is known as a <firstterm>server-pool</firstterm>. Under Apache "
-#~ "HTTP Server 2.0, the responsibility for creating and maintaining these "
-#~ "server-pools has been abstracted to a group of modules called "
-#~ "<firstterm>Multi-Processing Modules</firstterm> (<firstterm>MPMs</"
-#~ "firstterm>). Unlike other modules, only one module from the MPM group can "
-#~ "be loaded by the Apache HTTP Server."
-#~ msgstr ""
-#~ "當 Apache HTTP Server 接受了請求，它便會派遣子程序或是線程來處理它們。這組"
-#~ "子程序或線程又被視為 <firstterm>server-pool</firstterm>。在 Apache HTTP "
-#~ "Server 2.0 下，建立與維護這些 server-pool 的責任為一組稱為 <firstterm>多重"
-#~ "處理模組</firstterm>（<firstterm>MPMs</firstterm>）的模組所屬。與其它模組"
-#~ "不同，MPM 群組中只有一個模組可被 Apache HTTP Server 載入。"
-
-#~ msgid "Proportional Bold"
-#~ msgstr "Proportional Bold"
-
-#~ msgid ""
-#~ "books        Desktop   documentation  drafts  mss    photos   stuff  svn\n"
-#~ "books_tests  Desktop1  downloads      images  notes  scripts  svgs"
-#~ msgstr ""
-#~ "books        Desktop   documentation  drafts  mss    photos   stuff  svn\n"
-#~ "books_tests  Desktop1  downloads      images  notes  scripts  svgs"
-
-#~ msgid ""
-#~ "package org.jboss.book.jca.ex1;\n"
-#~ "\n"
-#~ "import javax.naming.InitialContext;\n"
-#~ "\n"
-#~ "public class ExClient\n"
-#~ "{\n"
-#~ "   public static void main(String args[]) \n"
-#~ "       throws Exception\n"
-#~ "   {\n"
-#~ "      InitialContext iniCtx = new InitialContext();\n"
-#~ "      Object         ref    = iniCtx.lookup(\"EchoBean\");\n"
-#~ "      EchoHome       home   = (EchoHome) ref;\n"
-#~ "      Echo           echo   = home.create();\n"
-#~ "\n"
-#~ "      System.out.println(\"Created Echo\");\n"
-#~ "\n"
-#~ "      System.out.println(\"Echo.echo('Hello') = \" + echo.echo(\"Hello"
-#~ "\"));\n"
-#~ "   }\n"
-#~ "   \n"
-#~ "}"
-#~ msgstr ""
-#~ "package org.jboss.book.jca.ex1;\n"
-#~ "\n"
-#~ "import javax.naming.InitialContext;\n"
-#~ "\n"
-#~ "public class ExClient\n"
-#~ "{\n"
-#~ "   public static void main(String args[]) \n"
-#~ "       throws Exception\n"
-#~ "   {\n"
-#~ "      InitialContext iniCtx = new InitialContext();\n"
-#~ "      Object         ref    = iniCtx.lookup(\"EchoBean\");\n"
-#~ "      EchoHome       home   = (EchoHome) ref;\n"
-#~ "      Echo           echo   = home.create();\n"
-#~ "\n"
-#~ "      System.out.println(\"Created Echo\");\n"
-#~ "\n"
-#~ "      System.out.println(\"Echo.echo('Hello') = \" + echo.echo(\"Hello"
-#~ "\"));\n"
-#~ "   }\n"
-#~ "   \n"
-#~ "}"
