--- a/publican/datadir/Common_Content/common/zh-TW/Feedback.po
+++ b/publican/datadir/Common_Content/common/zh-TW/Feedback.po
@@ -1,14 +1,15 @@
-# translation of Feedback.po to
+# translation of Feedback.po to Traditional Chinese
 # Terry Chuang <terry.chuang@redhat.com>, 2007.
-# Terry Chuang <tchuang@redhat.com>, 2008.
+# Terry Chuang <tchuang@redhat.com>, 2008, 2009.
+# translation of Feedback.po to
 msgid ""
 msgstr ""
 "Project-Id-Version: Feedback\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
 "POT-Creation-Date: 2009-07-27T05:14:21\n"
-"PO-Revision-Date: 2008-10-09 12:59+1000\n"
+"PO-Revision-Date: 2009-12-03 13:17+1000\n"
 "Last-Translator: Terry Chuang <tchuang@redhat.com>\n"
-"Language-Team:  <zh@li.org>\n"
+"Language-Team: Traditional Chinese <zh@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -32,4 +33,5 @@ msgstr "本指南的連絡人資訊"
 #. Tag: para
 #, no-c-format
 msgid "You should over ride this by creating your own local Feedback.xml file."
-msgstr "您應該透過建立您自己的本地 Feedback.xml 檔案來進行覆寫。"
+msgstr "您應該透過建立您自己的本機 Feedback.xml 檔案來將其覆寫。"
+
